--- a/ᎨᏯᏔᎯ_ᎬᎾ.mw
+++ b/ᎨᏯᏔᎯ_ᎬᎾ.mw
@@ -60,7 +60,7 @@
 # '''Osceola ᎠᎴ Florida''' (''M. g. osceola'')<br>ᎠᏩᏛᏗ ᎾᏍᎩ ᎤᏩᏒ ᎾᎿ ᎯᎠ [[Florida]] ᎦᏙᎯ.  ᎤᏅᏌ ᏎᏍᏗ ᏂᏛᎴᏅᏓ 80,000 100,000 ᎯᎸᏍᎩ ᏥᏍᏆ. ᎪᎯ ᏥᏍᏆ ᎨᏒᎢ ᏓᎪᎥᎩ ᎾᏍᎩᎾᎢ ᎯᎠ ᏗᎦᏃᏣᎵ Seminole ᎤᎬᏫᏳᎯ Osceola, ᎠᎴ ᏥᏄᏍᏛᎩ ᎢᎬᏱ ᏄᏍᏛ ᎧᏃᎮᎸ ᎭᏫᎾᏗᏢ 1980. ᎾᏍᎩ ᎨᏒᎢ ᎠᏂᎦᏲᎵ ᎠᎴ darker ᎬᎾᏬᏍᎬ ᎯᎠ ᎧᎸᎬᎢᏗᏢ ᎬᎾ.  ᎯᎠ ᎪᏯᏛ ᏧᎷᏄᎯ ᎠᎴ ᎤᏙᎯᏳ ᎤᎳᏏᎩ ᎬᏙᏗ ᎠᏂᎦᏲᎵ ᎢᎦᎢ ᎨᏒ ᎯᎠ ᎤᏁᎬ ᎪᏣᎴᏛ ᎠᎪᎲᎢ ᎾᎿ ᏐᎢ ᎠᏂᎦᏲᎵ-ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ.  ᎤᎾᏤᎵ overall ᎠᏰᎸ ᏧᎷᏄᎯ ᎠᎴ ᏧᏓᎴᏅᏓ ᏗᎧᏃᏗ ᎢᏤ ᎢᏳᏍᏗ-ᎩᎨᏍᏗ ᏗᎧᏃᏗ. 
 # '''Rio Grande''' (''M. g. intermedia'')<br>ᎠᏍᏓᏅᏅ ᏗᎬᏩᎶᏒ [[Texas|ᏅᏓᎩ]] ᎣᎦᎳᎰᎻ, [[Kansas]], ᎠᎴ [[Colorado]], ᏥᏄᏍᏗ ᎠᏔᎴᏒ ᎠᎹᏱ ᏥᏄᏍᏗ ᎢᎦᏛᎭ ᎦᏲᎵ northeastern ᎧᏃᎮᎭ. Rio Grande ᎬᎾ ᎨᏒᎩ ᎾᏍᎩ ᎾᏍᏇ ᎬᏂᎨᏒ ᏄᏩᏁᎸ Hawaii ᎭᏫᎾᏗᏢ ᎯᎠ ᎣᏂᏱᏳ 1950'.  ᎤᏅᏌ ᏎᏍᏗ ᏂᏛᎴᏅᏓ 1,022,700 1,025,700 ᎯᎸᏍᎩ ᏥᏍᏆ. ᎪᎯ ᎠᏂᎦᏲᎵ-ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ ᎨᏒᎢ ᎾᏰᎯᏯ ᎯᎠ ᎠᏰᎵ ᏂᎬᏅ ᎧᏃᎮᎭ. ᎤᏅᏌ ᎨᏒᎩ ᎢᎬᏱ ᏄᏍᏛ ᎧᏃᎮᎸ ᎭᏫᎾᏗᏢ 1879, ᎠᎴ ᎤᎭ ᏂᏓᏙᎳᎬᎾ ᎦᏅᎯᏓ ᏗᏂᏅᏍᎨᏂ. ᎤᎾᏤᎵ ᎠᏰᎸ ᏧᎷᏄᎯ ᎢᏳᏓᎵᎭ ᎤᎭ ᎢᏤ ᎢᏳᏍᏗ-coppery ᎠᏨᏍᏛ ᎠᏂ.  ᎯᎠ ᎠᎦᏚᏕᏍᏗ ᎯᎠ ᎦᏂᏓᏛ ᎠᎴ lowrer ᎦᏐᎯ ᏧᎷᏄᎯ ᎠᎴ buff-ᎤᏙᎯᏳ ᎠᏨᏍᏛ ᏅᏙ ᎤᎴᏴᏔᏅ ᏗᎧᏃᏗ.  ᏗᎦᎶᎪᏗ ᎠᎴ ᎦᏄᎪᏅᏙᏗ ᎡᏍᎦᏂ ᏐᎢ ᎤᏪᏴᎢ, ᎤᏪᏴ ᎠᎴ mesquite ᏃᏥ ᎠᎴ ᏯᏖᏃ ᎦᏅᎦᎸᏗ ᏧᏍᎦ ᎠᏙᎯ ᎢᎾᎨ. ᎾᏍᎩ ᎤᏩᏒ ᎬᎾ ᎾᏍᏋ ᎠᏩᏛᏗ ᎦᎸᎳᏗᏢ 6,000 ᏧᎾᎳᏏᏕᎾ ᎭᏫᎾᏗᏢ ᏂᎦᏛᎢ ᎠᎴ ᎠᎴ ᎠᏓᎦᎵᏍᏙᏗ. 
 # '''Merriam's''' (''M. g. merriami'')<br>ᎠᏍᏓᏅᏅ ᏗᎬᏩᎶᏒ ᎯᎠ [[Rocky Mountains|Rocky ᏙᏓᎸ]] ᎠᎴ ᎯᎠ ᎾᎥᏂᎨᏍᏙᏗ ᎢᎪᏗ [[Wyoming]], [[Montana]] ᎠᎴ [[South Dakota|ᎤᎦᎾᏭ Dakota]]. ᎤᏅᏌ ᏎᏍᏗ ᏂᏛᎴᏅᏓ 334,460 344,460 ᎯᎸᏍᎩ ᏥᏍᏆ. ᎠᎴᏂᏓᏍᏗ ᎭᏫᎾᏗᏢ ponderosa ᏃᏥ ᎠᎴ ᎣᏓᎸ ᎤᏔᏂᏗ ᎦᏙᎯ. ᏓᎪᎥᎩ ᎭᏫᎾᏗᏢ 1900 ᎭᏫᎾᏗᏢ ᎠᏥᎸᏉᏗ C. gantlai Merriam, ᎯᎠ ᎢᎬᏱ ᎤᎬᏫᏳᎯ ᎯᎠ ᎢᏧᎳ ᎠᏴ Biological ᎠᏟᎶᏍᏗ ᎦᏙᎯ. ᎯᎠ ᎦᏂᏓᏛ ᎠᎴ ᎡᎳᏗᎨ ᎦᏐᎯ ᎦᏐᎯ ᎤᎩᏓᎵ ᎤᎭ ᎤᏁᎬ ᎠᎦᏚᏕᏍᏗ. ᎤᏅᏌ ᎤᎭ ᎩᎨᏍᏗ ᎠᎴ ᏬᏗᎨ ᏄᏍᏛ ᏛᏙᏓᎧᏂᏍᎬ. 
-# '''Gould's''' (''M. g. mexicana'')<br>ᎾᏰᎯᏯ ᎠᏰᎵ Mexico ᎠᎴ ᎯᎠ ᎤᎦᎾᏭ ᎢᏗᏢ-ᎤᎪᏗᏗ ᎢᎦᏛᎭ [[Arizona]] ᎠᎴ [[New Mexico|ᎢᏤ Mexico]]. ᎤᏅᏌ ᏎᏍᏗ ᏂᏛᎴᏅᏓ 650 800 ᎯᎸᏍᎩ ᏥᏍᏆ. ᏧᏓᏗᎩᏓ ᎤᏓᏍᏕᎸᎲ ᎠᎴ regulated. ᎢᎬᏱ ᏄᏍᏛ ᎧᏃᎮᎸ ᎭᏫᎾᏗᏢ 1856. ᎤᏅᏌ ᎬᏂᎨᏒ ᏄᏍᏗ ᎭᏫᎾᏗᏢ ᎤᏍᏗ ᏗᏎᏍᏗ ᎠᎴ ᎠᎴ ᎬᏩᎶᏒᏍᏗ ᎭᏫᎾᏗᏢ ᎤᏕᎵᎬᏗᏢ ᎤᏴᏢ ᎢᎦᏛ Mexico. Gould ᎤᏤᎵ ᎠᎴ ᎯᎠ ᎤᏔᏂᎢᏍᏗ ᎯᎠ ᎯᏍᎩ ᎠᏂᎦᏲᎵ-ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ. ᎤᏅᏌ ᎤᎭ ᎦᏅᎯᏓᎨ ᏗᏂᏅᏍᎨᏂ, ᎡᏆᎯᎨᏍᏙᏗ ᏧᎾᎳᏏᏕᎾ, ᎠᎴ ᎦᏅᎯᏓᎨ ᎦᏂᏓᏛ ᏧᎷᏄᎯ. ᎯᎠ ᏄᎬᏫᏳᏒ ᏗᎧᏃᏗ ᎯᎠ ᎠᏰᎸ ᏧᎷᏄᎯ ᎠᎴ ᎠᏥᏱ ᎠᎴ ᎢᏤ ᎢᏳᏍᏗ-ᎠᏕᎸ ᏓᎶᏂᎨ.
+# '''Gould's''' (''M. g. mexicana'')<br>ᎾᏰᎯᏯ ᎠᏰᎵ ᎠᏂᏍᏆᏂᎢ ᎠᎴ ᎯᎠ ᎤᎦᎾᏭ ᎢᏗᏢ-ᎤᎪᏗᏗ ᎢᎦᏛᎭ [[Arizona]] ᎠᎴ [[New Mexico|ᎢᏤ ᎠᏂᏍᏆᏂᎢ]]. ᎤᏅᏌ ᏎᏍᏗ ᏂᏛᎴᏅᏓ 650 800 ᎯᎸᏍᎩ ᏥᏍᏆ. ᏧᏓᏗᎩᏓ ᎤᏓᏍᏕᎸᎲ ᎠᎴ regulated. ᎢᎬᏱ ᏄᏍᏛ ᎧᏃᎮᎸ ᎭᏫᎾᏗᏢ 1856. ᎤᏅᏌ ᎬᏂᎨᏒ ᏄᏍᏗ ᎭᏫᎾᏗᏢ ᎤᏍᏗ ᏗᏎᏍᏗ ᎠᎴ ᎠᎴ ᎬᏩᎶᏒᏍᏗ ᎭᏫᎾᏗᏢ ᎤᏕᎵᎬᏗᏢ ᎤᏴᏢ ᎢᎦᏛ ᎠᏂᏍᏆᏂᎢ. Gould ᎤᏤᎵ ᎠᎴ ᎯᎠ ᎤᏔᏂᎢᏍᏗ ᎯᎠ ᎯᏍᎩ ᎠᏂᎦᏲᎵ-ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ. ᎤᏅᏌ ᎤᎭ ᎦᏅᎯᏓᎨ ᏗᏂᏅᏍᎨᏂ, ᎡᏆᎯᎨᏍᏙᏗ ᏧᎾᎳᏏᏕᎾ, ᎠᎴ ᎦᏅᎯᏓᎨ ᎦᏂᏓᏛ ᏧᎷᏄᎯ. ᎯᎠ ᏄᎬᏫᏳᏒ ᏗᎧᏃᏗ ᎯᎠ ᎠᏰᎸ ᏧᎷᏄᎯ ᎠᎴ ᎠᏥᏱ ᎠᎴ ᎢᏤ ᎢᏳᏍᏗ-ᎠᏕᎸ ᏓᎶᏂᎨ.
 
 == ᎠᎪᏩᏛᏗ ᎾᏍᎩ ᎾᏍᏇ ==
 * [[Domesticated turkey|ᎫᏄᏡᏂ ᎬᎾ]]
