--- a/ᎡᏆ_ᎦᏙᎯ.mw
+++ b/ᎡᏆ_ᎦᏙᎯ.mw
@@ -13,7 +13,165 @@
 <references/>
 
 ==ᏙᏯᏗᏢ ᏗᏕᎬᏔᏛ==
-{{Commons category|Continents}}
+{{Commonscat|Continents}}
 
 [[Category:ᎠᏓᏕᏲᎲᏍᎩ ᎡᎶᎯ]]
 [[Category:ᎡᎶᎯ]]
+
+[[frr:Wrååldiile]]
+
+[[af:Kontinent]]
+[[ang:Worulddǣl]]
+[[ar:قارة]]
+[[an:Continent]]
+[[arc:ܝܒܫܬܐ]]
+[[ast:Continente]]
+[[ay:Kuntininti]]
+[[az:Qitə]]
+[[bm:Jiɲɛ jamanaw]]
+[[bn:মহাদেশ]]
+[[zh-min-nan:Tāi-lio̍k]]
+[[ba:Ҡитға]]
+[[be:Кантынент]]
+[[be-x-old:Кантынэнт]]
+[[bcl:Kontinente]]
+[[bi:Kontinen]]
+[[bar:Kontinent]]
+[[bs:Kontinent]]
+[[br:Kevandir]]
+[[bg:Континент]]
+[[ca:Continent]]
+[[cv:Континент]]
+[[cs:Kontinent]]
+[[cy:Cyfandir]]
+[[da:Verdensdel]]
+[[de:Kontinent]]
+[[et:Maailmajagu]]
+[[el:Ήπειροι]]
+[[es:Continente]]
+[[eo:Kontinento]]
+[[ext:Continenti]]
+[[eu:Kontinente]]
+[[fa:قاره]]
+[[hif:Continent]]
+[[fr:Continent]]
+[[fy:Wrâlddiel]]
+[[ff:Duungal]]
+[[fur:Continent]]
+[[ga:Mór-roinn]]
+[[gl:Continente]]
+[[gan:大洲]]
+[[glk:قاره]]
+[[gu:ખંડ]]
+[[ko:대륙]]
+[[ha:Nahiya]]
+[[haw:Mokuhonua]]
+[[hy:Մայրցամաք]]
+[[hi:महाद्वीप]]
+[[hsb:Kontinent]]
+[[hr:Kontinent]]
+[[io:Kontinento]]
+[[bpy:মহাদেশ]]
+[[id:Benua]]
+[[ia:Continente]]
+[[is:Heimsálfa]]
+[[it:Continente]]
+[[he:יבשת]]
+[[kl:Nunavissuaq]]
+[[kn:ಖಂಡ]]
+[[pam:Continent]]
+[[krc:Континент]]
+[[ka:კონტინენტი]]
+[[ks:भूगोल]]
+[[kk:Құрлық]]
+[[kw:Brastir]]
+[[ky:Материк]]
+[[sw:Bara]]
+[[kv:Мувеж]]
+[[kg:Kontina]]
+[[ht:Kontinan]]
+[[ku:Kîşwer]]
+[[lad:Kontinente]]
+[[lo:ທະວີບ]]
+[[la:Continens]]
+[[lv:Kontinents]]
+[[lb:Kontinent]]
+[[lt:Žemynai]]
+[[jbo:braplu]]
+[[lmo:Cuntinent]]
+[[hu:Kontinens]]
+[[mk:Континент]]
+[[mg:Kontinenta]]
+[[ml:ഭൂഖണ്ഡം]]
+[[mr:खंड]]
+[[ms:Benua]]
+[[mwl:Cuntinente]]
+[[mn:Тив]]
+[[nah:Cemantoc tlālli]]
+[[nl:Werelddeel]]
+[[nds-nl:Maander]]
+[[ne:महादेश]]
+[[new:महादेश]]
+[[ja:大陸]]
+[[pih:Kontenent]]
+[[no:Kontinent]]
+[[nn:Kontinent]]
+[[nrm:Continnent]]
+[[nov:Kontinente]]
+[[oc:Continent]]
+[[mhr:Континент]]
+[[uz:Qitʼa]]
+[[pa:ਮਹਾਂਦੀਪ]]
+[[pnb:براعظم]]
+[[tpi:Kontinen]]
+[[nds:Eerddeel]]
+[[pl:Kontynent]]
+[[pt:Continente]]
+[[kaa:Kontinent]]
+[[crh:Qıta]]
+[[ksh:Kontinänt]]
+[[ro:Continent]]
+[[rmy:Kontinento]]
+[[qu:Allpa pacha]]
+[[ru:Континент]]
+[[sah:Континент]]
+[[se:Eatnanoassi]]
+[[sm:Konitineta]]
+[[sa:महाद्वीपा]]
+[[stq:Waarelddeele]]
+[[sq:Kontinenti]]
+[[scn:Cuntinenti]]
+[[simple:Continent]]
+[[sk:Svetadiel]]
+[[sl:Celina]]
+[[szl:Kůntynynt]]
+[[so:Qaaradaha]]
+[[ckb:کیشوەر]]
+[[sr:Континент]]
+[[sh:Kontinent]]
+[[su:Buana]]
+[[fi:Maanosa]]
+[[sv:Världsdelar och kontinenter]]
+[[tl:Kontinente]]
+[[ta:கண்டம்]]
+[[kab:Amenẓaw]]
+[[tt:Кыйтга]]
+[[th:ทวีป]]
+[[tg:Қитъа]]
+[[tr:Kıta]]
+[[tk:Kontinent]]
+[[uk:Материк]]
+[[ur:براعظم]]
+[[vec:Continente]]
+[[vi:Châu lục]]
+[[fiu-vro:Ilmajago]]
+[[wa:Continint]]
+[[zh-classical:大陸]]
+[[war:Kontinente]]
+[[wo:Gox]]
+[[yi:קאנטינענט]]
+[[yo:Orílẹ̀]]
+[[zh-yue:大洲]]
+[[diq:Qıtey]]
+[[bat-smg:Žemīnā]]
+[[zh:洲]]
