--- a/ᏌᏊᎢᏳᎾᎵᏍᏔᏅᏍᎦᏚᎩ_ᎾᎿ_ᎠᎺᏰᏟ.mw
+++ b/ᏌᏊᎢᏳᎾᎵᏍᏔᏅᏍᎦᏚᎩ_ᎾᎿ_ᎠᎺᏰᏟ.mw
@@ -4,6 +4,7 @@
 [[File:Map of USA showing unlabeled state boundaries.png|thumb]]
 
 {{stub}}
+[[Category:ᎠᎹᏰᎵ| ]]
 
 [[ab:Еиду Америкатә Штатқәа]]
 [[ace:Amirika Carékat]]
