translating place names, transliteration, removing nonfunctioning templates

--- a/ᎠᎹ.mw
+++ b/ᎠᎹ.mw
@@ -159,31 +159,31 @@ Lakesides ᎠᎴ beaches ᎠᎴ ᎤᏂᎸᏉᏗ ᏚᏙᏢᏒᎢ ᎾᏍᎩᎾᎢ 
 
 ᏐᏁᎳᏍᎪᎯ-ᎯᏍᎩ ᏌᏊ ᎢᎦᏛ ᎤᏃᏍᏛ ᎯᎠ ᎠᏫᏒᏗ ᎧᏃᎮᎭ' ᎢᏤᎢ ᎠᎹ ᎨᏒᎢ ᎭᏫᎾᏗᏢ ᎦᏙᎯ. ᏌᏊ ᏗᎦᎾᏗᏫᏍᏗ ᏗᏓᎴᎲᏍᎬ ᎨᏒᎢ ᎤᎪᏗᏗ ᎭᏫᎾᏗᏢ ᎦᏙᎯ ᎥᏓᎵ, ᎯᎠ 800-ᏑᏟᎶᏛ (1,300 km) [[Ogallala Aquifer|Ogallala aquifer]] ᎦᏙ ᎤᏍᏗ stretches ᏂᏛᎴᏅᏓ [[Texas|ᏅᏓᎩ]] [[South Dakota|ᎤᎦᎾᏭ Dakota]] ᎠᎴ ᎠᎹᏱ ᏌᏊ ᎯᏍᎩᏁ Ꭴ.. irrigated ᎦᏙᎯ. ᎪᏢᎯ Ꭲgotlvhi ignelvhi ᎦᏬᎯᎸᏙᏗ ᎢᏧᏆᏗᏅᏓ ᏧᏕᏘᏴᏓ, ᎯᎠ Ogallala aquifer ᎤᎭ ᎣᏂ ᏧᏩᎫᏛ ᏭᏪᏙᎢ ᎠᏰᎳᏍᏗ ᎤᏣᏘᎾ ᏂᏛᎴᏅᏓ Ꮝ ᎠᎴᏅᏗᏍᎬ ᏂᎬᏩᏍᏛ ᏙᏧᏓᎴᏅ. ᎾᏍᎩ ᎨᏒᎢ ᎠᎴᏂᏙᎲ depleted ᎾᎾᎢ ᏓᎬᏩᎶᏛ 12 ᎯᏍᎩ cubic metres ᏑᏕᏘᏴᏓ, ᎢᎦᎢ ᎨᏒ ᏂᎦᏛ ᎦᏟᏌᏅ ᎠᏚᎳᏗ ᎢᏳ ᎢᎪᎯ ᎦᏟᏌᏅ ᎪᏪᎵ ᎢᏗᎦᏗ ᎯᎠ ᎾᏕᏘᏴᎯᏒ ᎠᏕᏴᎠᏍᎬ 18 [[Colorado River|Colorado ᎤᏪᏴ]]. ᎢᎦᏛ ᎠᎦᏎᏍᏗ ᎯᏁᎩ ᎾᏍᎩ ᏫᎵ ᎤᎧᏲᏗ ᎦᎸᎳᏗᏢ ᎭᏫᎾᏗᏢ ᏥᏄᏍᏗ ᎤᏍᏗ ᏥᏄᏍᏗ 25 ᏧᏕᏘᏴᏓ. ᎤᎪᏗᏗ ᏗᏂᎶᎩᏍᎩ ᎭᏫᎾᏗᏢ ᎯᎠ [[High Plains (United States)|ᏅᏓᎩ ᎦᎸᎳᏗ ᏂᎬᏅ]], ᎦᏙ ᎤᏍᏗ rely ᎾᏍᎩᎾ ᎨᏒ ᎾᎿ ᎯᎠ ᎭᏫᎾᏗᏢ ᎦᏙᎯ ᏗᏓᎴᎲᏍᎬ, ᎠᎴ ᎾᏊ ᎠᎦᏔᎲᏒ ᎤᏣᏘᎾ ᏂᏛᎴᏅᏓ [[irrigated agriculture|irrigated ᏗᎦᎶᎪᏗ]] ᏥᏄᏍᏗ ᎤᏅᏌ ᏗᏙᎳᎩ gayatohvsdi ᎯᎠ ᎠᏲᎠᏍᏗᏍᎩ overpumping <ref> {{cite news | title=Ogallala aquifer - Water hot spots | publisher=BBC News | date=? | url=http://news.bbc.co.uk/1/shared/spl/hi/world/03/world_forum/water/html/ogallala_aquifer.stm}} </ref>.
 
-=== ᎠᎹ ᎭᏫᎾᏗᏢ Mexico ===
-ᎭᏫᎾᏗᏢ [[Mexico City|Mexico ᎦᏚᎲᎢ]], ᎠᎦᏎᏍᏔᏅ 40% ᎯᎠ ᎦᏚᎲᎢ ᎤᏤᎵ ᎠᎹ ᎨᏒᎢ ᎤᎴᎾᎯᏛ ᏗᎬᏩᎶᏒ ᎢᏳᏩᏂᏌᏛ ᏗᏂᏤᎷᎯᏍᎩ ᎤᏁᏍᎨᎲ ᎾᎾᎢ ᎯᎠ ᎠᎦᏔᎲᏍᏗ ᎯᎠ sqohitsuqui tsudetiyvdi <ref> {{cite news | title=Mexico City - Water hot spots | publisher=BBC News | date=? | url=http://news.bbc.co.uk/1/shared/spl/hi/world/03/world_forum/water/html/mexico_city.stm}} </ref>.
+=== ᎠᎹ ᎭᏫᎾᏗᏢ ᎠᏂᏍᏆᏂᎢ ===
+ᎭᏫᎾᏗᏢ [[Mexico City|ᎠᏂᏍᏆᏂᎢ ᎦᏚᎲᎢ]], ᎠᎦᏎᏍᏔᏅ 40% ᎯᎠ ᎦᏚᎲᎢ ᎤᏤᎵ ᎠᎹ ᎨᏒᎢ ᎤᎴᎾᎯᏛ ᏗᎬᏩᎶᏒ ᎢᏳᏩᏂᏌᏛ ᏗᏂᏤᎷᎯᏍᎩ ᎤᏁᏍᎨᎲ ᎾᎾᎢ ᎯᎠ ᎠᎦᏔᎲᏍᏗ ᎯᎠ ᏍᏉᎯᏧᏈ ᏧᏕᏘᏴᏗ<ref> {{cite news | title="ᎠᏂᏍᏆᏂᎢ ᎦᏚᎲᎢ: ᎠᎹ hot spots: | publisher=BBC News | date=unknown | url=http://news.bbc.co.uk/1/shared/spl/hi/world/03/world_forum/water/html/mexico_city.stm}} </ref>.
 
 === ᎠᎹ ᎭᏫᎾᏗᏢ ᎯᎠ ᎠᏰᎵ ᎧᎸᎬ ===
 ᎯᎠ [[Middle East|ᎠᏰᎵ ᎧᎸᎬ]] ᎤᏔᏂᏗ ᎦᏙᎯ ᎤᎭ ᎾᏍᎩ ᎤᏩᏒ 1% ᎯᎠ ᎡᎶᎯ ᎤᏤᎵ ᏰᎵ ᎠᏩᏛᏗ ᎢᏤᎢ ᎠᎹ, ᎦᏙ ᎤᏍᏗ ᎨᏒᎢ shared ᎠᏰᎵ 5% ᎯᎠ ᎡᎶᎯ ᎤᏤᎵ ᎾᏂᎥ ᏴᏫ. ᎯᎠ ᎢᏴ, ᎭᏫᎾᏗᏢ ᎪᎯ ᎤᏔᏂᏗ ᎦᏙᎯ, ᎠᎹ ᎨᏒᎢ ᎤᎵᏍᎨᏛ ᎠᏟᎶᏍᏙᏗ resource. ᎾᎥᎢ 2025, ᎾᏍᎩ ᎨᏒᎢ predicted Ꮎ ᎯᎠ ᎠᏰᎵ ᏚᎾᏙᏢᏩᏗᏒ ᎯᎠ Arabian ᎦᏙᎯ ᏫᎵ ᎾᏍᏋ ᎬᏗᏍᎬᎢ ᎤᏟ ᎢᎦᎢ ᎬᎾᏬᏍᎬ ᏔᎵ ᎢᏳᏩᎫᏘ ᎯᎠ ᎢᎦᎢ ᎨᏒ ᎠᎹ ᎢᎬᏩᏍᏗᎭ ᏰᎵ ᎠᏩᏛᏗ ᎠᏂ <ref> {{cite news | title=Water shortages 'foster terrorism' | publisher=BBC News | date=March 18, 2003 | url=http://news.bbc.co.uk/1/hi/sci/tech/2859937.stm}} </ref>. ᎧᎵ ᏗᏙᎳᎩ ᎬᏂᎨᏒ ᎢᎬᏁᏗ ᎾᎥᎢ ᎯᎠ [[Arab League|ᏗᎦᏣᏄᎶ ᎤᎾᏣ ᎤᎾᏙᏢᎯ]], ᏔᎵ-ᏧᎬᏩᎶᏗ ᏂᎬᎿᏅ ᏗᎦᏣᏄᎶ ᎤᎾᏣ ᎠᏰᎵ ᏚᎾᏙᏢᏩᏗᏒ ᎤᎭ ᎦᏲᎵᎨ ᎬᎾᏬᏍᎬ 1,000 cubic ᎠᏎᎯᎯ ᎠᎹ ᎾᏍᎩ ᎢᎬᏂᏏᏍᎩ ᎠᏏᏴᏫ ᎾᏍᎩ ᎢᎬᏂᏏᏍᎩ ᏑᏕᏘᏴᏓ, ᎦᏙ ᎤᏍᏗ ᎨᏒᎢ ᎠᎦᏎᏍᏔᏅ ᎯᎠ ᎠᏎᎸᎯ <ref> "ᎠᏂᏯᏩᏍᎩ ᏄᎬᏫᏳᏒ ᎢᎦᏛ ᎧᏂᎬᎩ ᎠᎹ ᏧᎬᏩᎶᏗ ᎦᎷᎩ ᎠᏓᏅᏖᎵᏙᎲ ᎬᏙᏗ ᏩᏎᎸᎯ ᎯᎠ ᏗᎦᏣᏄᎶ ᎤᎾᏣ ᎠᏰᎵ ᏚᎾᏙᏢᏩᏗᏒ", ᏗᎦᏣᏄᎶ ᎤᎾᏣ ᎤᎾᏙᏢᎯ ᎬᏂᎨᏒ ᎢᎬᏁᏗ ᎦᎴᏴᏔᏅᎯ ᎾᏍᎩᎾᎢ ᎯᎠ ᎠᏰᎵ ᏚᎾᏙᏢᏒ ᏓᎾᎵᏃᎮᏍᎬᎢ ᎾᎿ ᎠᎹ gestion ᎠᎴ ᎠᎹ atogiyadv ᎭᏫᎾᏗᏢ ᎠᏤᏫᏍᎬ ᎡᎶᎯ ᎠᏍᏓᏅᏅ, ᎭᏫᎾᏗᏢ Amman, Jordan, ᎥᏍᎩᏱ 1-3, 1999. ᎧᏁᎢᏍᏔᏅ ᎾᎥᎢ ᎠᎦᎸᏥ ᎪᏪᎵᏍᎩ [[Christian Chesnot|ᏧᎾᏁᎸᏗ Chesnot]] ᎭᏫᎾᏗᏢ {{cite news | title=Drought in the Middle East | publisher=Monde diplomatique | date=February 2000 | url=http://mondediplo.com/2000/02/08chesnot}} - ᎠᎦᎸᏥ ᎠᎴᏅᏗᏍᎬ ᏅᎬᎪᏔᏅᎯ ᏄᏚᏓᎸᎾ ᏰᎵ ᎠᏩᏛᏗ [http://www.monde-diplomatique.fr/2000/02/CHESNOT/13213.html here]. ᎤᏠᏱ ᎢᎬᏁᏗ ᎬᏙᏗ ᎯᎠ 1,600 cubic ᎠᏎᎯᎯ ᎠᎹ ᎬᏔᏅᎯ ᎾᏍᎩ ᎢᎬᏂᏏᏍᎩ ᎠᏏᏴᏫ ᎠᎴ ᎾᏍᎩ ᎢᎬᏂᏏᏍᎩ ᏑᏕᏘᏴᏓ ᎭᏫᎾᏗᏢ Canada, ᎾᏍᎩᎾᎢ ᏱᏓᏟᎶᏍᏔᏅ </ref>.
 
-[[Jordan]], ᎾᏍᎩᎾᎢ ᏱᏓᏟᎶᏍᏔᏅ, ᎤᎭ ᎤᏍᏗ ᎠᎹ ᎠᎴ [[dam|ᎠᏓᎦᏴᎵᎨ]]ᎭᏫᎾᏗᏢ ᏐᎢ ᎠᏰᎵ ᏚᎾᏙᏢᏩᏗᏒ ᎤᎭ ᎠᎦᏲᎳᏛᎯ Ꮝ ᏰᎵ ᎠᏩᏛᏗ ᎠᎹ ᎦᏬᎯᎸᏙᏗ ᎯᎠ ᏧᏕᏘᏴᏓ. ᎯᎠ [[1994]] [[Israel-Jordan Treaty of Peace|Israel-Jordan ᎧᏃᎮᏛ ᏓᏠᎯᏍᏛ  nvwato hiyadv]] ᎤᏃᎮᎸᎩ Ꮎ Israel ᏯᏓᎢᏗᏏ ᎠᏓᏁᏗ 50 ᎢᏳᏆᏗᏅᏓ cubic ᎠᏎᎯᎯ ᎠᎹ ᎾᏍᎩ ᎢᎬᏂᏏᏍᎩ ᏑᏕᏘᏴᏓ Jordan, ᎦᏙ ᎤᏍᏗ ᎾᏍᎩ ᎤᏓᏱᎸ ᎿᏛᎦ ᎭᏫᎾᏗᏢ 1999 ᎤᏓᎷᎸ backtracking. ᎯᎠ 1994 ᎧᏃᎮᏛ ᏓᏠᎯᏍᏛ ᎤᏃᎮᎸᎩ Ꮎ ᎯᎠ ᏔᎵ ᎠᏰᎵ ᏚᎾᏙᏢᏩᏗᏒ ᏯᏓᎢᏗᏏ ᎠᎵᎪᏗ ᎭᏫᎾᏗᏢ ᎠᏓᏅᏍᏗ ᎠᎵᏍᎪᎸᏙᏗ Jordan ᎤᏟ ᎢᏲᏍᏛ ᎦᎷᎯᏍᏗ ᎠᎹ ᏧᎬᏩᎶᏗ ᎦᎷᎩ, ᏂᎬᎢ ᏗᎬᏩᎶᏒ ᎠᏓᎦᏴᎵᎨ ᎾᎿ ᎯᎠ [[Yarmouk River|Yarmouk ᎤᏪᏴ]] <ref> ᎠᎪᏩᏛᏗ 1994 [[Israel-Jordan Treaty of Peace|Israel-Jordan ᎧᏃᎮᏛ ᏓᏠᎯᏍᏛ  nvwato hiyadv]], ᎦᏟᏐᏗᎩ ᎧᏬᎳᏕᏍᎬ, ᎤᏓᏡᎬ ᎧᏬᎳᏕᏍᎬ, ᎢᎬᏱ ᎢᎦᏛ </ref>. Confronted ᎾᎥᎢ ᎪᎯ ᎦᎷᎶᎩ ᎠᎹ, Jordan ᎨᏒᎢ ᎠᏛᏅᎢᏍᏗᏍᎩ ᎢᏤ techniques ᎬᏙᏗ ᎬᏙᏗ-ᏄᏍᏛ ᎢᏯᏛᏁᏗ ᎠᎹ ᏧᎬᏩᎶᏗ ᎦᎷᎩ, ᏯᏛᎿ ᏥᏄᏍᏗ ᏔᎵᏁ-ᎤᏬᏰᏂ ᎬᏙᏗ ᎠᎹ ᎠᎹ ᎠᎴ desalinization techniques, ᎦᏙ ᎤᏍᏗ ᎠᎴ ᎤᏙᎯᏳ ᎤᎪᏗ ᏗᎵᎬᏩᎸᏍᎩ ᎠᎴ ᎠᎴ ᎾᏍᎩ ᏂᎨᏒᎾ ᎩᎳ ᎬᏔᏅᎯ. desalinization ᎠᏎᎸᎯ ᏫᎵ ᏄᎵᏍᏛ ᎾᏍᏋ ᎤᏂᎩᏍᏔᏅ ᎭᏫᎾᏗᏢ [[Hisban]], ᎤᎦᎾᏭ [[Amman]]. ᎯᎠ [[Disi]] [[groundwater]] ᎠᏎᎸᎯ, ᎭᏫᎾᏗᏢ ᎯᎠ ᎤᎦᎾᏭ Jordan, ᏫᎵ ᏓᎬᏩᎶᏛ ᎾᎾᎢ ᎠᏂᎦᏲᎵ $250 ᎢᏳᏆᏗᏅᏓ ᎠᏲᎯᏍᏗ atsinuqowisgv ᎠᎹ. ᎨᎳᏛᏍᏗ ᎬᏙᏗ ᎯᎠ [[Unity Dam|ᏂᎦᏛ ᎠᏓᎦᏴᎵᎨ]] ᎾᎿ ᎯᎠ Yarmouk ᎤᏪᏴ, ᎾᏍᎩ ᎨᏒᎢ ᏌᏊ Jordan ᎤᏤᎵ ᎤᏔᏂᎢᏍᏗ ᎠᏟᎶᏍᏙᏗ ᎠᏎᎸᎯ. ᎤᏕᏅ ᎭᏫᎾᏗᏢ 1987, ᎯᎠ "ᏂᎦᏛ ᎠᏓᎦᏴᎵᎨ" ᏯᏓᎢᏗᏏ ᎠᏓᏠᏯᏍᏙᏗ ᎢᏧᎳ Jordan ᎠᎴ [[Syria]]. ᎪᎯ "ᏂᎦᏛ ᎠᏓᎦᏴᎵᎨ" ᏙᎢ ᎤᎭ ᎾᏍᎩ ᏂᎨᏒᎾ ᏭᏪᏙᎢ implemented ᎢᎬᏂᏏᏍᎩ [[Israel]] ᎤᏤᎵ ᏗᎦᏘᎸᏍᏗ, Jordan ᎠᎴ Syrian conflictual ᏚᎾᏓᏚᏓᎸ ᎠᎴ ᏗᎦᏘᎸᏍᏗ ᎡᎶᎯ investors. ᏱᏂᎬᏛᎾ, Jordan ᎤᏤᎵ ᏓᏓᏁᏤᎸ ᎬᏙᏗ Syria ᎠᏍᏓᏩᏗᏒ ᎯᎠ ᎠᏲᎱᎯᏍᏗ [[Hussein of Jordan|ᎤᎬᏫᏳᎯ Hussein]] ᎾᏓᏛᏁ ᎯᎠ ᎠᎲᏏᏓᏍᏗ ᏌᏊ ᎯᎠ ᎠᏎᎸᎯ ᎤᏤᎵ ᏭᏔᏅ ᎠᏲᎠᏍᏗᏍᎩ. <ref name="drought_middle_east"> ᎠᎪᏩᏛᏗ [[Christian Chesnot|ᏧᎾᏁᎸᏗ Chesnot]] ᎭᏫᎾᏗᏢ {{cite news | title=Drought in the Middle East | publisher=[[Le Monde diplomatique|Le ᎤᎵᎶᎯ ᎢᎬᏁᎯ diplomatique]] | date=February 2000 | url=http://mondediplo.com/2000/02/08chesnot}} - ᎠᎦᎸᏥ ᎠᎴᏅᏗᏍᎬ ᏅᎬᎪᏔᏅᎯ ᏄᏚᏓᎸᎾ ᏰᎵ ᎠᏩᏛᏗ [http://www.monde-diplomatique.fr/2000/02/CHESNOT/13213.html here]. </ref>.
+[[Jordan]], ᎾᏍᎩᎾᎢ ᏱᏓᏟᎶᏍᏔᏅ, ᎤᎭ ᎤᏍᏗ ᎠᎹ ᎠᎴ [[dam|ᎠᏓᎦᏴᎵᎨ]]ᎭᏫᎾᏗᏢ ᏐᎢ ᎠᏰᎵ ᏚᎾᏙᏢᏩᏗᏒ ᎤᎭ ᎠᎦᏲᎳᏛᎯ Ꮝ ᏰᎵ ᎠᏩᏛᏗ ᎠᎹ ᎦᏬᎯᎸᏙᏗ ᎯᎠ ᏧᏕᏘᏴᏓ. ᎯᎠ [[1994]] [[Israel-Jordan Treaty of Peace|Israel-Jordan ᎧᏃᎮᏛ ᏓᏠᎯᏍᏛ ᏅᎳᏙ ᎯᏯᏛ]] ᎤᏃᎮᎸᎩ Ꮎ Israel ᏯᏓᎢᏗᏏ ᎠᏓᏁᏗ 50 ᎢᏳᏆᏗᏅᏓ cubic ᎠᏎᎯᎯ ᎠᎹ ᎾᏍᎩ ᎢᎬᏂᏏᏍᎩ ᏑᏕᏘᏴᏓ Jordan, ᎦᏙ ᎤᏍᏗ ᎾᏍᎩ ᎤᏓᏱᎸ ᎿᏛᎦ ᎭᏫᎾᏗᏢ 1999 ᎤᏓᎷᎸ backtracking. ᎯᎠ 1994 ᎧᏃᎮᏛ ᏓᏠᎯᏍᏛ ᎤᏃᎮᎸᎩ Ꮎ ᎯᎠ ᏔᎵ ᎠᏰᎵ ᏚᎾᏙᏢᏩᏗᏒ ᏯᏓᎢᏗᏏ ᎠᎵᎪᏗ ᎭᏫᎾᏗᏢ ᎠᏓᏅᏍᏗ ᎠᎵᏍᎪᎸᏙᏗ Jordan ᎤᏟ ᎢᏲᏍᏛ ᎦᎷᎯᏍᏗ ᎠᎹ ᏧᎬᏩᎶᏗ ᎦᎷᎩ, ᏂᎬᎢ ᏗᎬᏩᎶᏒ ᎠᏓᎦᏴᎵᎨ ᎾᎿ ᎯᎠ [[Yarmouk River|Yarmouk ᎤᏪᏴ]] <ref> ᎠᎪᏩᏛᏗ 1994 [[Israel-Jordan Treaty of Peace|Israel-Jordan ᎧᏃᎮᏛ ᏓᏠᎯᏍᏛ  nvwato hiyadv]], ᎦᏟᏐᏗᎩ ᎧᏬᎳᏕᏍᎬ, ᎤᏓᏡᎬ ᎧᏬᎳᏕᏍᎬ, ᎢᎬᏱ ᎢᎦᏛ </ref>. Confronted ᎾᎥᎢ ᎪᎯ ᎦᎷᎶᎩ ᎠᎹ, Jordan ᎨᏒᎢ ᎠᏛᏅᎢᏍᏗᏍᎩ ᎢᏤ techniques ᎬᏙᏗ ᎬᏙᏗ-ᏄᏍᏛ ᎢᏯᏛᏁᏗ ᎠᎹ ᏧᎬᏩᎶᏗ ᎦᎷᎩ, ᏯᏛᎿ ᏥᏄᏍᏗ ᏔᎵᏁ-ᎤᏬᏰᏂ ᎬᏙᏗ ᎠᎹ ᎠᎹ ᎠᎴ desalinization techniques, ᎦᏙ ᎤᏍᏗ ᎠᎴ ᎤᏙᎯᏳ ᎤᎪᏗ ᏗᎵᎬᏩᎸᏍᎩ ᎠᎴ ᎠᎴ ᎾᏍᎩ ᏂᎨᏒᎾ ᎩᎳ ᎬᏔᏅᎯ. desalinization ᎠᏎᎸᎯ ᏫᎵ ᏄᎵᏍᏛ ᎾᏍᏋ ᎤᏂᎩᏍᏔᏅ ᎭᏫᎾᏗᏢ [[Hisban]], ᎤᎦᎾᏭ [[Amman]]. ᎯᎠ [[Disi]] [[groundwater]] ᎠᏎᎸᎯ, ᎭᏫᎾᏗᏢ ᎯᎠ ᎤᎦᎾᏭ Jordan, ᏫᎵ ᏓᎬᏩᎶᏛ ᎾᎾᎢ ᎠᏂᎦᏲᎵ $250 ᎢᏳᏆᏗᏅᏓ ᎠᏲᎯᏍᏗ atsinuqowisgv ᎠᎹ. ᎨᎳᏛᏍᏗ ᎬᏙᏗ ᎯᎠ [[Unity Dam|ᏂᎦᏛ ᎠᏓᎦᏴᎵᎨ]] ᎾᎿ ᎯᎠ Yarmouk ᎤᏪᏴ, ᎾᏍᎩ ᎨᏒᎢ ᏌᏊ Jordan ᎤᏤᎵ ᎤᏔᏂᎢᏍᏗ ᎠᏟᎶᏍᏙᏗ ᎠᏎᎸᎯ. ᎤᏕᏅ ᎭᏫᎾᏗᏢ 1987, ᎯᎠ "ᏂᎦᏛ ᎠᏓᎦᏴᎵᎨ" ᏯᏓᎢᏗᏏ ᎠᏓᏠᏯᏍᏙᏗ ᎢᏧᎳ Jordan ᎠᎴ [[Syria]]. ᎪᎯ "ᏂᎦᏛ ᎠᏓᎦᏴᎵᎨ" ᏙᎢ ᎤᎭ ᎾᏍᎩ ᏂᎨᏒᎾ ᏭᏪᏙᎢ implemented ᎢᎬᏂᏏᏍᎩ [[Israel]] ᎤᏤᎵ ᏗᎦᏘᎸᏍᏗ, Jordan ᎠᎴ Syrian conflictual ᏚᎾᏓᏚᏓᎸ ᎠᎴ ᏗᎦᏘᎸᏍᏗ ᎡᎶᎯ investors. ᏱᏂᎬᏛᎾ, Jordan ᎤᏤᎵ ᏓᏓᏁᏤᎸ ᎬᏙᏗ Syria ᎠᏍᏓᏩᏗᏒ ᎯᎠ ᎠᏲᎱᎯᏍᏗ [[Hussein of Jordan|ᎤᎬᏫᏳᎯ Hussein]] ᎾᏓᏛᏁ ᎯᎠ ᎠᎲᏏᏓᏍᏗ ᏌᏊ ᎯᎠ ᎠᏎᎸᎯ ᎤᏤᎵ ᏭᏔᏅ ᎠᏲᎠᏍᏗᏍᎩ. <ref name="drought_middle_east"> ᎠᎪᏩᏛᏗ [[Christian Chesnot|ᏧᎾᏁᎸᏗ Chesnot]] ᎭᏫᎾᏗᏢ {{cite news | title=Drought in the Middle East | publisher=[[Le Monde diplomatique|Le ᎤᎵᎶᎯ ᎢᎬᏁᎯ diplomatique]] | date=February 2000 | url=http://mondediplo.com/2000/02/08chesnot}} - ᎠᎦᎸᏥ ᎠᎴᏅᏗᏍᎬ ᏅᎬᎪᏔᏅᎯ ᏄᏚᏓᎸᎾ ᏰᎵ ᎠᏩᏛᏗ [http://www.monde-diplomatique.fr/2000/02/CHESNOT/13213.html here]. </ref>.
 
 [[File:Hayarden.jpg|thumb|left|200px|ᎯᎠ [[Jordan River|Jordan ᎤᏪᏴ]]]]
 ᎢᏧᎳ [[Israel]] ᎠᎴ Jordan rely ᎾᎿ ᎯᎠ [[Jordan River|Jordan ᎤᏪᏴ]], ᎠᎴ Israel ᎠᎨᏔᏗᏍᏗ ᎾᏍᎩ, ᏥᏄᏍᏗ ᎠᏔᎴᏒ ᎠᎹᏱ ᏥᏄᏍᏗ 9/10 ᎯᎠ ᎠᎹ ᏧᎬᏩᎶᏗ ᎦᎷᎩ ᎭᏫᎾᏗᏢ ᎯᎠ ᎤᏔᏂᏗ ᎦᏙᎯ. ᎠᎹ ᎨᏒᎢ ᎾᏍᎩ ᎾᏍᏇ ᎤᎵᏍᎨᏛ ᎢᏳᏍᏗ ᎧᏃᎮᏗ ᎭᏫᎾᏗᏢ ᎯᎠ [[Israeli-Palestinian conflict|ᏂᏓᏙᎳᎬᎾ ᎬᏙᏗ ᎯᎠ Palestinians]] - ᎤᏙᎯᏳᎢ, ᎧᎵ ᏗᏙᎳᎩ ᎠᎴᏅᏔᏅ Israeli ᎠᎴᏂᏍᎬ ᎠᎵᏣᏙᎲᏍᎩ [[Ariel Sharon|ᏗᎦᏣᏄᎶ ᎤᎾᏣ Sharon]] ᎧᏁᎢᏍᏔᏅ ᎾᎥᎢ Abel Darwish ᎭᏫᎾᏗᏢ ᎯᎠ BBC, ᎾᏍᎩ ᏥᏄᏍᏛᎩ ᏌᏊ ᎯᎠ ᏂᏕᎬᏂᏏᏍᎬ ᎯᎠ [[Six-Day War|1967 ᏑᏓᎵ-ᎢᎦ ᏓᏄᏩ]]. ᎭᏫᎾᏗᏢ practise ᎯᎠ ᎦᎷᎯᏍᏗ ᎠᎹ ᎤᎭ ᏭᏪᏙᎢ [[casus belli]] ᎾᏍᎩᎾᎢ Israel. ᎯᎠ [[Tsahal|Israeli ᎠᏂᏯᏫᏍᎩ]] ᎦᏅᏍᏙᎯᏍᏗ [[Palestine|Palestinians]] ᏂᏛᎴᏅᏓ ᎦᏌᏙᏯᏍᎩ ᎠᎹ, ᎠᎴ [[Israeli settlements|ᎦᏁᎳ]] ᎬᏙᏗ ᎤᏣᏘ ᎤᏟ ᎢᎦᎢ ᎠᏓᏌᎳᏙᏗ ᎦᏌᏙᏯᏍᎩ ᎬᏔᏂᏓᏍᏗ. Palestinians ᎠᎵᏍᎦᏃᏍᏗ ᎦᎷᎶᎩ ᎦᎷᎯᏍᏗ ᎠᎹ ᎭᏫᎾᏗᏢ ᎯᎠ ᎤᏔᏂᏗ ᎦᏙᎯ <ref> {{cite news | title=Analysis: Middle East water wars, by Abel Darwish | publisher=BBC News | date=May 30, 2003 | url=http://news.bbc.co.uk/2/hi/middle_east/2949768.stm}} </ref>. Israelis ᎭᏫᎾᏗᏢ ᎯᎠ [[West Bank|ᏭᏕᎵᎬ ᎠᏕᎸ ᏗᏗ]] ᎬᏙᏗ ᏅᎩ itsuwakodi ᏥᏄᏍᏗ ᎤᏣᏘ ᎠᎹ ᏥᏄᏍᏗ ᎤᎾᏤᎵ Palestinian neighbours <ref> {{cite news | title=Israel - water hot spots | publisher=BBC News | date=? | url=http://news.bbc.co.uk/1/shared/spl/hi/world/03/world_forum/water/html/israel.stm}} </ref>. ᎧᎵ ᏗᏙᎳᎩ ᎯᎠ [[World Bank|ᎡᎶᎯ ᎠᏕᎸ ᏗᏗ]], 90% ᎯᎠ ᏭᏕᎵᎬ ᎠᏕᎸ ᏗᏗ ᎤᏤᎵ ᎠᎹ ᎨᏒᎢ ᎬᏔᏅᎯ ᎾᎥᎢ Israelis <ref name="drought_middle_east" />. ᎤᏓᏡᎬ 40 ᎯᎠ ᎦᏂᏓᏛ B ᎯᎠ [[September 28|ᏚᎵᏍᏗ 28]], [[1995]] [[Oslo accords|Oslo ᏗᏓᏙᎳᏤᎸᎯ]] ᎤᏃᎮᎸᎩ Ꮎ "Israel ᎠᏓᏙᎵᏍᏗ Palestinians' ᏂᏚᏳᎪᏛ ᎾᎿ ᎠᎹ ᎭᏫᎾᏗᏢ ᎯᎠ ᏭᏕᎵᎬ ᎠᏕᎸ ᏗᏗ".
 
-ᎯᎠ [[Golan]] ᏂᎦᏛᎢ ᎠᏓᏁᎳᏁᏗ 770 ᎢᏳᏆᏗᏅᏓ cubic ᎠᏎᎯᎯ ᎠᎹ ᎾᏍᎩ ᎢᎬᏂᏏᏍᎩ ᏑᏕᏘᏴᏓ Israel, ᎦᏙ ᎤᏍᏗ ᎾᏓᏛᏁ ᏦᎢᏁ Ꮝ ᎾᏕᏘᏴᎯᏒ ᎤᏲᏨᎯ. ᎯᎠ Golan ᎤᏤᎵ ᎦᏍᎩᎶ ᎠᎹ ᎡᎪᎢ ᎯᎠ [[Sea of Galilee|ᎠᎺᏉᎯ  Galilee]], ᎦᏙ ᎤᏍᏗ ᎨᏒᎢ Israel ᎤᏤᎵ ᎤᏔᏂᎢᏍᏗ ᎧᏃᎯᏯᏍᏗ, ᎦᏙ ᎤᏍᏗ ᎨᏒᎢ afterward redistributed ᏂᎦᏅᎯᏒ ᎯᎠ ᏙᏱᏗᏢ ᎦᏚᎲ ᎾᎥᎢ ᎯᎠ [[National Water Carrier|ᎬᎾᏕᎾ ᎠᎹ ᎠᏫᏗᏍᎩ]]. ᎯᎠ Golan, ᎦᏙ ᎤᏍᏗ Israel annexed, ᎾᏓᏛᏁ, ᎾᏍᎩᎾᎢ Israel, ᎠᏟᎶᏍᏙᏗ ᎾᎿ ᎨᏒ ᎢᎬᏂᏏᏍᎩ Ꮝ ᎠᎹ ᏧᎬᏩᎶᏗ ᎦᎷᎩ. <ref name="drought_middle_east" />. ᏱᏂᎬᏛᎾ, ᎯᎠ ᎤᏩᎾᏕᏍᎩ ᎾᎿ ᎯᎠ ᎠᎺᏉᎯ Galilee ᎤᎭ ᎤᏬᎭᏒᎩ ᎦᏬᎯᎸᏙᏗ ᎯᎠ ᏧᏕᏘᏴᏓ, ᎠᏓᏪᎳᎩᏍᎬ ᏧᎾᏰᎯᏍᏗ Ꮎ Israel ᎤᏤᎵ ᏄᎬᏫᏳᏒ ᎠᎹ ᎥᏓᎵ ᏫᎵ ᏗᏙᎳᎩ salinated. ᎾᎿ Ꮝ ᎤᏴᏢ ᎢᏗᏢ ᎠᏟᎶᏛ ᎬᎪᏛ, Israel threatened ᎠᏂᏯᏫᏍᎩ ᎠᎵᏖᎸᏗ ᎭᏫᎾᏗᏢ [[2002]] ᎯᎳᎪ ᎢᏳ [[Lebanon]] ᎠᏍᏚᎢᏒ ᎢᏤ ᎦᏌᏙᏯᏍᎩ ᎤᎴᏫᏍᏗ ᎠᎩᏍᎬᎢ ᎠᎹ ᏂᏛᎴᏅᏓ ᎤᏪᏴ ᎨᎳᏍᏙᏗ ᎯᎠ Jordan. ᎠᎵᏍᏕᎸᏗ ᏩᎾᎢ ᎯᎠ ᏄᏍᏗᏓᏅ, Israel ᎤᎭ ᏚᏓᏂᎸᏨ ᎠᏩᎯᏍᏗ ᎠᎹ ᏂᏛᎴᏅᏓ ᎬᎾ ᎠᎴ ᎨᏒᎢ investigating ᎠᏓᏁᎸ desalination digakohidi <ref> {{cite news | title=Israel - water hot spots | publisher=BBC News | date=? | url=http://news.bbc.co.uk/1/shared/spl/hi/world/03/world_forum/water/html/israel.stm}} </ref>.
+ᎯᎠ [[Golan]] ᏂᎦᏛᎢ ᎠᏓᏁᎳᏁᏗ 770 ᎢᏳᏆᏗᏅᏓ cubic ᎠᏎᎯᎯ ᎠᎹ ᎾᏍᎩ ᎢᎬᏂᏏᏍᎩ ᏑᏕᏘᏴᏓ Israel, ᎦᏙ ᎤᏍᏗ ᎾᏓᏛᏁ ᏦᎢᏁ Ꮝ ᎾᏕᏘᏴᎯᏒ ᎤᏲᏨᎯ. ᎯᎠ Golan ᎤᏤᎵ ᎦᏍᎩᎶ ᎠᎹ ᎡᎪᎢ ᎯᎠ [[Sea of Galilee|ᎠᎺᏉᎯ  Galilee]], ᎦᏙ ᎤᏍᏗ ᎨᏒᎢ Israel ᎤᏤᎵ ᎤᏔᏂᎢᏍᏗ ᎧᏃᎯᏯᏍᏗ, ᎦᏙ ᎤᏍᏗ ᎨᏒᎢ afterward redistributed ᏂᎦᏅᎯᏒ ᎯᎠ ᏙᏱᏗᏢ ᎦᏚᎲ ᎾᎥᎢ ᎯᎠ [[National Water Carrier|ᎬᎾᏕᎾ ᎠᎹ ᎠᏫᏗᏍᎩ]]. ᎯᎠ Golan, ᎦᏙ ᎤᏍᏗ Israel annexed, ᎾᏓᏛᏁ, ᎾᏍᎩᎾᎢ Israel, ᎠᏟᎶᏍᏙᏗ ᎾᎿ ᎨᏒ ᎢᎬᏂᏏᏍᎩ Ꮝ ᎠᎹ ᏧᎬᏩᎶᏗ ᎦᎷᎩ. <ref name="drought_middle_east" />. ᏱᏂᎬᏛᎾ, ᎯᎠ ᎤᏩᎾᏕᏍᎩ ᎾᎿ ᎯᎠ ᎠᎺᏉᎯ ᎦᎵᎵ ᎤᎭ ᎤᏬᎭᏒᎩ ᎦᏬᎯᎸᏙᏗ ᎯᎠ ᏧᏕᏘᏴᏓ, ᎠᏓᏪᎳᎩᏍᎬ ᏧᎾᏰᎯᏍᏗ Ꮎ Israel ᎤᏤᎵ ᏄᎬᏫᏳᏒ ᎠᎹ ᎥᏓᎵ ᏫᎵ ᏗᏙᎳᎩ salinated. ᎾᎿ Ꮝ ᎤᏴᏢ ᎢᏗᏢ ᎠᏟᎶᏛ ᎬᎪᏛ, Israel threatened ᎠᏂᏯᏫᏍᎩ ᎠᎵᏖᎸᏗ ᎭᏫᎾᏗᏢ [[2002]] ᎯᎳᎪ ᎢᏳ [[Lebanon]] ᎠᏍᏚᎢᏒ ᎢᏤ ᎦᏌᏙᏯᏍᎩ ᎤᎴᏫᏍᏗ ᎠᎩᏍᎬᎢ ᎠᎹ ᏂᏛᎴᏅᏓ ᎤᏪᏴ ᎨᎳᏍᏙᏗ ᎯᎠ Jordan. ᎠᎵᏍᏕᎸᏗ ᏩᎾᎢ ᎯᎠ ᏄᏍᏗᏓᏅ, Israel ᎤᎭ ᏚᏓᏂᎸᏨ ᎠᏩᎯᏍᏗ ᎠᎹ ᏂᏛᎴᏅᏓ ᎬᎾ ᎠᎴ ᎨᏒᎢ investigating ᎠᏓᏁᎸ desalination digakohidi <ref> {{cite news | title=Israel - water hot spots | publisher=BBC News | date=? | url=http://news.bbc.co.uk/1/shared/spl/hi/world/03/world_forum/water/html/israel.stm}} </ref>.
 
 ᎾᎿ ᎯᎠ ᏐᎢ ᎤᏬᏰᏂ, [[Iraq]] ᎠᎴ [[Syria]] ᎠᎦᎦᏎᏍᏔᏅ ᎬᏙᏗ ᎠᏓᏅᏖᏗ ᎯᎠ ᎠᏁᏍᎨᎲ ᎯᎠ [[Atatürk Dam|Atatürk ᎠᏓᎦᏴᎵᎨ]] ᎭᏫᎾᏗᏢ [[Turkey|ᎬᎾ]] ᎠᎴ projected iyahdvnelidasdi 22 ᎠᏓᎦᏴᎵᎨ ᎾᎿ ᎯᎠ [[Tigris]] ᎠᎴ [[Euphrates]] ᎤᏪᏴ <ref> {{cite news | title=Turkey - water hot spots | publisher=BBC News | date=? | url=http://news.bbc.co.uk/1/shared/spl/hi/world/03/world_forum/water/html/turkey.stm}} </ref>. ᎧᎵ ᏗᏙᎳᎩ ᎯᎠ BBC, ᎯᎠ ᏙᎪᏩᎸ 'ᎠᎹ-ᎧᏂᎬᎩ' ᎠᏰᎵ ᏚᎾᏙᏢᏩᏗᏒ ᎭᏫᎾᏗᏢ ᎯᎠ ᎤᏔᏂᏗ ᎦᏙᎯ ᎤᏛᏒ ᎢᎦᏘᎭᎢ ᏂᏛᎴᏅᏓ ᏦᎢ ᎭᏫᎾᏗᏢ 1955 ᏧᏁᎳ ᎭᏫᎾᏗᏢ 1990 ᎬᏙᏗ ᏄᏓᎴ ᎦᎵᏉᎩ utugi uwasv ᎾᏍᏋ ᎦᏟᏌᏅᎯ ᎭᏫᏂᏗᏢ 20 ᏧᏕᏘᏴᏓ, ᎠᏠᏯᏍᏗᏍᎩ ᏦᎢ [[Nile]] ᎠᏰᎵ ᏚᎾᏙᏢᏒ (ᎯᎠ Nile ᎨᏒᎢ shared ᎾᎥᎢ ᏐᏁᎳ ᎠᏰᎵ ᏚᎾᏙᏢᏩᏗᏒ).
 
-=== ᎠᎹ ᎭᏫᎾᏗᏢ Asia ===
-[[File:200407-sandouping-sanxiadaba-4.med.jpg|thumb|300px|ᏦᎢ ᏰᎵ ᎤᏝᏅᏛ ᎠᏓᎦᏴᎵᎨ, ᎠᎩᏍᎬᎢ, upstream ᎠᏍᏆᎨᏂ, [[26 July|26 ᎫᏰᏉᏂ]], [[2004]]]]ᎭᏫᎾᏗᏢ Asia, [[Vietnam]] ᎠᎴ [[Cambodia]] ᎠᎴ ᎡᎯᏍᏛ ᎾᎥᎢ [[China|ᎠᎦᎾᏫᏗᏍᎩ]] ᎤᏤᎵ ᎠᎴ [[Laos]]' ᎠᏁᎸᏙᏗ ᎠᎨᏔᏗᏍᏗ ᎯᎠ ᎤᏍᏉᎳᏗᏍᎬ ᎠᎹ. ᎠᎦᎾᏫᏗᏍᎩ ᎨᏒᎢ ᎾᏍᎩ ᎾᏍᏇ ᎠᏛᏅᎢᏍᏗᏍᎩ ᎯᎠ [[Three Gorges Dam|ᏦᎢ ᏰᎵ ᎤᏝᏅᏛ ᎠᏓᎦᏴᎵᎨ]] ᎠᏎᎸᎯ ᎾᎿ ᎯᎠ [[Yangtze River|Yangtze ᎤᏪᏴ]], ᎦᏙ ᎤᏍᏗ ᏯᏓᎢᏗᏏ ᏗᏙᎳᎩ ᏌᏊ ᎯᎠ ᎡᎶᎯ ᎤᏤᎵ ᎤᏔᏂᎢᏍᏗ ᎠᏓᎦᏴᎵᎨ, causing ᎤᎪᏗᏗ ᎠᎾᏓᏟᏏᏍᎬ ᎠᎴ environmental ᏗᎦᏎᏍᏙᏗ. ᎾᏍᎩ ᎾᏍᎩ ᎾᏍᏇ ᎤᎭ ᎠᏎᎸᎯ ᎤᏥᏍᏆᏙᏏᏰᏛ ᎠᎹ ᏂᏛᎴᏅᏓ ᎯᎠ Yangtze ᎯᎠ dwindling [[Yellow River|ᏓᎶᏂᎨ ᎤᏪᏴ]], ᎦᏙ ᎤᏍᏗ ᎨᎳᏍᏙᏗ ᎠᎦᎾᏫᏗᏍᎩ ᎤᏤᎵ ᎤᎪᏗᏗ ᎤᎵᏍᎨᏛ ᏓᎦᎶᎩᏍᎬ ᎤᏔᏂᏗ ᎦᏙᎯ.
+=== ᎠᎹ ᎭᏫᎾᏗᏢ ᏓᎶᏂᎦᏍᏛ ===
+[[File:200407-sandouping-sanxiadaba-4.med.jpg|thumb|300px|ᏦᎢ ᏰᎵ ᎤᏝᏅᏛ ᎠᏓᎦᏴᎵᎨ, ᎠᎩᏍᎬᎢ, upstream ᎠᏍᏆᎨᏂ, [[26 July|26 ᎫᏰᏉᏂ]], [[2004]]]]ᎭᏫᎾᏗᏢ ᏓᎶᏂᎦᏍᏛ, [[Vietnam]] ᎠᎴ [[Cambodia]] ᎠᎴ ᎡᎯᏍᏛ ᎾᎥᎢ [[China|ᎠᎦᎾᏫᏗᏍᎩ]] ᎤᏤᎵ ᎠᎴ [[Laos]]' ᎠᏁᎸᏙᏗ ᎠᎨᏔᏗᏍᏗ ᎯᎠ ᎤᏍᏉᎳᏗᏍᎬ ᎠᎹ. ᎠᎦᎾᏫᏗᏍᎩ ᎨᏒᎢ ᎾᏍᎩ ᎾᏍᏇ ᎠᏛᏅᎢᏍᏗᏍᎩ ᎯᎠ [[Three Gorges Dam|ᏦᎢ ᏰᎵ ᎤᏝᏅᏛ ᎠᏓᎦᏴᎵᎨ]] ᎠᏎᎸᎯ ᎾᎿ ᎯᎠ [[Yangtze River|Yangtze ᎤᏪᏴ]], ᎦᏙ ᎤᏍᏗ ᏯᏓᎢᏗᏏ ᏗᏙᎳᎩ ᏌᏊ ᎯᎠ ᎡᎶᎯ ᎤᏤᎵ ᎤᏔᏂᎢᏍᏗ ᎠᏓᎦᏴᎵᎨ, causing ᎤᎪᏗᏗ ᎠᎾᏓᏟᏏᏍᎬ ᎠᎴ environmental ᏗᎦᏎᏍᏙᏗ. ᎾᏍᎩ ᎾᏍᎩ ᎾᏍᏇ ᎤᎭ ᎠᏎᎸᎯ ᎤᏥᏍᏆᏙᏏᏰᏛ ᎠᎹ ᏂᏛᎴᏅᏓ ᎯᎠ Yangtze ᎯᎠ dwindling [[Yellow River|ᏓᎶᏂᎨ ᎤᏪᏴ]], ᎦᏙ ᎤᏍᏗ ᎨᎳᏍᏙᏗ ᎠᎦᎾᏫᏗᏍᎩ ᎤᏤᎵ ᎤᎪᏗᏗ ᎤᎵᏍᎨᏛ ᏓᎦᎶᎩᏍᎬ ᎤᏔᏂᏗ ᎦᏙᎯ.
 
-[[File:Ganges River Delta, Bangladesh, India.jpg|thumb|left|Ganges [[river delta|ᎤᏪᏴ ᎦᏙᎯ]], Bangladesh ᎠᎴ ᎠᎹ ᎦᏄᎪᎬ]]ᎯᎠ [[Ganges]] ᎨᏒᎢ disputed ᎠᏰᎵ [[India|ᎠᎹ ᎦᏄᎪᎬ]] ᎠᎴ [[Bangladesh]]. ᎯᎠ ᎠᎹ ᎠᎾᏗᏒᎯᎯ ᎠᎴ ᎠᎴᏂᏙᎲ ᏄᎵᏍᏛ depleted ᎠᎴ polluted, ᎾᎯᏳᎢ ᎯᎠ [[glacier|ᎤᏴᏢ]] ᎨᎳᏍᏙᏗ ᎯᎠ ᎦᎸᏉᏗ [[Hinduism|Hindu]] ᎤᏪᏴ ᎨᏒᎢ ᎧᏂᎬᎾᎥ ᎢᏯᏍᎪᎯᏧᏈ ᏧᎾᎳᏏᏕᎾ ᎠᏂᏏᏴᏫᎭ ᏑᏕᏘᏴᏓ ᎢᎬᏂᏏᏍᎩ [[global warming|global ᎤᎦᎾᏭ]] ᎠᎴ [[deforestation]] ᎭᏫᎾᏗᏢ ᎯᎠ [[Himalayas]] causing ᎭᏫᎾᏗᏢ ᎤᏪᏴᎢ ᎦᏛᎢ ᎾᎾᎯ ᎯᎠ Ganges ᎤᏪᏴ ᎤᎧᏲᏗ ᎦᎸᎳᏗᏢ. ᎨᎢ, ᎠᎹ ᎦᏄᎪᎬ ᎠᎨᏔᏗᏍᏗ ᎯᎠ ᎠᏕᏴᎠᏍᎬ Bangladesh ᎬᏙᏗ ᎯᎠ [[Farakka Barrage]], 10 km ᎾᎿ ᎯᎠ ᎠᏴᏫᏯ ᎠᏍᏆᎨᏂ ᎯᎠ ᎠᏟᎶᏛ ᎬᎪᏛ. iyuwakodi ᎯᎠ ᎣᏂᏱᏳ 1990s, ᎠᎹ ᎦᏄᎪᎬ ᎬᏔᏅᎯ ᎯᎠ barrage ᎤᏥᏍᏆᏙᏏᏰᏛ ᎯᎠ ᎤᏪᏴ [[Calcutta|ᎤᏓᏂᏝᏅ]] ᎠᎴᏫᏍᏙᏗ ᎯᎠ ᎦᏚᎲᎢ ᎤᏤᎵ ᏥᏳ ᏗᏔᎳᏗᏍᏗ ᎤᎧᏲᏗ ᎦᎸᎳᏗᏢ ᎾᎯᏳᎨᏒ ᎯᎠ ᎤᎧᏲᏗ ᎢᏳ ᎤᏕᏘᏴᏌᏗᏒ. ᎪᎯ ᏗᎦᏘᎸᏍᏗ Bangladeshi ᏗᏂᎶᎩᏍᎩ ᎠᎹ ᎠᎴ [[silt|ᎦᎳᏅᎯ]], ᎠᎴ ᎠᎦᏍᎦᏂ ᎯᎠ [[Sundarban]] wetlands ᎠᎴ [[mangrove]] ᎠᏙᎯ ᎢᎾᎨ ᎾᎾᎢ ᎯᎠ ᎤᏪᏴ ᎤᏤᎵ ᎦᏙᎯ utvyolistanvhi threatened. ᎯᎠ ᏔᎵ ᎠᏰᎵ ᏚᎾᏙᏢᏩᏗᏒ ᎤᎭ ᎾᏊ ᎤᏬᏪᎳᏅᎩ ᏓᏓᏁᏤᎸ ᎠᏓᏲᏔᎡᏗ ᎯᎠ ᎠᎹ ᎤᏟ ᎢᎦᎢ ᎢᎦᏘᎭ. ᎠᎹ ᎢᎦ ᎣᏏ, ᏱᏂᎬᏛᎾ, ᎤᎾᎵᏃᎯᏴᎯ ᎤᎪᏗᏗ ᎠᎦᏎᏍᏙᏗ ᎢᎬᏁᏗ, ᎬᏙᏗ ᎦᎸᎳᏗ ᎤᏩᎾᏕᏍᎩ [[arsenic|ᎠᏍᎩᎾᏗᏍᏗ]] ᎠᎴ untreated ᏗᏓᏲᎯᏍᏗ ᎭᏫᎾᏗᏢ ᎯᎠ ᎤᏪᏴ ᎠᎹ <ref> {{cite news | title=Ganges river - water hot spots | publisher=BBC News | date=? | url=http://news.bbc.co.uk/1/shared/spl/hi/world/03/world_forum/water/html/river_ganges.stm}} </ref>.
+[[File:Ganges River Delta, Bangladesh, India.jpg|thumb|left|Ganges [[river delta|ᎤᏪᏴ ᎦᏙᎯ]], Bangladesh ᎠᎴ ᎠᎹ ᎦᏄᎪᎬ]]ᎯᎠ [[Ganges]] ᎨᏒᎢ disputed ᎠᏰᎵ [[India|ᎠᎹ ᎦᏄᎪᎬ]] ᎠᎴ [[Bangladesh]]. ᎯᎠ ᎠᎹ ᎠᎾᏗᏒᎯᎯ ᎠᎴ ᎠᎴᏂᏙᎲ ᏄᎵᏍᏛ depleted ᎠᎴ polluted, ᎾᎯᏳᎢ ᎯᎠ [[glacier|ᎤᏴᏢ]] ᎨᎳᏍᏙᏗ ᎯᎠ ᎦᎸᏉᏗ [[Hinduism|Hindu]] ᎤᏪᏴ ᎨᏒᎢ ᎧᏂᎬᎾᎥ ᎢᏯᏍᎪᎯᏧᏈ ᏧᎾᎳᏏᏕᎾ ᎠᏂᏏᏴᏫᎭ ᏑᏕᏘᏴᏓ ᎢᎬᏂᏏᏍᎩ [[global warming|global ᎤᎦᎾᏭ]] ᎠᎴ [[deforestation]] ᎭᏫᎾᏗᏢ ᎯᎠ [[Himalayas]] causing ᎭᏫᎾᏗᏢ ᎤᏪᏴᎢ ᎦᏛᎢ ᎾᎾᎯ ᎯᎠ Ganges ᎤᏪᏴ ᎤᎧᏲᏗ ᎦᎸᎳᏗᏢ. ᎨᎢ, ᎠᎹ ᎦᏄᎪᎬ ᎠᎨᏔᏗᏍᏗ ᎯᎠ ᎠᏕᏴᎠᏍᎬ Bangladesh ᎬᏙᏗ ᎯᎠ [[Farakka Barrage]], 10 km ᎾᎿ ᎯᎠ ᎠᏴᏫᏯ ᎠᏍᏆᎨᏂ ᎯᎠ ᎠᏟᎶᏛ ᎬᎪᏛ. ᎢᏳᎳᎪᏗ ᎯᎠ ᎣᏂᏱᏳ 1990s, ᎠᎹ ᎦᏄᎪᎬ ᎬᏔᏅᎯ ᎯᎠ barrage ᎤᏥᏍᏆᏙᏏᏰᏛ ᎯᎠ ᎤᏪᏴ [[Calcutta|ᎤᏓᏂᏝᏅ]] ᎠᎴᏫᏍᏙᏗ ᎯᎠ ᎦᏚᎲᎢ ᎤᏤᎵ ᏥᏳ ᏗᏔᎳᏗᏍᏗ ᎤᎧᏲᏗ ᎦᎸᎳᏗᏢ ᎾᎯᏳᎨᏒ ᎯᎠ ᎤᎧᏲᏗ ᎢᏳ ᎤᏕᏘᏴᏌᏗᏒ. ᎪᎯ ᏗᎦᏘᎸᏍᏗ Bangladeshi ᏗᏂᎶᎩᏍᎩ ᎠᎹ ᎠᎴ [[silt|ᎦᎳᏅᎯ]], ᎠᎴ ᎠᎦᏍᎦᏂ ᎯᎠ [[Sundarban]] wetlands ᎠᎴ [[mangrove]] ᎠᏙᎯ ᎢᎾᎨ ᎾᎾᎢ ᎯᎠ ᎤᏪᏴ ᎤᏤᎵ ᎦᏙᎯ utvyolistanvhi threatened. ᎯᎠ ᏔᎵ ᎠᏰᎵ ᏚᎾᏙᏢᏩᏗᏒ ᎤᎭ ᎾᏊ ᎤᏬᏪᎳᏅᎩ ᏓᏓᏁᏤᎸ ᎠᏓᏲᏔᎡᏗ ᎯᎠ ᎠᎹ ᎤᏟ ᎢᎦᎢ ᎢᎦᏘᎭ. ᎠᎹ ᎢᎦ ᎣᏏ, ᏱᏂᎬᏛᎾ, ᎤᎾᎵᏃᎯᏴᎯ ᎤᎪᏗᏗ ᎠᎦᏎᏍᏙᏗ ᎢᎬᏁᏗ, ᎬᏙᏗ ᎦᎸᎳᏗ ᎤᏩᎾᏕᏍᎩ [[arsenic|ᎠᏍᎩᎾᏗᏍᏗ]] ᎠᎴ untreated ᏗᏓᏲᎯᏍᏗ ᎭᏫᎾᏗᏢ ᎯᎠ ᎤᏪᏴ ᎠᎹ <ref> {{cite news | title=Ganges river - water hot spots | publisher=BBC News | date=? | url=http://news.bbc.co.uk/1/shared/spl/hi/world/03/world_forum/water/html/river_ganges.stm}} </ref>.
 
 === ᎠᎹ ᎭᏫᎾᏗᏢ ᎤᎦᎾᏭ ᎠᎺᎵᎨ ===
 ᎯᎠ [[Guaraní Aquifer]], ᎤᏂᎷᏨ ᎠᏰᎵ ᎯᎠ [[Mercosur]] ᎠᏰᎵ ᏚᎾᏙᏢᏩᏗᏒ [[Argentina]], [[Brazil]], [[Bolivia]] ᎠᎴ [[Paraguay]], ᎬᏙᏗ  ᎦᏟᏌᏅ ᎪᏪᎵ ᎬᏩᏚᏫᏛ 40000 km³, ᎨᏒᎢ ᎤᎵᏍᎨᏛ ᏗᏓᎴᎲᏍᎬ ᎢᏤᎢ, drinkable ᎠᎹ, ᎾᏍᎩᎾᎢ ᏂᎦᏛ ᏅᎩ ᎠᏰᎵ ᏚᎾᏙᏢᏩᏗᏒ. 
 
 === Privatisation ᎠᎹ ᏚᎾᏓᏡᎬᎢ ===
-[[Privatisation]] ᎠᎹ ᏚᎾᏓᏡᎬᎢ ᎤᎭ ᏭᏪᏙᎢ contested ᎾᎿ ᎯᎸᏍᎩ ᎢᏳᏓᎵᎭ, ᎤᏍᏆᎸᎲ ᎤᏲᎢ ᎢᎦ ᎣᏏ ᎯᎠ ᎠᎹ, kanquotsegi ᏚᏂᎬᏩᎶᏔᏅ, ᎠᎴ ᎤᏠᏯᏍᏗ. ᎭᏫᎾᏗᏢ [[Bolivia]] ᎾᏍᎩᎾᎢ ᏱᏓᏟᎶᏍᏔᏅ, ᎯᎠ ᎧᏁᎢᏍᏔᏅ privatization ᎠᎹ ᏚᎾᏓᏡᎬᎢ ᎾᎥᎢ ᎯᎠ [[IMF]] ᎨᏒᎩ ᏚᎾᏠᏒ ᎾᎥᎢ [[Cochabamba protests of 2000|ᎤᏂᎸᏉᏗ ᏗᎦᏘᎸᏍᏗ ᎭᏫᎾᏗᏢ Cochabamba ᎭᏫᎾᏗᏢ 2000]], ᎦᏙ ᎤᏍᏗ ousted [[Bechtel]], ᏴᏩᏁᎬ ᎪᎱᏍᏗ ᎬᏔᏂᏓᏍᏗ ᎠᏍᏓᏯ ᏕᎫᎪᏛ ᏚᎳᏏᏔᏅᎩ ᎭᏫᎾᏗᏢ San Francisco. [[SUEZ]] ᎤᎭ ᎤᏂᎩᏍᏔᏅ ᎧᏂᎬᎾᎥ ᏂᏛᎴᏅᏓ ᎤᎦᎾᏭ ᎠᎺᎵᎨ, ᎤᏍᏆᎸᎲ ᎤᏠᏱ ᏗᎦᏘᎸᏍᏗ (ᎭᏫᎾᏗᏢ [[Buenos Aires]] ᎭᏫᎾᏗᏢ [[Argentina]], ᏥᏄᏍᏗ ᎠᏔᎴᏒ ᎠᎹᏱ ᏥᏄᏍᏗ ᎭᏫᎾᏗᏢ [[Santa Fe, Argentina|Santa ᎣᏍᏛᏗᏍᏗ]]; ᎭᏫᎾᏗᏢ [[Córdoba, Argentina|Córdoba]], consumers ᎤᎩᏒᎩ ᎯᎠ ᏕᎦᎳᏅᏛ ᏗᎦᏘᎸᏍᏗ ᎠᎹ ᏓᎬᏩᎶᏛ ᎠᏌᎳᏙᏗ ᏥᏄᏍᏗ ᎤᏣᏘ ᏥᏄᏍᏗ 500 ᏌᏊ ᎢᎦᏛ ᎤᏃᏍᏛ mandated ᎾᎥᎢ Suez). ᎭᏫᎾᏗᏢ ᎤᎦᎾᏭ ᎠᎴ ᎠᏰᎵ ᎠᎺᎵᎨ, Suez ᎤᎭ ᎠᎹ ᎤᏁᎳᎩ ᎡᎵᏒᎢ ᎭᏫᎾᏗᏢ Argentina, Bolivia, Brazil ᎠᎴ Mexico. "Bolivian ᎠᏰᎵ ᎤᎾᏒᎧᎵ ᎢᏳᏩᏂᏌᏛ Suez ᎾᏍᎩᎾᎢ ᎾᏍᎩ ᏂᎨᏒᎾ ᏓᎾᎵᎪᏗᏍᎬ ᏰᎵᏊ ᎦᎵᏦᏕ ᎠᎿᎥ ᎠᎹ ᎤᎵᏍᏕᎸᏗ ᏥᏄᏍᏗ mandated ᎾᎥᎢ Ꮝ ᏓᏓᏁᏤᎸ ᎠᎴ ᎾᏍᎩᎾᎢ ᏓᎫᏮᎶᏗᏍᎬ ᏥᏄᏍᏗ ᎤᏣᏘ ᏥᏄᏍᏗ $455 ᏗᎵᎪᏔᏅᎯ, ᎠᎴ ᎬᏩᏚᏫᏛ ᏦᎢ itsuwakodi ᎯᎠ ᎢᎦᏘᎭ ᎢᎬᏁᎸ ᏏᏅᏙ ᏂᎦᎵᏍᏔᏂᏒ ᎠᏓᏠᏍᎬ ᏗᎦᎸᏫᏍᏓᏁᏗ ᎠᏓᎦᏘᏕᎯ", ᎧᎵ ᏗᏙᎳᎩ ᎯᎠ ''[[Mercury News|ᏗᎦᏣᏄᎶ ᎤᎾᏣ ᏗᏤᎢ]]'' <ref> {{cite news | title=Bolivia's water wars coming to end under Morales | publisher=[[Mercury News|ᏗᎦᏣᏄᎶ ᎤᎾᏣ ᏗᏤᎢ]] | date=February 26, 2006 | url=http://www.mercurynews.com/mld/mercurynews/news/world/13969197.htm}} </ref>. [[South Africa|ᎤᎦᎾᏭ Africa]] ᎾᏍᎩ ᎾᏍᏇ ᎪᏢᏅᎯ ᎠᏓᏅᏍᏗ privatize ᎠᎹ, ᎤᏦᎠᏎᏗ ᎠᏓᎴᏂᏍᎬ ᎥᏳᎩ ᎤᏲᏨᎯ 200 <ref> {{cite news | title=Water privatisation: ask the experts | publisher=BBC News | date=December 10, 2004 | url=http://news.bbc.co.uk/2/hi/talking_point/2957550.stm}} </ref>.
+[[Privatisation]] ᎠᎹ ᏚᎾᏓᏡᎬᎢ ᎤᎭ ᏭᏪᏙᎢ contested ᎾᎿ ᎯᎸᏍᎩ ᎢᏳᏓᎵᎭ, ᎤᏍᏆᎸᎲ ᎤᏲᎢ ᎢᎦ ᎣᏏ ᎯᎠ ᎠᎹ, kanquotsegi ᏚᏂᎬᏩᎶᏔᏅ, ᎠᎴ ᎤᏠᏯᏍᏗ. ᎭᏫᎾᏗᏢ [[Bolivia]] ᎾᏍᎩᎾᎢ ᏱᏓᏟᎶᏍᏔᏅ, ᎯᎠ ᎧᏁᎢᏍᏔᏅ privatization ᎠᎹ ᏚᎾᏓᏡᎬᎢ ᎾᎥᎢ ᎯᎠ [[IMF]] ᎨᏒᎩ ᏚᎾᏠᏒ ᎾᎥᎢ [[Cochabamba protests of 2000|ᎤᏂᎸᏉᏗ ᏗᎦᏘᎸᏍᏗ ᎭᏫᎾᏗᏢ Cochabamba ᎭᏫᎾᏗᏢ 2000]], ᎦᏙ ᎤᏍᏗ ousted [[Bechtel]], ᏴᏩᏁᎬ ᎪᎱᏍᏗ ᎬᏔᏂᏓᏍᏗ ᎠᏍᏓᏯ ᏕᎫᎪᏛ ᏚᎳᏏᏔᏅᎩ ᎭᏫᎾᏗᏢ San Francisco. [[SUEZ]] ᎤᎭ ᎤᏂᎩᏍᏔᏅ ᎧᏂᎬᎾᎥ ᏂᏛᎴᏅᏓ ᎤᎦᎾᏭ ᎠᎺᎵᎨ, ᎤᏍᏆᎸᎲ ᎤᏠᏱ ᏗᎦᏘᎸᏍᏗ (ᎭᏫᎾᏗᏢ [[Buenos Aires]] ᎭᏫᎾᏗᏢ [[Argentina]], ᏥᏄᏍᏗ ᎠᏔᎴᏒ ᎠᎹᏱ ᏥᏄᏍᏗ ᎭᏫᎾᏗᏢ [[Santa Fe, Argentina|Santa ᎣᏍᏛᏗᏍᏗ]]; ᎭᏫᎾᏗᏢ [[Córdoba, Argentina|Córdoba]], consumers ᎤᎩᏒᎩ ᎯᎠ ᏕᎦᎳᏅᏛ ᏗᎦᏘᎸᏍᏗ ᎠᎹ ᏓᎬᏩᎶᏛ ᎠᏌᎳᏙᏗ ᏥᏄᏍᏗ ᎤᏣᏘ ᏥᏄᏍᏗ 500 ᏌᏊ ᎢᎦᏛ ᎤᏃᏍᏛ mandated ᎾᎥᎢ Suez). ᎭᏫᎾᏗᏢ ᎤᎦᎾᏭ ᎠᎴ ᎠᏰᎵ ᎠᎺᎵᎨ, Suez ᎤᎭ ᎠᎹ ᎤᏁᎳᎩ ᎡᎵᏒᎢ ᎭᏫᎾᏗᏢ Argentina, Bolivia, Brazil ᎠᎴ ᎠᏂᏍᏆᏂᎢ. "Bolivian ᎠᏰᎵ ᎤᎾᏒᎧᎵ ᎢᏳᏩᏂᏌᏛ Suez ᎾᏍᎩᎾᎢ ᎾᏍᎩ ᏂᎨᏒᎾ ᏓᎾᎵᎪᏗᏍᎬ ᏰᎵᏊ ᎦᎵᏦᏕ ᎠᎿᎥ ᎠᎹ ᎤᎵᏍᏕᎸᏗ ᏥᏄᏍᏗ mandated ᎾᎥᎢ Ꮝ ᏓᏓᏁᏤᎸ ᎠᎴ ᎾᏍᎩᎾᎢ ᏓᎫᏮᎶᏗᏍᎬ ᏥᏄᏍᏗ ᎤᏣᏘ ᏥᏄᏍᏗ $455 ᏗᎵᎪᏔᏅᎯ, ᎠᎴ ᎬᏩᏚᏫᏛ ᏦᎢ itsuwakodi ᎯᎠ ᎢᎦᏘᎭ ᎢᎬᏁᎸ ᏏᏅᏙ ᏂᎦᎵᏍᏔᏂᏒ ᎠᏓᏠᏍᎬ ᏗᎦᎸᏫᏍᏓᏁᏗ ᎠᏓᎦᏘᏕᎯ", ᎧᎵ ᏗᏙᎳᎩ ᎯᎠ ''[[Mercury News|ᏗᎦᏣᏄᎶ ᎤᎾᏣ ᏗᏤᎢ]]'' <ref> {{cite news | title=Bolivia's water wars coming to end under Morales | publisher=[[Mercury News|ᏗᎦᏣᏄᎶ ᎤᎾᏣ ᏗᏤᎢ]] | date=February 26, 2006 | url=http://www.mercurynews.com/mld/mercurynews/news/world/13969197.htm}} </ref>. [[South Africa|ᎤᎦᎾᏭ Africa]] ᎾᏍᎩ ᎾᏍᏇ ᎪᏢᏅᎯ ᎠᏓᏅᏍᏗ privatize ᎠᎹ, ᎤᏦᎠᏎᏗ ᎠᏓᎴᏂᏍᎬ ᎥᏳᎩ ᎤᏲᏨᎯ 200 <ref> {{cite news | title=Water privatisation: ask the experts | publisher=BBC News | date=December 10, 2004 | url=http://news.bbc.co.uk/2/hi/talking_point/2957550.stm}} </ref>.
 
 === Regulating ᎠᎹ ᏗᏗᎦᎴᏴ ===
 [[File:Photo of two people reflected in a fish pond.JPG|right|thumb|255px|ᏔᎵ ᏴᏫ [[reflection (physics)|reflected]] ᎭᏫᎾᏗᏢ ᎯᎠ ᎠᎹ   [[fish pond|ᎠᏣᏗ ᎥᏓᎵ]] ]]
@@ -200,7 +200,7 @@ anaditsgv ᎠᎹ ᎨᏒᎢ ᎢᏳᏓᎵᎭ ᎤᏓᏂᏢᏅ ᎾᎾᎢ [[spring (w
 
 ᎠᎹ ᎨᏒᎢ ᎢᏳᏓᎵᎭ ᎤᏬᎯᏳᏅ ᎤᎭ ᎠᏂᏏᏴᏫ ᏄᎾᏍᏛ ᏄᎾᎳᏂᎬᎬ. ᎭᏫᎾᏗᏢ [[Celtic mythology|Celtic ᎤᏁᎳᏅᎯ]], [[Sulis]] ᎨᏒᎢ ᎯᎠ ᎾᎥᎢ [[goddess|ᎬᎨᏳᎢ]] ᎤᎦᎾᏭ ᎠᎹ ᎦᏄᎪᎬ; ᎭᏫᎾᏗᏢ [[Hinduism|ᎦᎵᏓᏍᏛ]], ᎯᎠ [[Ganga in Hinduism|Ganga]] ᎨᏒᎢ ᎾᏍᎩ ᎾᏍᏇ personified ᏥᏄᏍᏗ ᎬᎨᏳᎢ, ᎾᎯᏳᎢ [[Saraswati]] ᎤᎭ ᏭᏪᏙᎢ ᏩᏎᎸᎯ ᏥᏄᏍᏗ ᎬᎨᏳᎢ ᎭᏫᎾᏗᏢ [[Veda]]. ᎾᏍᎩ ᎾᏍᏇ ᎠᎹ ᎨᏒᎢ ᏌᏊ ᎯᎠ "panch-tatva"(ᏄᏦᏍᏛᎾ 5 ᎢᏧᏓᎴᎩ, ᎠᏂᏐᎢ ᎠᏠᏯᏍᏗᏍᎩ [[fire|ᎠᏥᎸ]], [[earth|ᎡᎶᎯ]], [[space|ᎤᏜᏅᏛ]], [[air|ᎤᏃᎴ]]). ᏅᎪᏢᎯᏐᏗᏱ, ᎦᏁᎸ ᏰᎵᏇ ᎾᏍᏋ ᎠᎾᎵᏍᏕᎵᏍᎩ ᎾᏍᎩᎾ ᎠᎹ ᎦᏄᎪᎬ, ᎤᏪᏴ, ᎠᎴ ᎥᏓᎵ: ᎾᏍᎩᎾᎢ ᏱᏓᏟᎶᏍᏔᏅ ᎭᏫᎾᏗᏢ [[Greek mythology|ᎠᎪᎢ]] ᎠᎴ [[Roman mythology|ᎶᎻ]] [[mythology|ᎤᏁᎳᏅᎯ]], [[Peneus]] ᏥᏄᏍᏛᎩ ᎤᏪᏴ ᎤᏁᎳᏅᎯ, ᏌᏊ ᎯᎠ ᏦᎢ ᎠᎦᏴᎵ [[Oceanids]].
 
-ᎯᎠ [[Ancient Greece|ᎠᎪᎢ]] [[philosopher|ᏗᏕᎶᏆᏍᎩ]] [[Empedocles]] ᎠᏰᎲᎩ Ꮎ ᎠᎹ ᎨᏒᎢ ᏌᏊ ᎯᎠ ᏅᎩ [[classical element|ᎠᏓᏙᎵᏍᏗ ᏑᏓᎴᎩ]]ᎨᎳᏛᏍᏗ ᎬᏙᏗ [[fire|ᎠᏥᎸ]], [[earth|ᎡᎶᎯ]] ᎠᎴ [[Air (classical element)|ᎤᏃᎴ]], ᎠᎴ ᏥᏄᏍᏛᎩ ᎾᏍᎩ ᎠᏰᎸᏅ ᏥᏄᏍᏗ ᎯᎠ [[ylem]], ᎠᎴ ᏄᏦᏍᏛᎾ ᏗᎧᏃᏗ ᎯᎠ ᎡᎶᎯ. ᎠᎹ ᏥᏄᏍᏛᎩ ᎠᎦᏎᏍᏔᏅ ᎤᏴᏢ ᎠᎴ ᎦᏚᎵᏓ. ᎭᏫᎾᏗᏢ ᎯᎠ ᎪᎷᏩᏛᏗ ᎯᎠ ᏅᎩ [[four humours|ᎠᏏᏴᏫ ᎤᏬᏢᏗ]], ᎠᎹ ᏥᏄᏍᏛᎩ ᎤᎾᎵᎪᏅᎯ ᎬᏙᏗ [[phlegm|ᏄᎦᏎᏍᏛᎾ]]. [[Water (classical element)|ᎠᎹ]] ᏥᏄᏍᏛᎩ ᎾᏍᎩ ᎾᏍᏇ ᏌᏊ ᎯᎠ [[Five elements (Chinese philosophy)|ᎯᏍᎩ ᎢᏧᏓᎴᎩ]] ᎭᏫᎾᏗᏢ ᎧᏃᎮᎸᎯ [[Chinese philosophy|Chinese ᎤᏬᎳᏨᎯ]], ᎨᎳᏛᏍᏗ ᎬᏙᏗ [[earth (classical element)|ᎡᎶᎯ]], [[fire (classical element)|ᎠᏥᎸ]], [[wood (classical element)|ᎠᏓ]], ᎠᎴ [[metal (classical element)|ᎠᎾᎦᎵᏍᎩ ᎦᏂᏱᏍᎩ]].
+ᎯᎠ [[Ancient Greece|ᎠᎪᎢ]] [[philosopher|ᏗᏕᎶᏆᏍᎩ]] [[Empedocles]] ᎠᏰᎲᎩ Ꮎ ᎠᎹ ᎨᏒᎢ ᏌᏊ ᎯᎠ ᏅᎩ [[classical element|ᎠᏓᏙᎵᏍᏗ ᏑᏓᎴᎩ]]ᎨᎳᏛᏍᏗ ᎬᏙᏗ [[fᎠᏥᎸ]], [[ᎡᎶᎯ]] ᎠᎴ [[Air (classical element)|ᎤᏃᎴ]], ᎠᎴ ᏥᏄᏍᏛᎩ ᎾᏍᎩ ᎠᏰᎸᏅ ᏥᏄᏍᏗ ᎯᎠ [[ylem]], ᎠᎴ ᏄᏦᏍᏛᎾ ᏗᎧᏃᏗ ᎯᎠ ᎡᎶᎯ. ᎠᎹ ᏥᏄᏍᏛᎩ ᎠᎦᏎᏍᏔᏅ ᎤᏴᏢ ᎠᎴ ᎦᏚᎵᏓ. ᎭᏫᎾᏗᏢ ᎯᎠ ᎪᎷᏩᏛᏗ ᎯᎠ ᏅᎩ [[four humours|ᎠᏏᏴᏫ ᎤᏬᏢᏗ]], ᎠᎹ ᏥᏄᏍᏛᎩ ᎤᎾᎵᎪᏅᎯ ᎬᏙᏗ [[phlegm|ᏄᎦᏎᏍᏛᎾ]]. ᎠᎹ ᏥᏄᏍᏛᎩ ᎾᏍᎩ ᎾᏍᏇ ᏌᏊ ᎯᎠ [[Five elements (Chinese philosophy)|ᎯᏍᎩ ᎢᏧᏓᎴᎩ]] ᎭᏫᎾᏗᏢ ᎧᏃᎮᎸᎯ [[Chinese philosophy|Chinese ᎤᏬᎳᏨᎯ]], ᎨᎳᏛᏍᏗ ᎬᏙᏗ [[ᎡᎶᎯ]], [[fᎠᏥᎸ]], [[ᎠᏓ]], ᎠᎴ [[metal (classical element)|ᎠᎾᎦᎵᏍᎩ ᎦᏂᏱᏍᎩ]].
 
 == ᎠᎪᏩᏛᏗ ᎾᏍᎩ ᎾᏍᏇ ==
 {{portal}}
@@ -293,7 +293,6 @@ anaditsgv ᎠᎹ ᎨᏒᎢ ᎢᏳᏓᎵᎭ ᎤᏓᏂᏢᏅ ᎾᎾᎢ [[spring (w
 
 == ᎤᏓᏎᎦᏤᏗ ᏗᏕᎬᏔᏛ ==
 {{commons|water}}
-{{wiktionary}}
 * [http://www.waterconserve.org/ Water Conserve - Water Conservation Portal]
 * [http://www.unesco.org/water/wwap/ UNESCO's World Water Assessment Program]
 * [http://www.unesco.org/water/ UNESCO Water Portal]
