--- a/ᏍᏏᏉᏯ.mw
+++ b/ᏍᏏᏉᏯ.mw
@@ -1,9 +1,10 @@
-[[File:Sequoyah.jpg|thumb|right|250px|SE-ᎥᏓᏓᎫᏴᎡᏗᏱ-YAH – [[ᎠᏓᏕᏲᎲᏍᎩ]] ᏂᏛᎴᏅᏓ ''ᎠᏴᏫᏯ ᎠᏂᎳᏍᏓᎸ'', McKinney ᎠᎴ ᎦᎳᏅᏛ, [[1856]]. ᎪᎯ ᎠᏓᏕᏲᎲᏍᎩ ᎨᏒᎢ ᏂᏛᎴᏅᏓ ᎯᎠ ᏗᏓᏟᎶᏍᏔᏅ ᎦᎶᏁᏛ ᎾᎥᎢ [[ᏣᎵ ᏥᏍᏆ ᎤᎬᏫᏳᎯ]] ᏂᏛᎴᏅᏓ ᎥᎴᏂᏙᎲ ᎭᏫᎾᏗᏢ [[1828]].]]
-'''ᏏᏉᏯ''' (ᏍᏏᏉᏯ ''Ssiquaya'' ᎭᏫᎾᏗᏢ [[ᏣᎳᎩ]]) (c.[[1767]] - ᎫᏰᏉᏂ ᎠᎴ ᎦᎶᏂ [[1843]]), ᎤᎾᏅᏛ ᏥᏄᏍᏗ '''ᏣᏥ ᎢᏰᎵᏍᏗ''', '''ᎠᏓᏩᏛᎯᏙᎯ''' ᎠᎴ '''ᎠᎴᏂᏙᎲ''', ᏥᏄᏍᏛᎩ [[ᏣᎳᎩ]] ᎠᏕᎸ ᎤᏁᎬ ᎠᏥᏅᏏᏓᏍᏗ ᎦᎪ ᎪᎷᏩᏛᏗ ᎯᎠ [[ᏣᎳᎩ ᏗᎪᏪᎵ]], ᎯᎠ ᎢᏴ ᎠᏓᏠᎯᏍᏗ ᎾᏍᎩ ᎠᏍᎦᏯ ᏀᎾᎢ ᏀᎾ ᎯᎠ [[ᏙᎪᏩᎸ ᎪᎷᏩᏛᏗ ᎠᏃᏪᎵᏍᎬ ᎢᏯᏛᏁᎵᏓᏍᏗ]]. 
+[[File:Sequoyah.jpg|thumb|right|250px|''Se-quo-yah'', ᎥᏓᏓᎫᏴᎡᏗᏱ, [[ᎠᏓᏕᏲᎲᏍᎩ]] ᏂᏛᎴᏅᏓ ''ᎠᏴᏫᏯ ᎠᏂᎳᏍᏓᎸ'', McKinney ᎠᎴ ᎦᎳᏅᏛ, [[1856]]. ᎪᎯ ᎠᏓᏕᏲᎲᏍᎩ ᎨᏒᎢ ᏂᏛᎴᏅᏓ ᎯᎠ ᏗᏓᏟᎶᏍᏔᏅ ᎦᎶᏁᏛ ᎾᎥᎢ [[ᏣᎵ ᏥᏍᏆ ᎤᎬᏫᏳᎯ]] ᏂᏛᎴᏅᏓ ᎥᎴᏂᏙᎲ ᎭᏫᎾᏗᏢ [[1828]].]]
+'''ᏏᏉᏯ''' (ᏍᏏᏉᏯ ''Ssiquaya'' ᎭᏫᎾᏗᏢ [[ᏣᎳᎩ]]) (ca. 1767 - ᎫᏰᏉᏂ ᎠᎴ ᎦᎶᏂ 1843), ᎤᎾᏅᏛ ᏥᏄᏍᏗ '''ᏣᏥ ᎢᏰᎵᏍᏗ''', '''ᎠᏓᏩᏛᎯᏙᎯ''' ᎠᎴ '''ᎠᎴᏂᏙᎲ''', ᏥᏄᏍᏛᎩ [[ᏣᎳᎩ]] ᎠᏕᎸ ᎤᏁᎬ ᎠᏥᏅᏏᏓᏍᏗ ᎦᎪ ᎪᎷᏩᏛᏗ ᎯᎠ [[ᏣᎳᎩ ᏗᎪᏪᎵ]], ᎯᎠ ᎢᏴ ᎠᏓᏠᎯᏍᏗ ᎾᏍᎩ ᎠᏍᎦᏯ ᏀᎾᎢ ᏀᎾ ᎯᎠ [[ᏙᎪᏩᎸ ᎪᎷᏩᏛᏗ ᎠᏃᏪᎵᏍᎬ ᎢᏯᏛᏁᎵᏓᏍᏗ]]. 
 
 ᎾᎥ ᏔᎾᏏ ᏛᏍᎩᏥ ᏙᏧᏙᎥ ᎦᏚᎲ, ᎤᎿ ᎨᏎ ᎤᎨᏓᎵᏴ ᏕᎨᎦᏨᏍᏔᏁ ᎠᏣᎳᎩ ᎤᎬᏩᏳᎯ
 ᎤᏪᏥ, ᏭᏖ, ᏃᏊᎴ ᏅᏕᏂᎵ ᎩᏍᏗ. ᏗᎦᏁᎦ ᏗᎦᎾᏕᎩ ᎨᏎ ᏅᏕᏂᎵ. ᏭᏕᏁ ᏏᏉᏯ ᎦᎵᏆᏍᎪ
 ᎦᎵᏆᏚ ᏑᏓᎵ ᎤᏕᏗᏴᏌᏗᏒᎢ.
+
 ᎠᏲᏟ ᏥᎨᏎ ᎤᏓᏂᏰ ᏔᎾᏏ ᎤᎾᎴᏅ ᎠᏂᏲᏁᎦ ᎠᏂᎷᎬᎢ. ᏣᏥᏱ ᏗᏝ ᏭᏓᏅᏎ ᏭᏕᎶᏆᎡ
 ᏧᎸᏫᏍᏓᏁᏗ ᎪᏢᏅᏍᎬ ᎠᏕᎳ ᎤᏁᎦ ᎢᎬᏗᏍᎬ. ᎠᏍᎦᏯ ᎤᏩᏎ ᎤᏬᏢᏅ, ᎠᏥᏁᏍᏓ ᏁᎴ
 ᏏᏉᏯ ᏚᏙᎥ ᎤᏬᏪᎶᏗ ᎤᏬᏢᏅᏅ ᎦᎾᏕᎬ. ᎤᏚᎸᎮ ᏚᏙᎥ ᎤᏬᏪᎶᏗ ᏏᏉᏯ. ᎠᏎᏃ Ꮭ ᏯᎦᏔᎮ
@@ -12,6 +13,7 @@
 ᎤᏓᏅᏒ ᎠᎳᏆᎹ ᏗᏝ ᏬᎶᏒᎢ. ᏭᏖᎳᏕ ᏣᎳᎩ ᎠᏂᏲᏍᎩ ᎠᎾᏟᎲ ᎤᎾᏙᏢᏒᎢ. ᎾᎯᏳ
 ᏓᎿᏩ ᎠᏍᏆᎵᏍᎬ ᎤᏕᎳᎰᏎ ᏂᎦᎥ ᎦᎷᎶᎬ ᏣᎳᎩ ᎪᏪᎶᏗ. ᎬᏩᎵᏨ ᎨᎡ ᏙᏧᏁᏅᏒ ᏗᎪᏪᎵ
 ᏧᏃᏪᎳᏅ ᏫᏚᏂᏅᏗ ᎠᎴ ᎤᏃᏪᎶᏗ ᏂᎦᎵᏍᏔᏅᏍᎬᎢ.
+
 ᏓᎿᏩ ᎤᎵᏍᏆᏙᎾ ᎤᎴᏅᎮ ᏙᏳ ᎨᏒ ᏚᎸᏫᏍᏓᏁᎲ ᏕᎪᏢᏍᎬ ᏣᎳᎩ ᏗᎪᏪᎶᏗ. ᎤᎴᏅᎮ
 ᏕᎪᏪᎵᏍᎬ ᏂᎦᎵᏍᏗᏍᎬ ᎦᏁᎬᎢ. ᏁᎵᏍᎪ ᏑᏓᎵ ᎢᏳᏓᎴᎩ ᎦᏁᏍᏗ ᏚᏬᏪᎳᏁᎢ. ᎤᏍᏗ ᎠᎨᏳᏣ
 ᎤᏪᏥ, ᎠᏲᎦ ᏧᏙᎢᏓ, ᎠᎯᏓ ᎤᏕᎶᏆᎡᎢ ᎤᏬᏪᎶᏗ ᏣᎳᎩ. ᎤᏎᎮᎴ ᏔᎵᏁ ᎠᎾᏟᏅᏢ, ᏣᏥ
@@ -19,21 +21,23 @@ Lowery, ᏙᏱᏗᏝ ᏭᏎᎮᎴ ᎤᏪᏅᏍᏗ ᎠᏲᎦ, ᏅᏊ ᏅᏛᏛᏁ
 ᎤᏬᎭᎵᏴᏓ ᏅᏊᎴ ᎤᏛᏛᏁᎢ ᎠᏲᎦ ᎤᎪᎵᏰᏗᎢ. ᎤᏍᏗᏰᏔᏁ ᏣᏥ ᎠᏂᏐᎢ ᏴᏫ ᏧᏎᎮᏗ ᏂᎬᏁᎲ
 ᏕᎪᏪᎵᏍᎬᎢ. ᏁᎳᏚ ᏌᏊᏦᏁ, ᎤᎾᏠᏯᏍᏔᏁ ᏣᎳᎩ ᎠᏰᏟ ᎤᎾᏤᎵ ᎤᏅᏔᏁ ᏗᏣᎳᎩ
 ᏗᎪᏪᎶᏗ.
+
 ᏏᏉᏯ ᏃᏊᎴ ᎤᏓᏅᏎ ᏭᏕᎵᎬ ᏗᏝ, ᏲᏁᎬ ᏙᏧᏙᎥ ᏭᎶᏎᎢ. ᎠᎹᎭ ᎠᎹ ᎦᎶᏗᏍᎨ ᎤᏔᎾ
 ᏧᎳᏍᎩᎢ. ᏳᎧᏲᏌ ᎠᎹ ᎠᏘᏯᏍᎨ ᎠᎹ, ᏃᏊ ᏫᎦᎾᏕᎨᎢ. ᏁᎳᏚ ᏅᎩᏦᏁ ᎤᏕᏘᏴᏌᏗᏒ ᎢᏤ
 ᎢᏦᏓ ᎢᎬᎾᏕᎾ ᏗᏂᎳᏫᎩ ᎤᎾᏓᏡᎬ ᎤᏃᏢᏁ ᎤᏯᏟᏗ. ᎣᏂᏊᏳᏍᏗ ᎤᏅᎪᏤ ᏗᎦᎴᏔᏅ, ᏣᎳᎩ
 ᏧᎴᎯᏌᏅ, ᎤᎿ ᎥᏍᏊ ᎦᏚᎲ. ᏁᎳᏚ-ᏧᏁᎵᏦᏁ ᏣᎦᏟᎶᏍᏔᏅ ᎤᏂᏑᏫᏎ ᏩᏒᏓᏂ ᏩᏂᎦᏛ
 ᏧᏄᎦᏙᏗ ᎨᏥᎢᎸᏍᏗ ᏲᏁᎬ ᎤᎦᎳᎰᎹ ᏗᏝ.
+
 ᎠᏂᏍᏆᏂ ᏗᏁᎲ ᏗᏝ, ᎢᎦᏓ ᎠᏂᏣᎳᎩ ᎤᎿ ᏥᏭᏂᎶᏒ ᏓᏲᎲ ᎪᎱᏍᏗ ᏧᏩᏂ ᏭᏲᎱᏎ ᏁᎳᏚ
 ᏅᏍᎪ ᏦᎢ ᎤᏕᏗᏴᏌᏗᏒᎢ. Ꮭ ᎩᎶ ᏳᏅᏔ ᎤᎿᎢ ᎦᏂᏌᎲᎢ.
 
 == ᎤᏕᏅ ᎠᎴ ᎢᎬᏱ ᎥᎴᏂᏙᎲ ==
-ᎯᎠ ᏗᏙᎳᎩ ᏀᎾᎢ ᎠᎴ ᎢᏳ ᎢᎪᎯ ᏏᏉᏯ ᎤᏤᎵ ᎤᏕᏅ ᎤᎾᏅᏛ, ᎣᏂ ᏧᏩᎫᏛ Ꮭ ᎪᏪᎳᏅᎯ ᎪᏪᎸ ᎬᏂᎨᏒ ᏂᏚᏍᏗ. ᎠᏩᏒᏗᏱ ᎠᎴ ᏄᏍᏗᏓᏅ ᎾᎥᎢ ᎪᏪᎵᏍᎩ ᏀᎾᎢ ᎤᏤᎵ ᎤᏕᏅ ᎾᎾᎢ ᎢᎦᏛ ᎪᏍᏓᏱ ᎠᏰᎵ [[1760]] ᎠᎴ [[1776]]. ᏥᏄᏍᏗ ᎾᏍᎩᎾᎢ ᎤᏤᎵ ᏀᎾᎢ ᎤᏕᏅ, ᎾᏍᎩ ᏥᏄᏍᏛᎩ ᎤᎪᏗᏗ ᏄᏓᎷᎸᎾ ᏀᎾ ᎯᎸᏢ ᎭᏫᎾᏗᏢ ᎯᎠ [[ᎤᎦᎾᏭ Atlantic]] ᎠᎴ [[ᎤᎦᎾᏭ ᎠᏰᎵ]] ᎤᏔᏂᏗ ᎦᏙᎯ ᎯᎠ [[ᏌᏊᎭ ᎧᏃᎮᎭ]]. [[ᏧᏠᎯᏍᏗ Mooney]], ᏧᏓᏃᏣᎵ ᎠᎴ ᎪᏪᎵᏍᎩ ᎯᎠ ᏣᎳᎩ ᏴᏫ, ᎧᏁᎢᏍᏔᏅ ᎪᎱᏍᏗ ᎠᎾᏓᏛᏂ ᎭᏫᎾᏗᏢ ᎧᏁᎬᎢ Ꮎ ᏏᏉᏯ ᎤᏂᏩᏒ ᎤᏤᎵ ᎢᎬᏱ ᏧᏕᏘᏴᏓ ᎬᏙᏗ ᎤᏤᎵ ᎤᏂᏥ ᎭᏫᎾᏗᏢ ᎯᎠ ᎤᏍᏗ ᎦᏚᎲ [[Tuskegee]], ᏖᎾᏏ.
+ᎯᎠ ᏗᏙᎳᎩ ᏀᎾᎢ ᎠᎴ ᎢᏳ ᎢᎪᎯ ᏏᏉᏯ ᎤᏤᎵ ᎤᏕᏅ ᎤᎾᏅᏛ, ᎣᏂ ᏧᏩᎫᏛ Ꮭ ᎪᏪᎳᏅᎯ ᎪᏪᎸ ᎬᏂᎨᏒ ᏂᏚᏍᏗ. ᎠᏩᏒᏗᏱ ᎠᎴ ᏄᏍᏗᏓᏅ ᎾᎥᎢ ᎪᏪᎵᏍᎩ ᏀᎾᎢ ᎤᏤᎵ ᎤᏕᏅ ᎾᎾᎢ ᎢᎦᏛ ᎪᏍᏓᏱ ᎠᏰᎵ 1760 ᎠᎴ 1776. ᏥᏄᏍᏗ ᎾᏍᎩᎾᎢ ᎤᏤᎵ ᏀᎾᎢ ᎤᏕᏅ, ᎾᏍᎩ ᏥᏄᏍᏛᎩ ᎤᎪᏗᏗ ᏄᏓᎷᎸᎾ ᏀᎾ ᎯᎸᏢ ᎭᏫᎾᏗᏢ ᎯᎠ [[ᎤᎦᎾᏭ Atlantic]] ᎠᎴ [[ᎤᎦᎾᏭ ᎠᏰᎵ]] ᎤᏔᏂᏗ ᎦᏙᎯ ᎯᎠ [[ᏌᏊᎭ ᎧᏃᎮᎭ]]. [[ᏧᏠᎯᏍᏗ Mooney]], ᏧᏓᏃᏣᎵ ᎠᎴ ᎪᏪᎵᏍᎩ ᎯᎠ ᏣᎳᎩ ᏴᏫ, ᎧᏁᎢᏍᏔᏅ ᎪᎱᏍᏗ ᎠᎾᏓᏛᏂ ᎭᏫᎾᏗᏢ ᎧᏁᎬᎢ Ꮎ ᏏᏉᏯ ᎤᏂᏩᏒ ᎤᏤᎵ ᎢᎬᏱ ᏧᏕᏘᏴᏓ ᎬᏙᏗ ᎤᏤᎵ ᎤᏂᏥ ᎭᏫᎾᏗᏢ ᎯᎠ ᎤᏍᏗ ᎦᏚᎲ [[Tuskegee]], ᏖᎾᏏ.
 
 ᎯᎠ ᏚᏙᎥ ᏏᏉᏯ ᎠᎴ Sikwâ'yǐ ᎨᏒᎢ ᎤᏬᎯᏳᏅ ᎾᏍᏋ ᏗᎫᎪᏔᏅ ᏂᏛᎴᏅᏓ ᎯᎠ ᏣᎳᎩ ᎧᏁᏨ ᏏᏆ ''ᏏᏆ'' ᎦᏛᎬᎢ '[[ᏏᏆ]]'. ᎪᎯ ᎨᏒᎢ ᎢᏳᏍᏗᏊ ᏩᏎᎸᎯ ᎠᏛᏍᎩ ᎤᏙᏢᏒ ᎠᎴ ᎣᏂᏯᎨᏍᏙᏗ ᎠᏥᏐᏅᏅ Ꮎ ᎠᎦᏍᎦᏂ ᏏᏉᏯ [[ᏰᎵᏆ ᎢᏯᏛᏁᏗ]]. 
 ᎤᏤᎵ ᎤᏂᏥ, ᎾᏍᎩ ᎨᏒᎢ ᎤᎾᏅᏛ Ꮎ ᎾᏍᎩ ᎠᎨᏴ ᏥᏄᏍᏛᎩ ᏣᎳᎩ ᎠᎴ ᎤᏙᏣᎸᏅ ᎯᎠ [[ᎦᎶᏁᏗ ᏧᏂᏴᏫ]]. Mooney ᎧᏃᎮᎭ Ꮎ ᎾᏍᎩ ᎠᎨᏴ ᏥᏄᏍᏛᎩ ᎯᎠ ᎤᏓᏠᎩᏴ ᏣᎳᎩ [[ᎤᎬᏫᏳᎯ]]. ᎤᏤᎵ ᎠᏓᏙᏓ ᏥᏄᏍᏛᎩ ᎢᏳᏍᏗᏊ [[ᎤᏁᎬ]] ᎠᎴ ᎢᎦᏛ-ᎤᏁᎬ ᎠᎴ ᎢᎦᏛ [[ᎾᏰᎯᏯ ᏴᏩᏁᎬ]]. ᏙᏧᏓᎴᏅ ᏚᏓᎴᎿᎥ ᏥᏄᏍᏗ ᎯᎠ ᏗᏙᎳᎩ ᎤᏠᏱ ᏏᏉᏯ ᎤᏤᎵ ᎠᏓᏙᏓ, ᎠᎴ ᎤᎪᏗᏗ (ᎠᏠᏯᏍᏗᏍᎩ Mooney) ᎧᏁᎢᏍᏙᏗ Ꮎ ᎾᏍᎩ ᎠᏍᎦᏯ ᏥᏄᏍᏛᎩ ᏰᎵᏊ ᏱᎩ [[ᎤᏭᏯᏔᏅ ᏓᎾᏘᏍᎩ]] ᎠᎴ ᎯᎠ ᎤᏪᏥ [[Christopher Gist|Christopher ᎠᎴᏂᏙᎲ]], [[ᎠᏯᏩᏍᏗ]] ᎾᏍᎩᎾᎢ [[ᏣᏥ ᏬᏏᏓᏂ]]. 
 
-ᎯᎠ ᏯᏛᎾ ᎤᏙᎯᏳ Ꮎ ᏏᏉᏯ ᏄᏛᏁᎸ ᎾᏍᎩ ᏂᎨᏒᎾ ᎧᏁᎬ [[ᎩᎵᏏ (ᎦᏬᏂᎯᏍᏗ)|ᎩᎵᏏ]] ᎠᎾᏍᎬᏘ ᎾᏍᏋ ᎠᏓᏎᎮᏗ Ꮎ ᎾᏍᎩ ᎠᏍᎦᏯ ᎠᎴ ᎤᏤᎵ ᎤᏂᏥ ᎨᏒᎩ ᏚᏲᏒᎩ ᎾᎥᎢ ᎤᏤᎵ ᎠᏓᏙᏓ. ᎾᎾᎢ ᎢᎦᏛ ᎪᏍᏓᏱ ᎤᏓᎷᎸ [[1809]], ᏏᏉᏯ ᎤᏓᏅᏒ ᎯᎠ [[ᏫᎵ ᎦᏚᎲ]] Alabama. ᏀᎾᎢ ᎾᏍᎩ ᎠᏍᎦᏯ ᎪᏢᏅ ᎤᏤᎵ ᏗᏓᏁᏟᏴᎡᏗ ᏥᏄᏍᏗ ᎠᏕᎸ ᎤᏁᎬ ᎠᏥᏅᏏᏓᏍᏗ. ᎾᏍᎩ ᎠᏍᎦᏯ ᎠᎾᏍᎬᏘ ᎤᎭ ᏚᎾᎵᎸ ᎭᏫᎾᏗᏢ ᎯᎠ [[ᎤᏍᏗ ᎤᏪᏴ ᏓᏄᏩ]] ᎠᏰᎵ [[1813]] ᎠᎴ [[1814]] ᏗᎦᏘᎴᎩ ᎯᎠ [[ᎩᎦᎨ ᎦᎾᏍᏓ]]. ᎢᏳᏃ ᎾᏍᎩ ᎠᏍᎦᏯ ᎭᏫᎾᏗᏢ ᏯᏛᎾ ᎤᏙᎯᏳ ᏥᏄᏍᏛᎩ ᏰᎵᏆ ᎢᏯᏛᏁᏗ, ᎾᏍᎩ ᎨᏒᎢ ᎦᎸᎳᏗᎨᏍᏗ ᏄᏓᎷᎸᎾ Ꮎ ᎾᏍᎩ ᎠᏍᎦᏯ ᏯᏓᎢᏗᏏ ᎤᎭ ᏚᎾᎵᎸ, ᎠᎴ ᎤᏤᎵ ᏅᏏᎾᏒ ᏰᎵᏇ ᎤᎭ ᎢᏧᎳᎭ ᏭᏪᏙᎢ ᏄᎵᏍᏔᏅ ᎯᎠ ᏓᎾᏟᎲ ᎤᏩᏌᏊ.
+ᎯᎠ ᏯᏛᎾ ᎤᏙᎯᏳ Ꮎ ᏏᏉᏯ ᏄᏛᏁᎸ ᎾᏍᎩ ᏂᎨᏒᎾ ᎧᏁᎬ [[ᎩᎵᏏ (ᎦᏬᏂᎯᏍᏗ)|ᎩᎵᏏ]] ᎠᎾᏍᎬᏘ ᎾᏍᏋ ᎠᏓᏎᎮᏗ Ꮎ ᎾᏍᎩ ᎠᏍᎦᏯ ᎠᎴ ᎤᏤᎵ ᎤᏂᏥ ᎨᏒᎩ ᏚᏲᏒᎩ ᎾᎥᎢ ᎤᏤᎵ ᎠᏓᏙᏓ. ᎾᎾᎢ ᎢᎦᏛ ᎪᏍᏓᏱ ᎤᏓᎷᎸ 1809, ᏏᏉᏯ ᎤᏓᏅᏒ ᎯᎠ [[ᏫᎵ ᎦᏚᎲ]] Alabama. ᏀᎾᎢ ᎾᏍᎩ ᎠᏍᎦᏯ ᎪᏢᏅ ᎤᏤᎵ ᏗᏓᏁᏟᏴᎡᏗ ᏥᏄᏍᏗ ᎠᏕᎸ ᎤᏁᎬ ᎠᏥᏅᏏᏓᏍᏗ. ᎾᏍᎩ ᎠᏍᎦᏯ ᎠᎾᏍᎬᏘ ᎤᎭ ᏚᎾᎵᎸ ᎭᏫᎾᏗᏢ ᎯᎠ [[ᎤᏍᏗ ᎤᏪᏴ ᏓᏄᏩ]] ᎠᏰᎵ 1813 ᎠᎴ 1814 ᏗᎦᏘᎴᎩ ᎯᎠ [[ᎩᎦᎨ ᎦᎾᏍᏓ]]. ᎢᏳᏃ ᎾᏍᎩ ᎠᏍᎦᏯ ᎭᏫᎾᏗᏢ ᏯᏛᎾ ᎤᏙᎯᏳ ᏥᏄᏍᏛᎩ ᏰᎵᏆ ᎢᏯᏛᏁᏗ, ᎾᏍᎩ ᎨᏒᎢ ᎦᎸᎳᏗᎨᏍᏗ ᏄᏓᎷᎸᎾ Ꮎ ᎾᏍᎩ ᎠᏍᎦᏯ ᏯᏓᎢᏗᏏ ᎤᎭ ᏚᎾᎵᎸ, ᎠᎴ ᎤᏤᎵ ᏅᏏᎾᏒ ᏰᎵᏇ ᎤᎭ ᎢᏧᎳᎭ ᏭᏪᏙᎢ ᏄᎵᏍᏔᏅ ᎯᎠ ᏓᎾᏟᎲ ᎤᏩᏌᏊ.
 
 == "ᎦᏬᏂᏍᎬ ᏧᎦᎶᎦ" ᎠᎴ ᏣᎳᎩ ᏗᎪᏪᎵ ==
 [[File:Cherokee-syllabary.png|thumb|left|150px|ᏱᏓᏟᎶᏍᏔᏅ ᎠᎦᏓᏅᏖᏗ ᏂᏛᎴᏅᏓ ᏏᏉᏯ ᎤᏤᎵ ᏣᎳᎩ ᏗᎪᏪᎵ. ᎯᎠ ᎢᎬᏱ ᏦᎢ ᎠᎦᏓᏅᏖᏗ ᎢᏧᎳ ᎥᎪᎵᏰᏍᎬ ''ᏣᎳᎩ'' ᎦᏙ ᎤᏍᏗ ᎤᏅᏔᏂᏓᏍᏗ "ᏣᎳᎩ."]]
@@ -41,17 +45,17 @@ Lowery, ᏙᏱᏗᏝ ᏭᏎᎮᎴ ᎤᏪᏅᏍᏗ ᎠᏲᎦ, ᏅᏊ ᏅᏛᏛᏁ
 
 ᎤᎶᏐᏅ ᎠᏁᎶᏗᏍᎩ ᎪᏢᏗ [[ᎠᎦᏓᏅᏖᏗ ᎾᏍᎩᎾᎢ ᎠᏂᏏᏴᏫᎭ ᎧᏁᏨ]], ᏏᏉᏯ ᏚᏭᎪᏔᏅ ᎠᏯᏔᏍᏗ ᎠᏂᏏᏴᏫᎭ ᎧᏁᏨ ᎾᏀᎢ [[ᎩᎶ ᏂᏓᏳᏅᏅ ᎪᏪᎵ]] ᎠᎴ ᎪᏢᏗ ᏌᏊ ᎠᎦᏓᏅᏖᏗ ᎾᏍᎩᎾᎢ ᎠᏂᏏᏴᏫᎭ ᎩᎶ ᏂᏓᏳᏅᏅ ᎪᏪᎵ. ᎤᎵᏍᎨᏛ ᎢᎬᏁᏗ ᎯᎠ [[ᎶᎻ ᏗᎦᎶᏆᏍᏙ]] ᎠᎴ ᎾᎥᏂᎨᏍᏙᏗ ᏰᎵᏊ ᏱᎩ ᎯᎠ [[Cyrillic ᏗᎦᎶᏆᏍᏙ]], ᎾᏍᎩ ᎠᏍᎦᏯ ᎪᏢᏅᎯ 85 [[ᎠᎦᏓᏅᏖᏗ]] ᎢᏯᏓᏛᏁᏗ ᎯᎠ ᏧᏓᎴᏅᏓ ᎩᎶ ᏂᏓᏳᏅᏅ ᎪᏪᎵ. ᎪᎯ ᏗᎦᎸᏫᏍᏓᏁᏗ ᎤᎩᏒᎩ ᏏᏉᏯ 12 ᏧᏕᏘᏴᏓ ᎧᎵᏬᎯ.
 
-ᏀᎾᎢ ᏥᏄᏍᏛᎩ ᎢᎦᏛ ᎤᏝᏏᏛ ᏧᏠᎯᏍᏗ ᎤᏤᎵ ᎾᏍᎩᏴᏫ ᏣᎳᎩ ᏥᏄᏍᏗ ᎯᎠ ᏧᎬᏩᎶᏗᏯ ᎤᏤᎵ ᏣᎳᎩ ᏗᎪᏪᎵ. ᎭᏫᎾᏗᏢ ᎠᏓᏅᏍᏗ ᎪᎯᏳᏙᏗ ᎤᏤᎵ ᏗᏁᏝᎾ, ᏏᏉᏯ ᏚᏕᏲᏅᎩ ᎤᏤᎵ ᎤᏪᏥ ᎠᎨᏴ Ah-yo-Ꭷ ᎯᎳᎪ [[ᎥᎪᎵᏰᏍᎬ]] ᎠᎴ ᎪᏪᎶᏗ ᎭᏫᎾᏗᏢ ᏣᎳᎩ. ᎤᎶᏐᏅ ᎠᏍᏆᏂᎪᎯᏍᏗ ᎾᎥᎢ ᎬᏙᏗ ᎤᏤᎵ ᎢᏤ ᎠᏃᏪᎵᏍᎬ, ᏏᏉᏯ ᎠᏁᎳᏛᏅ ᎬᏂᎨᏒ ᎢᎬᏁᏗ ᎤᏤᎵ ᎠᏓᎪᎾᏛᏙᏗ ᎠᏂᎳᏍᏓᎸ [[ᏅᏬᏘ ᎠᎾᏏᎦᏯ]] ᎾᏍᎩ ᎤᏩᏒ ᎾᏍᏋ ᎠᎵᏖᎸᏗ ᎾᎥᎢ ᎠᏂ ᎾᏍᎩᎾᎢ ᎠᎴᏂᏙᎲ [[ᏄᏩᎾᏅ]] ᎾᎥᎢ ᎤᏐᏅᎢ [[ᎠᏓᏅᏙ]]. ᏏᏉᏯ ᏭᎵᏍᏆᏛ ᎪᎯᏳᏔᏅ ᎤᏤᎵ ᎠᏓᎪᎾᏛᏙᏗ ᎠᏂᏟᏏᏍᎬ [[Chickamaugan]] [[ᏓᏄᏩ ᎠᎾᎵᎯ]]. ᏄᎵᏍᏛ ᏗᏤᎢ ᎯᎠ ᏣᎳᎩ ᏗᎪᏪᎵ ᎠᏰᏍᏛᏗ ᎠᎴ ᎯᎠ ᏣᎳᎩ ᎨᏒᎩ ᎠᎧᎵᎢᎲ [[ᏗᏕᎶᏆᏍᏗ]]ᎭᏫᎾᏗᏢ ᎠᏓᏅᏍᏗ ᎠᏕᎶᏆᏍᏗ ᎯᎠ ᎢᏤ ᎪᏪᎳᏅᎯ ᎦᏬᏂᎯᏍᏗ. ᎾᎥᎢ [[1823]] ᎯᎠ ᏣᎳᎩ ᏗᎪᏪᎵ ᏥᏄᏍᏛᎩ ᎭᏫᎾᏗᏢ ᎧᎵ ᎬᏙᏗ ᎾᎥᎢ ᎯᎠ ᏣᎳᎩ ᎠᏰᎵ ᎤᏙᏢᏒ. ᎯᎠ ᎠᏃᏪᎵᏍᎬ ᎢᏯᏛᏁᎵᏓᏍᏗ ᏥᏄᏍᏛᎩ ᎪᏢᏅᎯ ᎠᏰᎵ ᎤᏒᎧᎵ ᎾᎥᎢ ᎯᎠ ᏣᎳᎩ ᎠᏰᎵ ᎤᏙᏢᏒ ᎭᏫᎾᏗᏢ [[1825]].
+ᏀᎾᎢ ᏥᏄᏍᏛᎩ ᎢᎦᏛ ᎤᏝᏏᏛ ᏧᏠᎯᏍᏗ ᎤᏤᎵ ᎾᏍᎩᏴᏫ ᏣᎳᎩ ᏥᏄᏍᏗ ᎯᎠ ᏧᎬᏩᎶᏗᏯ ᎤᏤᎵ ᏣᎳᎩ ᏗᎪᏪᎵ. ᎭᏫᎾᏗᏢ ᎠᏓᏅᏍᏗ ᎪᎯᏳᏙᏗ ᎤᏤᎵ ᏗᏁᏝᎾ, ᏏᏉᏯ ᏚᏕᏲᏅᎩ ᎤᏤᎵ ᎤᏪᏥ ᎠᎨᏴ ᎠᏲᎧ ᎯᎳᎪ [[ᎥᎪᎵᏰᏍᎬ]] ᎠᎴ ᎪᏪᎶᏗ ᎭᏫᎾᏗᏢ ᏣᎳᎩ. ᎤᎶᏐᏅ ᎠᏍᏆᏂᎪᎯᏍᏗ ᎾᎥᎢ ᎬᏙᏗ ᎤᏤᎵ ᎢᏤ ᎠᏃᏪᎵᏍᎬ, ᏏᏉᏯ ᎠᏁᎳᏛᏅ ᎬᏂᎨᏒ ᎢᎬᏁᏗ ᎤᏤᎵ ᎠᏓᎪᎾᏛᏙᏗ ᎠᏂᎳᏍᏓᎸ [[ᏅᏬᏘ ᎠᎾᏏᎦᏯ]] ᎾᏍᎩ ᎤᏩᏒ ᎾᏍᏋ ᎠᎵᏖᎸᏗ ᎾᎥᎢ ᎠᏂ ᎾᏍᎩᎾᎢ ᎠᎴᏂᏙᎲ [[ᏄᏩᎾᏅ]] ᎾᎥᎢ ᎤᏐᏅᎢ [[ᎠᏓᏅᏙ]]. ᏏᏉᏯ ᏭᎵᏍᏆᏛ ᎪᎯᏳᏔᏅ ᎤᏤᎵ ᎠᏓᎪᎾᏛᏙᏗ ᎠᏂᏟᏏᏍᎬ [[Chickamaugan]] [[ᏓᏄᏩ ᎠᎾᎵᎯ]]. ᏄᎵᏍᏛ ᏗᏤᎢ ᎯᎠ ᏣᎳᎩ ᏗᎪᏪᎵ ᎠᏰᏍᏛᏗ ᎠᎴ ᎯᎠ ᏣᎳᎩ ᎨᏒᎩ ᎠᎧᎵᎢᎲ [[ᏗᏕᎶᏆᏍᏗ]]ᎭᏫᎾᏗᏢ ᎠᏓᏅᏍᏗ ᎠᏕᎶᏆᏍᏗ ᎯᎠ ᎢᏤ ᎪᏪᎳᏅᎯ ᎦᏬᏂᎯᏍᏗ. ᎾᎥᎢ 1823 ᎯᎠ ᏣᎳᎩ ᏗᎪᏪᎵ ᏥᏄᏍᏛᎩ ᎭᏫᎾᏗᏢ ᎧᎵ ᎬᏙᏗ ᎾᎥᎢ ᎯᎠ ᏣᎳᎩ ᎠᏰᎵ ᎤᏙᏢᏒ. ᎯᎠ ᎠᏃᏪᎵᏍᎬ ᎢᏯᏛᏁᎵᏓᏍᏗ ᏥᏄᏍᏛᎩ ᎪᏢᏅᎯ ᎠᏰᎵ ᎤᏒᎧᎵ ᎾᎥᎢ ᎯᎠ ᏣᎳᎩ ᎠᏰᎵ ᎤᏙᏢᏒ ᎭᏫᎾᏗᏢ 1825.
 
 == ᎥᎴᏂᏙᎲ ᎭᏫᎾᏗᏢ ᏲᏩᏁᎬ ᎠᎴ ᎤᏗᏗᏢ ᏭᏕᎵᎬ ==
-ᎤᎶᏐᏅ ᎯᎠ ᎪᎯᏳᏙᏗ ᎤᏤᎵ ᏣᎳᎩ ᏗᎪᏪᎵ ᎾᎥᎢ ᎯᎠ ᎠᏰᎵ ᎤᏙᏢᏒ ᎭᏫᎾᏗᏢ 1825, ᏏᏉᏯ ᎠᎢᏒᎩ ᎯᎠ ᎢᏤ ᏣᎳᎩ ᏀᎾ ᎨᏒ ᎭᏫᎾᏗᏢ [[ᏲᏩᏁᎬ]]. ᏀᎾᎢ ᎾᏍᎩ ᎠᏍᎦᏯ ᎠᏫᏒᏗ ᎦᎸᎳᏗᏢ [[ᎪᏢᏅᎥᏍᎩ]] ᏗᎦᎸᏫᏍᏓᏁᏗ ᎠᎴ ᎠᎹ ᏧᏂᎸᏫᏍᏓᏁᏗ. ᎾᏍᎩ ᎠᏍᎦᏯ ᎤᎵᏱᎸᏛ ᏕᏕᏲᏗ ᎯᎠ ᏣᎳᎩ ᏗᎪᏪᎵ ᎾᏂᎥᏇ ᎦᎪ ᎤᎷᏨᎩ ᎾᏍᎩ ᎠᏍᎦᏯ. ᎭᏫᎾᏗᏢ [[1828]], ᏏᏉᏯ ᎥᎢᏒᎢ [[ᏬᏏᏓᏂ, D.C.]] ᏥᏄᏍᏗ ᎢᎦᏛ [[ᎦᏅᏍᎨᏂ]] ᏗᏓᏁᏤᏗ ᎧᏃᎮᏛ ᏓᏠᎯᏍᏛ ᎾᏍᎩᎾᎢ ᎦᏙᎯ ᎭᏫᎾᏗᏢ [[ᎣᎦᎳᎰᎻ]]. 
+ᎤᎶᏐᏅ ᎯᎠ ᎪᎯᏳᏙᏗ ᎤᏤᎵ ᏣᎳᎩ ᏗᎪᏪᎵ ᎾᎥᎢ ᎯᎠ ᎠᏰᎵ ᎤᏙᏢᏒ ᎭᏫᎾᏗᏢ 1825, ᏏᏉᏯ ᎠᎢᏒᎩ ᎯᎠ ᎢᏤ ᏣᎳᎩ ᏀᎾ ᎨᏒ ᎭᏫᎾᏗᏢ [[ᏲᏩᏁᎬ]]. ᏀᎾᎢ ᎾᏍᎩ ᎠᏍᎦᏯ ᎠᏫᏒᏗ ᎦᎸᎳᏗᏢ [[ᎪᏢᏅᎥᏍᎩ]] ᏗᎦᎸᏫᏍᏓᏁᏗ ᎠᎴ ᎠᎹ ᏧᏂᎸᏫᏍᏓᏁᏗ. ᎾᏍᎩ ᎠᏍᎦᏯ ᎤᎵᏱᎸᏛ ᏕᏕᏲᏗ ᎯᎠ ᏣᎳᎩ ᏗᎪᏪᎵ ᎾᏂᎥᏇ ᎦᎪ ᎤᎷᏨᎩ ᎾᏍᎩ ᎠᏍᎦᏯ. ᎭᏫᎾᏗᏢ 1828, ᏏᏉᏯ ᎥᎢᏒᎢ [[ᏬᏏᏓᏂ, D.C.]] ᏥᏄᏍᏗ ᎢᎦᏛ [[ᎦᏅᏍᎨᏂ]] ᏗᏓᏁᏤᏗ ᎧᏃᎮᏛ ᏓᏠᎯᏍᏛ ᎾᏍᎩᎾᎢ ᎦᏙᎯ ᎭᏫᎾᏗᏢ [[ᎣᎦᎳᎰᎻ]]. 
 
-ᎤᏤᎵ ᎠᏁᎳᏗᏍᏗ ᎠᏲᎸᎯ ᎾᏍᎩ ᎠᏍᎦᏯ ᎾᏀᎢ ᏚᏓᏂᏴᏒ ᎬᏙᏗ ᏗᏂᎳᏫᎩ ᏐᎢ ᎾᏰᎯᏯ ᏴᏩᏁᎬ ᎠᏂᎳᏍᏓᎸ ᏂᏛᎴᏅᏓ ᏴᏩᏚᏫᏛ ᎯᎠ ᎠᏰᎵ ᎤᏙᏢᏒ. ᎬᏙᏗ ᎾᏍᎩ ᎯᎠ ᏓᎾᏠᏍᎦ ᎾᏍᎩ ᎠᏍᎦᏯ ᏚᏭᎪᏔᏅ ᎪᏢᏗ ᏣᎳᎩ ᏗᎪᏪᎵ ᎾᏍᎩᎾᎢ ᎢᎬᏩᎾᏓᎴᎩ ᎬᏙᏗ ᏄᎾᏛᏅ ᏂᎦᏛ ᎾᏰᎯᏯ ᏴᏩᏁᎬ ᎠᏂᎳᏍᏓᎸ. ᎬᏙᏗ ᎪᎯ ᎭᏫᎾᏗᏢ ᎣᏓᏅᏛ, ᏏᏉᏯ ᎤᎴᏅᎲ ᎥᎢᏒᎢ ᎡᏍᎦᏂ ᎡᏙᎠ ᎢᎦ [[Arizona]] ᎠᎴ [[ᎢᏤ Mexico]] ᎤᎪᎲᎢ ᎠᏂᎳᏍᏓᎸ ᏀᎾᎢ. 
+ᎤᏤᎵ ᎠᏁᎳᏗᏍᏗ ᎠᏲᎸᎯ ᎾᏍᎩ ᎠᏍᎦᏯ ᎾᏀᎢ ᏚᏓᏂᏴᏒ ᎬᏙᏗ ᏗᏂᎳᏫᎩ ᏐᎢ ᎾᏰᎯᏯ ᏴᏩᏁᎬ ᎠᏂᎳᏍᏓᎸ ᏂᏛᎴᏅᏓ ᏴᏩᏚᏫᏛ ᎯᎠ ᎠᏰᎵ ᎤᏙᏢᏒ. ᎬᏙᏗ ᎾᏍᎩ ᎯᎠ ᏓᎾᏠᏍᎦ ᎾᏍᎩ ᎠᏍᎦᏯ ᏚᏭᎪᏔᏅ ᎪᏢᏗ ᏣᎳᎩ ᏗᎪᏪᎵ ᎾᏍᎩᎾᎢ ᎢᎬᏩᎾᏓᎴᎩ ᎬᏙᏗ ᏄᎾᏛᏅ ᏂᎦᏛ ᎾᏰᎯᏯ ᏴᏩᏁᎬ ᎠᏂᎳᏍᏓᎸ. ᎬᏙᏗ ᎪᎯ ᎭᏫᎾᏗᏢ ᎣᏓᏅᏛ, ᏏᏉᏯ ᎤᎴᏅᎲ ᎥᎢᏒᎢ ᎡᏍᎦᏂ ᎡᏙᎠ ᎢᎦ [[ᎡᏩᏐᎾ]] ᎠᎴ [[ᏍᏆᏂᏤᏍᏛᎢ]] ᎤᎪᎲᎢ ᎠᏂᎳᏍᏓᎸ ᏀᎾᎢ. 
 
-ᎭᏫᎾᏗᏢ ᎦᏟᏐᏗᎩ, ᏏᏉᏯ ᎠᏍᎩᏓᏒᎯ ᎥᎪᏩᏘᏍᎬ ᎯᎠ ᎡᏆ ᏣᎳᎩ ᎠᏰᎵ ᎤᏙᏢᏒ ᎠᎵᎪᏗ. ᎾᏍᎩ ᏥᏄᏍᏛᎩ ᏀᎾ ᎠᏁᎳᏗᏍᏗ ᎤᎪᎲᎢ ᏣᎳᎩ ᎦᎪ ᎠᏰᎲ ᎤᏓᏅᏒ [[Mexico]] Ꮎ ᎾᏍᎩ ᎠᏍᎦᏯ ᎤᏲᎱᏒ ᎠᏰᎵ 1843 ᎠᎴ 1845.
+ᎭᏫᎾᏗᏢ ᎦᏟᏐᏗᎩ, ᏏᏉᏯ ᎠᏍᎩᏓᏒᎯ ᎥᎪᏩᏘᏍᎬ ᎯᎠ ᎡᏆ ᏣᎳᎩ ᎠᏰᎵ ᎤᏙᏢᏒ ᎠᎵᎪᏗ. ᎾᏍᎩ ᏥᏄᏍᏛᎩ ᏀᎾ ᎠᏁᎳᏗᏍᏗ ᎤᎪᎲᎢ ᏣᎳᎩ ᎦᎪ ᎠᏰᎲ ᎤᏓᏅᏒ [[ᎠᏂᏍᏆᏂᎢ]] Ꮎ ᎾᏍᎩ ᎠᏍᎦᏯ ᎤᏲᎱᏒ ᎠᏰᎵ 1843 ᎠᎴ 1845.
 
 == ᏏᏉᏯ ᎤᏤᎵ ᏓᎪᏍᎬ ==
-* ᎯᎠ ᏚᏙᎥ ᎯᎠ ᏍᎦᏚᎩ ᎭᏢᏃ ᏏᏉᏯ ᎠᏰᎲ ᎠᎴᏂᏙᎸ ᎭᏫᎾᏗᏢ ᎣᎦᎳᎰᎻ ᏥᏄᏍᏛᎩ ᎦᏁᏟᏴᏓ ᏏᏉᏯ ᏍᎦᏚᎩ ᎭᏫᎾᏗᏢ [[1851]]. ᎯᎳᎪ ᎢᏳ ᎣᎦᎳᎰᎻ ᏥᏄᏍᏛᎩ ᎤᏬᎯᏳᏔᏅ ᎯᎠ ᏗᏌᏊ ᎤᎾᎵᎪᎯ, Ꮎ ᎡᏍᎦᏂ ᎠᏓᏁᏟᏴᏍᏗ ᎤᎾᏅᏛ ᏥᏄᏍᏗ [[Sequoyah County|ᏏᏉᏯ ᏍᎦᏚᎩ]].
+* ᎯᎠ ᏚᏙᎥ ᎯᎠ ᏍᎦᏚᎩ ᎭᏢᏃ ᏏᏉᏯ ᎠᏰᎲ ᎠᎴᏂᏙᎸ ᎭᏫᎾᏗᏢ ᎣᎦᎳᎰᎻ ᏥᏄᏍᏛᎩ ᎦᏁᏟᏴᏓ ᏏᏉᏯ ᏍᎦᏚᎩ ᎭᏫᎾᏗᏢ 1851. ᎯᎳᎪ ᎢᏳ ᎣᎦᎳᎰᎻ ᏥᏄᏍᏛᎩ ᎤᏬᎯᏳᏔᏅ ᎯᎠ ᏗᏌᏊ ᎤᎾᎵᎪᎯ, Ꮎ ᎡᏍᎦᏂ ᎠᏓᏁᏟᏴᏍᏗ ᎤᎾᏅᏛ ᏥᏄᏍᏗ [[Sequoyah County|ᏏᏉᏯ ᏍᎦᏚᎩ]].
 * ᎯᎠ [[Sequoia]] ᏡᎬ ᎨᏒᎢ ᏂᎦᎥᏊ ᏁᎵᏒ ᎾᏍᏋ ᏓᎪᎥᎩ ᎤᎶᏐᏅ ᎾᏍᎩ ᎠᏍᎦᏯ (ᎠᎪᏩᏛᏗ, ᎾᏍᎩᎾᎢ ᏄᎵᏍᏛ, ᎯᎠ [[OED]]). ᎢᎦᏛ ᏩᎶᎠ ᎤᎭ ᎤᏂᎦᏛᎲᏍᎩ ᎪᎯ ᎠᏆᏤᎵ ᎠᏛᏗ {{verify source}}.
 * ᎯᎠ ᎧᏁᎢᏍᏔᏅ [[State of Sequoyah|ᎤᏔᏂᏗ ᎦᏙᎯ ᏏᏉᏯ]] ᏥᏄᏍᏛᎩ ᏓᎪᎥᎩ ᎭᏫᎾᏗᏢ ᎤᏤᎵ ᎠᏥᎸᏉᏗ.
 * [[Sequoyah High School (Oklahoma)|ᏏᏉᏯ ᎦᎸᎳᏗ ᏗᏕᎶᏆᏍᏗ (ᎣᎦᎳᎰᎻ)]] ᎨᏒᎢ ᎾᏰᎯᏯ ᏴᏩᏁᎬ ᎠᏥᏍᏆᏂᎪᏛ ᏗᏕᎶᏆᏍᏗ ᏓᎪᎥᎩ ᎤᎶᏐᏅ ᎯᎠ ᎪᎷᏩᏛᏗ ᎯᎠ ᏣᎳᎩ ᏣᎳᎩ ᏗᎪᏪᎵ. hii
@@ -59,20 +63,17 @@ Lowery, ᏙᏱᏗᏝ ᏭᏎᎮᎴ ᎤᏪᏅᏍᏗ ᎠᏲᎦ, ᏅᏊ ᏅᏛᏛᏁ
 
 == ᎤᏓᏎᎦᏤᏗ ᏗᏕᎬᏔᏛ ==
 * [http://library.wcu.edu/CherokeePhoenix/Vol1/no24/pg2col1a-2a.htm Invention of the Cherokee Alphabet] ᎦᎴᏴᏔᏅᎯ ᎭᏫᎾᏗᏢ ᎯᎠ ''ᏣᎳᎩ ᏧᎴᎯᏌᏅᎯ''
-* [http://digital.library.okstate.edu/chronicles/v008/v008p149.html The Life and Work of Sequoyah; ''Chronicles of Oklahoma'']
-* [http://www.georgiaencyclopedia.org/nge/Article.jsp?id=h-618&sug=y Sequoyah] (ᎢᏤ Georgia ᎥᎦᏔᎲᎢ)
+* [http://digital.library.okstate.edu/chronicles/v008/v008p149.html The Life and Work of Sequoyah; ''Chronicles of ᎣᎦᎳᎰᎹ'']
+* [http://www.georgiaencyclopedia.org/nge/Article.jsp?id=h-618&sug=y Sequoyah] (ᎢᏤ ᏣᏥᏱ ᎥᎦᏔᎲᎢ)
 * [http://digital.library.okstate.edu/Chronicles/v015/v015p003.html The Father of Sequoyah: Nathaniel Gist; ''Chronicles of Oklahoma'']
 * [http://www.tiro.com/syllabics/Cherokee/Sequoyah.html Sequoyah] ᏂᏛᎴᏅᏓ Tiro ᏗᎦᎪᏗ ᏧᏂᎸᏫᏍᏓᏁᏗ
-* [http://ngeorgia.com/people/sequoyah.html Sequoyah (aka George Gist), a North Georgia Notable]
-* [http://www.cherokee.org The Cherokee Nation]
+* [http://ngeorgia.com/people/sequoyah.html Sequoyah (aka George Gist), a ᏧᏴᏢ ᏣᏥᏱ Notable]
+* [http://www.cherokee.org ᏣᎳᎩᎯ ᎠᎹᏰᎵ]
 * [http://www.cherokee.org/home.aspx?section=culture&culture=dldisplay&ID=NJ1eYu1xTrA= The Official Cherokee Font (not Unicode-compatible)]
 
 [[Category:1767 births]]
 [[Category:1843 ᏗᏲᎱᎯᏍᏗ]]
 [[Category:ᎠᏂᏣᎳᎩ]]
-[[Category:People with disabilities]]
-[[Category:Inventors of writing systems]]
-[[Category:Chronicles of Oklahoma citations]]
 
 [[ca:Sequoyah]]
 [[da:Sequoyah]]
