translating place names

--- a/ᎤᏪᏴᎢ.mw
+++ b/ᎤᏪᏴᎢ.mw
@@ -72,12 +72,11 @@
 
 == Watersheds ==
 
-ᎯᎠ ᏂᎦᏛ ᎠᏟᏍᏙᏗ ᎠᏚᎳᏗ ᎾᎥᎢ ᎯᎠ ᎤᏪᏴᎢ ᎨᏒᎢ termed ᎯᎠ ''[[drainage basin|watershed]]''.  ᏂᎦᎥᎢ watershed ᎨᏒᎢ ᎪᏢᏅᎯ ᎦᎸᎳᏗᏢ ᎠᏂᎦᏲᎵ watersheds, ᎾᎯᏳᎢ ᎤᎪᏗᏗ watersheds ᎠᎴ ᎢᎦᏛᎭ ᎡᏆᎯᎨᏍᏙᏗ watersheds.  ᎾᏍᎩᎾᎢ ᏄᎵᏍᏛ, ᎯᎠ [[Continental Divide|ᎦᏙᎯ ᎠᏯᏔᏍᏗ]] ᎭᏫᎾᏗᏢ [[North America|ᎤᏴᏢ ᎠᎺᎵᎨ]] ᎠᏯᏔᏍᏗ ᎯᎠ [[Atlantic Ocean|Atlantic ᎠᎺᏉᎯ]] watershed ᏂᏛᎴᏅᏓ ᎯᎠ [[Pacific Ocean|ᎡᎷᏪᎢ ᎠᎺᏉᎯ]] watershed, ᎠᎴ ᎯᎠ Atlantic ᎠᎺᏉᎯ watershed ᎠᎾᏍᎬᏘ ᎾᏍᏋ ᎢᎬᏱ uniyatolv ᎾᎾᎯ ᎯᎠ Atlantic ᎠᎺᏉᎯ ᎢᏳᏍᏗ ᎧᏃᎮᏗ ᎠᎴ ᎯᎠ [[Gulf of Mexico|ᏰᎵ ᎤᏝᏅᏛ  Mexico]] ᎢᏳᏍᏗ ᎧᏃᎮᏗ.  ᎪᎯ ᎢᏯᏓᏛᏁᎸ ᎭᏫᏂᏗᏢ ᎯᎠ [[United States|ᎠᏫᏒᏗ ᎧᏃᎮᎭ]] ᎨᏒᎢ termed ᎯᎠ [[Eastern Continental Divide|ᎧᎸᎬᎢᏗᏢ ᎦᏙᎯ ᎠᏯᏔᏍᏗ]].  ᎯᎠ ᏰᎵ ᎤᏝᏅᏛ Mexico watershed ᎠᎾᏍᎬᏘ ᎾᏍᏋ uniyatolv ᎾᎾᎯ [[Mississippi River|Mississippi ᎤᏪᏴ]] ᎠᏟᏍᏙᏗ ᎠᎴ ᏎᏍᏗ ᎠᏂᎦᏲᎵ watersheds, ᏯᏛᎿ ᏥᏄᏍᏗ ᎯᎠ [[Tombigbee River|Tombigbee ᎤᏪᏴ]] watershed.
+ᎯᎠ ᏂᎦᏛ ᎠᏟᏍᏙᏗ ᎠᏚᎳᏗ ᎾᎥᎢ ᎯᎠ ᎤᏪᏴᎢ ᎨᏒᎢ termed ᎯᎠ ''[[drainage basin|watershed]]''.  ᏂᎦᎥᎢ watershed ᎨᏒᎢ ᎪᏢᏅᎯ ᎦᎸᎳᏗᏢ ᎠᏂᎦᏲᎵ watersheds, ᎾᎯᏳᎢ ᎤᎪᏗᏗ watersheds ᎠᎴ ᎢᎦᏛᎭ ᎡᏆᎯᎨᏍᏙᏗ watersheds.  ᎾᏍᎩᎾᎢ ᏄᎵᏍᏛ, ᎯᎠ [[Continental Divide|ᎦᏙᎯ ᎠᏯᏔᏍᏗ]] ᎭᏫᎾᏗᏢ [[North America|ᎤᏴᏢ ᎠᎺᎵᎨ]] ᎠᏯᏔᏍᏗ ᎯᎠ [[Atlantic Ocean|Atlantic ᎠᎺᏉᎯ]] watershed ᏂᏛᎴᏅᏓ ᎯᎠ [[Pacific Ocean|ᎡᎷᏪᎢ ᎠᎺᏉᎯ]] watershed, ᎠᎴ ᎯᎠ Atlantic ᎠᎺᏉᎯ watershed ᎠᎾᏍᎬᏘ ᎾᏍᏋ ᎢᎬᏱ uniyatolv ᎾᎾᎯ ᎯᎠ Atlantic ᎠᎺᏉᎯ ᎢᏳᏍᏗ ᎧᏃᎮᏗ ᎠᎴ ᎯᎠ [[ᏰᎵ ᎤᏝᏅᏛ ᎠᏂᏍᏆᏂᎢ]] ᎢᏳᏍᏗ ᎧᏃᎮᏗ.  ᎪᎯ ᎢᏯᏓᏛᏁᎸ ᎭᏫᏂᏗᏢ ᎯᎠ [[ᎠᎹᏰᎵ]] ᎨᏒᎢ termed ᎯᎠ [[Eastern Continental Divide|ᎧᎸᎬᎢᏗᏢ ᎦᏙᎯ ᎠᏯᏔᏍᏗ]].  ᎯᎠ ᏰᎵ ᎤᏝᏅᏛ ᎠᏂᏍᏆᏂᎢ watershed ᎠᎾᏍᎬᏘ ᎾᏍᏋ uniyatolv ᎾᎾᎯ [[Mississippi River|Mississippi ᎤᏪᏴ]] ᎠᏟᏍᏙᏗ ᎠᎴ ᏎᏍᏗ ᎠᏂᎦᏲᎵ watersheds, ᏯᏛᎿ ᏥᏄᏍᏗ ᎯᎠ [[Tombigbee River|Tombigbee ᎤᏪᏴ]] watershed.
 
 ᎯᎠ Mississippi ᎤᏪᏴ watershed ᎠᏠᏯᏍᏗ ᎯᎠ [[Ohio River|Ohio ᎤᏪᏴ]] watershed, ᎦᏙ ᎤᏍᏗ ᎭᏫᎾᏗᏢ ᎠᎦᏔᎲᏍᏗ ᎠᏠᏯᏍᏗ ᎯᎠ [[Kentucky River|ᎪᎾᏓ ᎩᎦᎭᎢ ᎤᏪᏴ]] watershed, ᎠᎴ ᎾᏍᎩ ᎢᎬᏂᏏᏍᎩ ᎦᏌᏙᏯᏍᏗ.
 
 == ᎠᎪᏩᏛᏗ ᎾᏍᎩ ᎾᏍᏇ ==
-
 * [[Bayou|ᎥᏓᎵ]]
 * [[Lotic System Ecology|Lotic iyahdvnelidasdi ᎤᎾᏙᏢᎯ]]
 * [[Chalk stream|ᎦᏙᎯ ᎤᏪᏴᎢ]]
