--- a/ᏧᎵᏍᏓᎾᎵ.mw
+++ b/ᏧᎵᏍᏓᎾᎵ.mw
@@ -48,7 +48,7 @@
 
 ᏧᎵᏍᏓᎾᎵ ᎠᏓᏣᎸᏗ superorder ᎤᏯᏅᎲ ᎯᎠ [[Ostariophysi]], ᎦᏙ ᎤᏍᏗ ᎾᏍᎩ ᎾᏍᏇ ᎠᏠᏯᏍᏗ ᎯᎠ [[Cypriniformes]], [[Characiformes]], ᎠᎴ [[Gymnotiformes]] (ᎾᏍᎩ ᎤᏁᎳᎩ ᎢᎦᏛ ᎾᎿᎢ Gymnotiformes ᏥᏄᏍᏗ ᎠᏂᎦᏲᎵ-ᎠᏓᏅᏍᏗ Siluriformes). [[As of 2005|ᏥᏄᏍᏗ  2005]] ᎾᎿᎢ ᎠᎴ 37 ᏧᎵᏍᏓᎾᎵ ᎯᎸᏍᎩ ᎢᏯᏓᏁᎸ, ᎠᎴ yvwatuwidv 2000 ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ ᎤᎭ ᏭᏪᏙᎢ ᏄᏍᏛ ᎧᏃᎮᎸ, ᎾᏍᎩ ᎤᏁᎳᎩ ᎪᎯ ᏎᏍᏗ ᎨᏒᎢ ᎭᏫᎾᏗᏢ ᏂᎪᎯᎸ ᎤᏍᏉᎳᏗᏍᎬ ᎤᏍᏆᎸᎲ [[taxonomy|taxonomic]] ᏗᎦᎸᏫᏍᏓᏁᏗ ᎾᎿ ᎯᎠ ᎠᏓᏅᏍᏗ. 
 
-ᎭᏫᎾᏗᏢ ᏕᎭᎷᏱ, [[2005]], researchers ᏓᎪᎥᎩ ᎯᎠ 37th ᏏᏓᏁᎸᎯ ᏧᎵᏍᏓᎾᎵ, Lacantuniidae, ᎾᏍᎩ ᎤᏩᏒ ᎯᎠ ᏦᎢᏁ ᎢᏤ ᏏᏓᏁᎸᎯ ᎠᏣᏗ ᎠᏥᎸᏉᏗ ᎭᏫᎾᏗᏢ ᎯᎠ ᎣᏂ 70 ᏧᏕᏘᏴᏓ (ᎠᏂᏐᎢ ᎠᎴᏂᏙᎲ ᎯᎠ [[coelacanth]] ᎭᏫᎾᏗᏢ [[1938]] ᎠᎴ ᎯᎠ [[megamouth shark|megamouth ᎠᏯᏍᏔ]] ᎭᏫᎾᏗᏢ [[1983]]). ᎯᎠ ᎢᏤ ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ ᎭᏫᎾᏗᏢ [[Lacantuniidae]], ''[[Lacantunia enigmatica]]'', ᏥᏄᏍᏛᎩ ᎠᏩᏛᏗ ᎭᏫᎾᏗᏢ ᎯᎠ [[Lacantun river|Lacantun ᎤᏪᏴ]] ᎭᏫᎾᏗᏢ [[Chiapas, Mexico]].
+ᎭᏫᎾᏗᏢ ᏕᎭᎷᏱ, [[2005]], researchers ᏓᎪᎥᎩ ᎯᎠ 37th ᏏᏓᏁᎸᎯ ᏧᎵᏍᏓᎾᎵ, Lacantuniidae, ᎾᏍᎩ ᎤᏩᏒ ᎯᎠ ᏦᎢᏁ ᎢᏤ ᏏᏓᏁᎸᎯ ᎠᏣᏗ ᎠᏥᎸᏉᏗ ᎭᏫᎾᏗᏢ ᎯᎠ ᎣᏂ 70 ᏧᏕᏘᏴᏓ (ᎠᏂᏐᎢ ᎠᎴᏂᏙᎲ ᎯᎠ [[coelacanth]] ᎭᏫᎾᏗᏢ [[1938]] ᎠᎴ ᎯᎠ [[megamouth shark|megamouth ᎠᏯᏍᏔ]] ᎭᏫᎾᏗᏢ [[1983]]). ᎯᎠ ᎢᏤ ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ ᎭᏫᎾᏗᏢ [[Lacantuniidae]], ''[[Lacantunia enigmatica]]'', ᏥᏄᏍᏛᎩ ᎠᏩᏛᏗ ᎭᏫᎾᏗᏢ ᎯᎠ [[Lacantun river|Lacantun ᎤᏪᏴ]] ᎭᏫᎾᏗᏢ [[Chiapas]], [[ᎠᏂᏍᏆᏂᎢ]].
 
 ᏧᎵᏍᏓᎾᎵ ᎤᎭ Ꮭ [[scale (zoology)|ᏗᎦᏛᏗ]]. ᏂᎦᏛ ᏧᎵᏍᏓᎾᎵ, ᎾᏍᎩ ᎤᏩᏒ ᎠᏁᎳ [[Malapteruridae]] (ᎠᎾᎦᎵᏍᎩ ᏧᎵᏍᏓᎾᎵ), ᏄᏩᎿᏅ ᎤᎳᏂᎩᏓ, ᎤᏒᏙᏂ, bonified ᏓᏓᏘᏂᏒ ᎠᏨᏍᏛ ᎾᎿ ᎤᎾᏤᎵ [[dorsal fin|ᎣᏂᏗᏢ]] ᎠᎴ [[pectoral fin|pectoral ᎠᏂᎩᏍᏗ ᏥᏳ]], ᏗᎬᏩᎶᏒ ᎦᏙ ᎤᏍᏗ ᏄᏍᏛ ᎠᎩᏍᏗ [[protein|ᏤᎵ]] ᏰᎵᏇ ᎾᏍᏋ ᏩᏅᎯ ᎢᏳᏃ ᎯᎠ ᎠᏣᏗ ᎨᏒᎢ irritated. ᎭᏫᎾᏗᏢ ᎠᏁᎳ ᎯᎠ ᏏᏓᏁᎸᎯ [[Plotosidae]], ᎠᎴ ᎯᎠ ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ [[Heteropneustes]], ᎪᎯ ᏤᎵ ᎨᏒᎢ ᎾᏍᎩ ᎢᎬᏂᏏᏍᎩ ᎤᎳᏂᎩᏓ ᎾᏍᎩ ᎠᎾᏍᎬᏘ hospitalize ᎠᏂᏴᏫ ᎡᏍᎦ ᎢᏳᎵᏍᏓᏁᎯ ᏰᎵᏊ ᎠᎩᏍᏗ ᎠᏓᏨᏯᏍᎩ.
 
