translating some place names

--- a/ᏗᎦᎭᎵ.mw
+++ b/ᏗᎦᎭᎵ.mw
@@ -16,15 +16,15 @@
 Many, see [[Lizard#Classification|ᏓᎵᏍᏛ]].
 }}
 
-'''ᏗᎦᎭᎵ''' ᎠᎴ [[reptile|gantlai]]ᎯᎠ ᎠᏓᏅᏍᏗ [[Squamata]], ᎦᏙ ᎤᏍᏗ ᎤᏅᏌ ᎠᏓᏲᏔᎡᏗ ᎬᏙᏗ ᎯᎠ [[snake|ᎢᎾᏛ]](Ophidians). ᎤᏅᏌ ᎠᎴ ᎤᏠᏱᎭ ᏅᎩ-ᎠᏗᏌᏓᏗᏍᏗ, ᎬᏙᏗ ᎤᏓᏎᎦᏤᏗ ᎦᎴᏂ ᏚᎵᏍᏚᎢᏒ ᎠᎴ ᎠᏌᎳᏙᏗ eyelids.  ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ ᎠᏍᏓᏅᏅ ᎭᏫᎾᏗᏢ ᎤᏔᎾ ᏂᎦᏅᎯᏒ ᏂᏛᎴᏅᏓ ᎦᏲᎵ centimeters (ᎢᎦᏛ [[Caribbean Sea|Caribbean]] [[gecko]]) ᎾᎥᏂᎨᏍᏗ ᏦᎢ ᎠᏎᎯᎯ ([[Komodo dragon|Komodo ᏓᎦᏘᎴᎬ]]).
+'''ᏗᎦᎭᎵ''' ᎠᎴ [[reptile|ᎦᏂᏝᎢ]] ᎯᎠ ᎠᏓᏅᏍᏗ [[ᏍᏆᏅᏔ]], ᎦᏙ ᎤᏍᏗ ᎤᏅᏌ ᎠᏓᏲᏔᎡᏗ ᎬᏙᏗ ᎯᎠ [[snake|ᎢᎾᏛ]](Ophidians). ᎤᏅᏌ ᎠᎴ ᎤᏠᏱᎭ ᏅᎩ-ᎠᏗᏌᏓᏗᏍᏗ, ᎬᏙᏗ ᎤᏓᏎᎦᏤᏗ ᎦᎴᏂ ᏚᎵᏍᏚᎢᏒ ᎠᎴ ᎠᏌᎳᏙᏗ eyelids.  ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ ᎠᏍᏓᏅᏅ ᎭᏫᎾᏗᏢ ᎤᏔᎾ ᏂᎦᏅᎯᏒ ᏂᏛᎴᏅᏓ ᎦᏲᎵ centimeters (ᎢᎦᏛ [[Caribbean Sea|Caribbean]] [[gecko]]) ᎾᎥᏂᎨᏍᏗ ᏦᎢ ᎠᏎᎯᎯ ([[Komodo dragon|ᎪᎼᏙ ᏓᎦᏘᎴᎬ]]).
 
 ᎢᎦᏛ ᏗᎦᎭᎵ ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ ᎤᏯᏅᎲ "[[glass snake|ᎠᏓᎨᏗ ᎢᎾᏛ]]"  ᎠᎴ "[[glass lizard|ᎠᏓᎨᏗ ᏗᎦᎭᎵ]]" ᎤᎭ Ꮭ ᏗᎦᎸᏫᏍᏓᏁᏗ ᏗᏂᏅᏍᎨᏂ, ᎤᏁᎳᎩ ᎾᏍᎩ ᎾᏍᏊ ᎾᎿᎢ ᎠᎴ ᎢᎦᏛ ᎢᎦᎢ skeletal ᎦᏅᏍᎨᏂ ᎠᏛᎯᏍᏙᏗ.  ᎤᏅᏌ ᎠᎴ ᎠᏥᎸᏉᏗ ᏂᏛᎴᏅᏓ ᎤᏙᎯᏳ ᎢᎾᏛ ᎾᎥᎢ ᎯᎠ ᎡᏙᎲᎩ eyelids ᎠᎴ ᏗᎦᎴᏂ.  ᎯᎠ ᎦᏂᏓᏛ ᎠᏓᎨᏗ ᏗᎦᎭᎵ, ᎾᏍᎩᏯᎢ ᎤᎪᏗᏗ ᏐᎢ ᏗᎦᎭᎵ, ᏫᎵ ᎠᏍᏆᎵᏍᏗ ᎤᏣᏘᎾ ᏥᏄᏍᏗ ᎤᎵᏍᏕᎸᏗ ᎪᎱᏍᏗ ᎬᏔᏂᏓᏍᏗ, ᏧᏓᎴᎿᎢ ᎢᎾᏛ.
 
 ᎤᎪᏗᏗ ᏗᎦᎭᎵ ᏰᎵᏇ ᏧᎾᏍᏗ ᏗᎧᏃᏗ ᎭᏫᎾᏗᏢ ᎦᏬᎯᎵᏴᏓ ᎤᎾᏤᎵ ᏄᏍᏗᏓᏅ ᎠᎴ ᎭᏫᎾᏗᏢ itsuwakodi ᏗᎳᏏᏙᏗ.  ᎯᎠ ᎤᎪᏗᏗ ᎠᏓᏙᎳᎩ ᏱᏓᏟᎶᏍᏔᏅ ᎨᏒᎢ ᎯᎠ [[chameleon|ᏒᏃᏱ ᎡᎯ ᏅᏙ]], ᎠᎴ ᎤᏟ ᎢᎦᎢ ᎠᏍᏓᏩᏛᏍᏗ ᏗᎧᏃᏗ ᏗᎦᏁᏟᏴᏍᏗ ᏄᎵᏍᏔᏅ ᎭᏫᎾᏗᏢ ᏐᎢ ᏗᎦᎭᎵ ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ ᏥᏄᏍᏗ ᎠᏔᎴᏒ ᎠᎹᏱ (ᎤᎪᏗᏗ ᏂᎬᎢ ᎯᎠ [[anole]], ᎾᏍᎩ ᎾᏍᏇ ᎤᎾᏅᏛ ᏥᏄᏍᏗ ᎯᎠ "ᎦᎵᏦᏕ ᏒᏃᏱ ᎡᎯ ᏅᏙ" ᎠᎴ "chamele").
 
-ᏗᎦᎭᎵ ᎢᏯᏛᏁᎵᏓᏍᏗ ᎨᎳᏍᏙᏗ ᎾᎿ ᎠᏂᏍᎧᏱ ᎠᎴ rodents.  ᎦᏲᎵ ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ ᎠᎴ ᎠᎵᏍᏓᏴᏗ ᎠᎴ ᎠᎵᏍᏓᏴᏗ; ᎠᏓᏙᎳᎩ ᏱᏓᏟᎶᏍᏔᏅ ᎯᎠ ᎣᏂᏯᎨ ᎨᏒᎢ ᎯᎠ [[iguana]], ᎦᏙ ᎤᏍᏗ ᎨᏒᎢ ᏰᎵ ᏄᎵᏂᎬᎬᎾ ᏗᏙᎳᏤᎩ ᎠᏓᏁᎳᏅᎯ gantlai ᏤᎵ.  iyuwakodi ᎤᏙᎯᏳ ᏝᏱᎪᎯᎩ, ᎾᏍᎩ ᏥᏄᏍᏛᎩ ᏁᎵᏒ Ꮎ ᎾᏍᎩ ᎤᏩᏒ ᏔᎵ ᏗᎦᎭᎵ ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ ᎨᏒᎩ [[venom (poison)|ᏗᏄᏬ ᏗᎦᏛᏗ]]: ᎯᎠ [[Mexican beaded lizard|Mexican beaded ᏗᎦᎭᎵ]] ᎠᎴ ᎯᎠ ᎾᎥᏂᎨᎢ-ᎪᎱᏍᏗ ᎠᎾᏓᏛᏂ [[Gila monster|ᎩᎳ ᏓᎦᏘᎴᎬ]], ᎢᏧᎳ ᎦᏙ ᎤᏍᏗ ᎠᎴᏂᏓᏍᏗ ᎭᏫᎾᏗᏢ ᎤᏴᏢ ᎢᏗᏢ [[Mexico]] ᎠᎴ ᎯᎠ [[southwest United States|southwest ᎠᏫᏒᏗ ᎧᏃᎮᎭ]].  ᏱᏂᎬᏛᎾ ᎾᏞᎬ ᏅᎠᏯᏍᏗ ᎾᎾᎢ ᎯᎠ ᏗᏕᎶᏆᏍᏗ Melbourne, Australia ᎠᎴ Pennsylvania ᎤᏔᏂᏗ ᎦᏙᎯ ᏗᏕᎶᏆᏍᏗ ᎤᎭ ᎤᏍᏆᏂᎪᏗ Ꮎ ᎭᏫᎾᏗᏢ ᏯᏛᎾ ᎤᏙᎯᏳ ᎤᎪᏗᏗ ᏗᎦᎭᎵ ᎭᏫᎾᏗᏢ ᎯᎠ [[iguania]]ns ᎠᎴ [[monitor (lizard)|ᎠᏕᎶᎰᏍᎩ (ᏗᎦᎭᎵ)]] ᎯᎸᏍᎩ ᎢᏯᏓᏁᎸ ᎤᎭ [[Venom (poison)|ᎦᎾᏆᏘᏍᏗ]]-ᎠᏛᎯᏍᏗᏍᎬ glands. ᎧᏂᎩᏛ ᎾᏍᎩ ᎯᎠ ᎠᏓᎳᏍᏛᏁᏗ ᎤᏣᏘ ᎦᏂᏰᎩ ᎠᏂᏴᏫ, ᏥᏄᏍᏗ ᎤᎾᏤᎵ ᎠᏓᎯᎯ ᎨᏒᎢ ᎬᏂᎨᏒ ᏄᏩᏁᎸ ᎷᏍᎦᏃᎵ ᎾᎥᎢ ᎠᎵᏍᏓᏴᏗ, ᎤᏟ ᎬᏰᎸᏗ ᎬᎾᏬᏍᎬ injected ᏥᏄᏍᏗ ᎬᏙᏗ ᏗᏄᏬ ᏗᎦᏛᏗ ᎢᎾᏛ. ᏐᏁᎳ [[toxins]] ᏧᏩᎫᏔᏅᏒ ᏁᎵᏒ ᎾᏍᎩ ᎤᏩᏒ ᏄᎵᏍᏔᏅ ᎭᏫᎾᏗᏢ [[snakes|ᎢᎾᏛ]] ᎤᎭ ᏭᏪᏙᎢ ᎪᎷᏩᏛᏓ, ᎠᎴ ᏎᏍᏗ ᏧᏩᎫᏔᏅᏒ ᎤᏍᏆᏂᎪᏗ chemicals ᏥᏄᏍᏗ ᎠᏔᎴᏒ ᎠᎹᏱ.
+ᏗᎦᎭᎵ ᎢᏯᏛᏁᎵᏓᏍᏗ ᎨᎳᏍᏙᏗ ᎾᎿ ᎠᏂᏍᎧᏱ ᎠᎴ rodents.  ᎦᏲᎵ ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ ᎠᎴ ᎠᎵᏍᏓᏴᏗ ᎠᎴ ᎠᎵᏍᏓᏴᏗ; ᎠᏓᏙᎳᎩ ᏱᏓᏟᎶᏍᏔᏅ ᎯᎠ ᎣᏂᏯᎨ ᎨᏒᎢ ᎯᎠ [[iguana]], ᎦᏙ ᎤᏍᏗ ᎨᏒᎢ ᏰᎵ ᏄᎵᏂᎬᎬᎾ ᏗᏙᎳᏤᎩ ᎠᏓᏁᎳᏅᎯ gantlai ᏤᎵ.  iyuwakodi ᎤᏙᎯᏳ ᏝᏱᎪᎯᎩ, ᎾᏍᎩ ᏥᏄᏍᏛᎩ ᏁᎵᏒ Ꮎ ᎾᏍᎩ ᎤᏩᏒ ᏔᎵ ᏗᎦᎭᎵ ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ ᎨᏒᎩ [[venom (poison)|ᏗᏄᏬ ᏗᎦᏛᏗ]]: ᎯᎠ [[Mexican beaded lizard|Mexican beaded ᏗᎦᎭᎵ]] ᎠᎴ ᎯᎠ ᎾᎥᏂᎨᎢ-ᎪᎱᏍᏗ ᎠᎾᏓᏛᏂ [[Gila monster|ᎩᎳ ᏓᎦᏘᎴᎬ]], ᎢᏧᎳ ᎦᏙ ᎤᏍᏗ ᎠᎴᏂᏓᏍᏗ ᎭᏫᎾᏗᏢ ᎤᏴᏢ ᎢᏗᏢ [[ᎠᏂᏍᏆᏂᎢ]] ᎠᎴ ᎯᎠ [[southwest United States|southwest ᎠᎹᏰᎵ]].  ᏱᏂᎬᏛᎾ ᎾᏞᎬ ᏅᎠᏯᏍᏗ ᎾᎾᎢ ᎯᎠ ᏗᏕᎶᏆᏍᏗ Melbourne, [[ᏒᎳᏗᏝ]] ᎠᎴ [[ᎤᎩᏓᎵᏱ]] ᎤᏔᏂᏗ ᎦᏙᎯ ᏗᏕᎶᏆᏍᏗ ᎤᎭ ᎤᏍᏆᏂᎪᏗ Ꮎ ᎭᏫᎾᏗᏢ ᏯᏛᎾ ᎤᏙᎯᏳ ᎤᎪᏗᏗ ᏗᎦᎭᎵ ᎭᏫᎾᏗᏢ ᎯᎠ [[iguania]]ns ᎠᎴ [[monitor (lizard)|ᎠᏕᎶᎰᏍᎩ (ᏗᎦᎭᎵ)]] ᎯᎸᏍᎩ ᎢᏯᏓᏁᎸ ᎤᎭ [[Venom (poison)|ᎦᎾᏆᏘᏍᏗ]]-ᎠᏛᎯᏍᏗᏍᎬ glands. ᎧᏂᎩᏛ ᎾᏍᎩ ᎯᎠ ᎠᏓᎳᏍᏛᏁᏗ ᎤᏣᏘ ᎦᏂᏰᎩ ᎠᏂᏴᏫ, ᏥᏄᏍᏗ ᎤᎾᏤᎵ ᎠᏓᎯᎯ ᎨᏒᎢ ᎬᏂᎨᏒ ᏄᏩᏁᎸ ᎷᏍᎦᏃᎵ ᎾᎥᎢ ᎠᎵᏍᏓᏴᏗ, ᎤᏟ ᎬᏰᎸᏗ ᎬᎾᏬᏍᎬ injected ᏥᏄᏍᏗ ᎬᏙᏗ ᏗᏄᏬ ᏗᎦᏛᏗ ᎢᎾᏛ. ᏐᏁᎳ [[toxins]] ᏧᏩᎫᏔᏅᏒ ᏁᎵᏒ ᎾᏍᎩ ᎤᏩᏒ ᏄᎵᏍᏔᏅ ᎭᏫᎾᏗᏢ [[snakes|ᎢᎾᏛ]] ᎤᎭ ᏭᏪᏙᎢ ᎪᎷᏩᏛᏓ, ᎠᎴ ᏎᏍᏗ ᏧᏩᎫᏔᏅᏒ ᎤᏍᏆᏂᎪᏗ chemicals ᏥᏄᏍᏗ ᎠᏔᎴᏒ ᎠᎹᏱ.
 
-ᎾᏍᎩ ᎯᎠ ᎦᎾᏄᎪᏫᏒ ᎠᎴ ᎠᏅᏓᏗᏍᏗ ᏓᏯᏂ ᎾᏍᎩᎾᎢ ᎧᎵᏬᎯ ᎠᏓᏃᎮᏗ ᎯᎠ ᏗᏓᎴᎾᏔᏅ ᏗᎦᏘᏌᏅᎩ iyahdvnelidasdi ᎾᏍᎩᎾᎢ ᏗᎦᎭᎵ [[species|ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ]] ᎤᏙᏢᏒ [[venom clade|ᎦᎾᏆᏘᏍᏗ clade]]. "ᎾᏍᎩ ᎯᎠ Ꭺ ᎤᏩᎫᏗᏗᏒ ᏂᎬᎢ ᏧᎾᏍᏗ ᎠᏆᏤᎵ ᎠᏓᏅᏖᏗ ᏗᎦᎭᎵ ᎠᎴ ᎢᎾᏛ ᎠᏓᎴᏂᏍᎬ, ᎠᎴ ᎾᏍᎩᎾ ᎨᏒ ᎦᎾᏆᏘᏍᏗ ᎠᏓᎴᏂᏍᎬ," ᎠᏗᎭ ᏗᎦᏘᎸᏍᏗ Greene, herpetologist ᎾᎾᎢ Cornell ᏗᏕᎶᏆᏍᏗ ᎭᏫᎾᏗᏢ ᎢᏤ York.
+ᎾᏍᎩ ᎯᎠ ᎦᎾᏄᎪᏫᏒ ᎠᎴ ᎠᏅᏓᏗᏍᏗ ᏓᏯᏂ ᎾᏍᎩᎾᎢ ᎧᎵᏬᎯ ᎠᏓᏃᎮᏗ ᎯᎠ ᏗᏓᎴᎾᏔᏅ ᏗᎦᏘᏌᏅᎩ iyahdvnelidasdi ᎾᏍᎩᎾᎢ ᏗᎦᎭᎵ [[species|ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ]] ᎤᏙᏢᏒ [[venom clade|ᎦᎾᏆᏘᏍᏗ clade]]. "ᎾᏍᎩ ᎯᎠ Ꭺ ᎤᏩᎫᏗᏗᏒ ᏂᎬᎢ ᏧᎾᏍᏗ ᎠᏆᏤᎵ ᎠᏓᏅᏖᏗ ᏗᎦᎭᎵ ᎠᎴ ᎢᎾᏛ ᎠᏓᎴᏂᏍᎬ, ᎠᎴ ᎾᏍᎩᎾ ᎨᏒ ᎦᎾᏆᏘᏍᏗ ᎠᏓᎴᏂᏍᎬ," ᎠᏗᎭ ᏗᎦᏘᎸᏍᏗ Greene, herpetologist ᎾᎾᎢ Cornell ᏗᏕᎶᏆᏍᏗ ᎭᏫᎾᏗᏢ [[ᏄᏍᎩ]].
 
 ᎤᎪᏗᏗ ᏐᎢ ᏗᎦᎭᎵ ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ ᎠᎴ ᏰᎵ ᏄᎵᏂᎬᎬᎾ ᎠᏂᏴᏫ (ᎤᎪᏗᏗ ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ ᎾᏰᎯᏯ [[North America|ᎤᏴᏢ ᎠᎺᎵᎨ]], ᎾᏍᎩᎾᎢ ᏱᏓᏟᎶᏍᏔᏅ, ᎠᎴ ᏰᎵ ᎢᏯᏛᏁᎯ ᏂᎨᏒᎾ ᎢᏧᎳᎭ ᏓᎾᏎᏍᎬ ᎩᎬ ᎬᏙᏗ ᎤᎾᏤᎵ ᎠᏓᏍᎧᎷᏥ).  ᎾᏍᎩ ᎤᏩᏒ ᎯᎠ ᎤᏙᎯᏳ ᎤᏔᏂᎢᏍᏗ ᏗᎦᎭᎵ ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ ᎠᏓᎳᏍᏛᏁᏗ ᎠᏓᎾᏄᎳᏗ ᎠᏲᎱᎯᏍᏗ; ᎯᎠ [[Komodo dragon|Komodo ᏓᎦᏘᎴᎬ]], ᎾᏍᎩᎾᎢ ᏱᏓᏟᎶᏍᏔᏅ, ᎤᎭ ᏭᏪᏙᎢ ᎤᎾᏅᏛ ᏗᎦᏘᎸᏍᏗ ᎠᎴ ᎠᏓᎯᏍᏗ ᎠᏂᏴᏫ ᎠᎴ ᎤᎾᏤᎵ ganahlai.  ᎯᎠ [[Gila Monster|ᎩᎳ ᏓᎦᏘᎴᎬ]] ᎠᎴ [[Beaded Lizard|Beaded ᏗᎦᎭᎵ]] ᎠᎴ ᏗᏄᏬ ᏗᎦᏛᏗ ᏱᏂᎬᏛᎾ, ᎠᎴ ᎤᏁᎳᎩ ᎾᏍᎩ ᎾᏍᏊ ᎾᏍᎩ ᏂᎨᏒᎾ ᎤᏲᏨᎯ, ᏰᎵᏇ ᎠᎵᏖᎸᏗ ᏭᎶᏒᏍᏔᏅ ᎡᎯᏍᏗ ᎠᎴ ᎤᎳᏂᎩᏛ ᎠᏓᏍᎧᎷᏥ.  ᎯᎠ ᎤᎬᏫᏳᎯ ᏓᏓᏛᎾᏍᏗᏍᎬ ᏗᎦᎭᎵ ᎾᎿ ᎠᏂᏴᏫ ᎨᏒᎢ ᎤᏙᎯᏳ; ᎤᏅᏌ ᎠᎴ ᎦᏛᎬᎢ [[predator]][[Pest (animal)|ᎠᏍᎩᎾᏗᏍᏗ]] ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ; ᎤᏂᎪᏗᏗ ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ ᎠᎴ ᏧᏓᏃᏣᎵ ᎭᏫᎾᏗᏢ ᎯᎠ [[pet|ᎤᏓᏅᏗ]] ᏗᏓᏁᏟᏴᎡᏗ; ᎢᎦᏛ ᎠᎴ ᎦᎳᏅᎯ ᏥᏄᏍᏗ [[food|ᎠᎵᏍᏓᏴᏗ]] (ᎾᏍᎩᎾᎢ ᏱᏓᏟᎶᏍᏔᏅ, iguanas ᎭᏫᎾᏗᏢ ᎠᏰᎵ ᎠᎺᎵᎨ); ᎠᎴ ᏗᎦᎭᎵ symbology ᏗᏁᎶᏗ ᎤᎵᏍᎨᏛ, ᎤᏁᎳᎩ ᎾᏍᎩ ᎾᏍᏊ ᎢᏅᎯ ᎢᏳᏓᎵ ᎾᏓᏛᏂᏌᏁᎲ ᎠᏛᏁᎵᏍᎩ ᎤᏍᏆᎸᎡᎲ ᎭᏫᎾᏗᏢ ᎢᎦᏛ [[culture|ᎥᎦᏔᎲᎢ]](e.g. [[Tarrotarro]] ᎭᏫᎾᏗᏢ Australian ᎤᏁᎳᏅᎯ).
 
