translating some place names, transliteration

--- a/ᎠᏬᎭᎵ.mw
+++ b/ᎠᏬᎭᎵ.mw
@@ -137,8 +137,8 @@ Several, see below.<br />
 * '''ᎢᎬᏱ ᎠᎦᎸᏥ ᏓᎳᏏᏛ'''. [[Napoleon Bonaparte|ᎠᏍᏆᏂᎪᏒᏗ Bonaparte]] ᎠᏢᏔᎲᎢ ᎯᎠ ᎶᎻ ᏓᎶᏂᎨᏍᏙᏗ ᏬᎭᎵ ᏥᏄᏍᏗ ᎯᎠ ᏗᎬᏟᎶᏍᏙᏗ ᎤᏤᎵ ᎢᏤ ᎠᎦᎸᏥ ᏓᎳᏏᏛ.
 * '''Seljuk ᏨᏓᏓᏨᏍᏙᏗ''' ᎠᎴ [[Ottoman Turks|ᎠᎵᏍᏕᎸᏗ ᏨᏓᏓᏨᏍᏙᏗ]] ᎬᏔᏅᎯ ᎾᏍᎩ.
 <!-- [[Image:Divrigi02.jpg]][[Image:Selçuklu kartalı.jpg]] -->
-* '''ᎪᎯᏊ ᎢᏴ ᏥᎩ Europe'''. ᎯᎠ ᏬᎭᎵ ᎨᏒᎢ ᎾᏍᎩ ᎾᏍᏇ ᎢᎦᏛ ᎯᎠ [[Coat of Arms of Romania|ᎦᏌᎴᎾ ᏗᏂᏃᎨᏂ Romania]] ᎠᎴ ᎯᎠ ᎦᏌᎴᎾ ᏗᏂᏃᎨᏂ ᎠᎴ [[flag of Moldova|ᎦᏓᏘ Moldova]]. ᎾᏍᎩ ᎨᏒᎢ ᎯᎠ ᎤᏂᎧᏁᏍᏙᏗ "Shqipëria" ᎠᎴ ''ᎦᏙᎯ ᎯᎠ ᏬᎭᎵ'', ᎦᏙ ᎤᏍᏗ ᎨᏒᎢ ᎤᎾᏅᏛ ᎭᏫᎾᏗᏢ ᎩᎵᏏ ᏥᏄᏍᏗ [[Albania]] (ᎠᎪᏩᏛᏗ [[The Tale of the Eagle|ᎯᎠ ᎠᏓᏃᎮᏗ ᎯᎠ ᏬᎭᎵ]] ᎾᏍᎩᎾᎢ ᎯᎠ ᎢᏰᎵᏍᏗᎢ ᎠᏓᎴᏂᏍᎬ ᎯᎠ ᏚᏙᎥ). [[Two-headed eagle|ᏔᎵ-ᎠᎴᏅᏗᏍᎬ ᏬᎭᎵ]] ᎨᏒᎢ ᎤᏂᎧᏁᏍᏙᏗ [[Coat of Arms of Serbia|Serbia]], [[Coat of Arms of Montenegro|Montenegro]], ᎠᎴ [[Coat of Arms of Serbia and Montenegro|Serbia ᎠᎴ Montenegro]]
-* '''Mexico'''. ᎯᎠ ᏥᏍᏆ ᎾᎿ ᎯᎠ [[Mexican coat of arms|Mexican ᎦᏌᎴᎾ ᏗᏂᏃᎨᏂ]] ᎠᎴ ᎦᏓᏘ ᎨᏒᎢ ᏓᎶᏂᎨᏍᏙᏗ ᏬᎭᎵ.
+* '''ᎪᎯᏊ ᎢᏴ ᏥᎩ ᏳᎳᏛ'''. ᎯᎠ ᏬᎭᎵ ᎨᏒᎢ ᎾᏍᎩ ᎾᏍᏇ ᎢᎦᏛ ᎯᎠ [[Coat of Arms of Romania|ᎦᏌᎴᎾ ᏗᏂᏃᎨᏂ Romania]] ᎠᎴ ᎯᎠ ᎦᏌᎴᎾ ᏗᏂᏃᎨᏂ ᎠᎴ [[flag of Moldova|ᎦᏓᏘ Moldova]]. ᎾᏍᎩ ᎨᏒᎢ ᎯᎠ ᎤᏂᎧᏁᏍᏙᏗ "Shqipëria" ᎠᎴ ''ᎦᏙᎯ ᎯᎠ ᏬᎭᎵ'', ᎦᏙ ᎤᏍᏗ ᎨᏒᎢ ᎤᎾᏅᏛ ᎭᏫᎾᏗᏢ ᎩᎵᏏ ᏥᏄᏍᏗ [[Albania]] (ᎠᎪᏩᏛᏗ [[The Tale of the Eagle|ᎯᎠ ᎠᏓᏃᎮᏗ ᎯᎠ ᏬᎭᎵ]] ᎾᏍᎩᎾᎢ ᎯᎠ ᎢᏰᎵᏍᏗᎢ ᎠᏓᎴᏂᏍᎬ ᎯᎠ ᏚᏙᎥ). [[Two-headed eagle|ᏔᎵ-ᎠᎴᏅᏗᏍᎬ ᏬᎭᎵ]] ᎨᏒᎢ ᎤᏂᎧᏁᏍᏙᏗ [[Coat of Arms of Serbia|Serbia]], [[Coat of Arms of Montenegro|Montenegro]], ᎠᎴ [[Coat of Arms of Serbia and Montenegro|Serbia ᎠᎴ Montenegro]]
+* '''ᎠᏂᏍᏆᏂᎢ'''. ᎯᎠ ᏥᏍᏆ ᎾᎿ ᎯᎠ [[Mexican coat of arms|Mexican ᎦᏌᎴᎾ ᏗᏂᏃᎨᏂ]] ᎠᎴ ᎦᏓᏘ ᎨᏒᎢ ᏓᎶᏂᎨᏍᏙᏗ ᏬᎭᎵ.
 * '''ᎯᎠ Philippines'''. ᎯᎠ ᎦᏂᏰᎩ [[Philippine Eagle|Philippine ᏬᎭᎵ]] ᎨᏒᎢ ᎯᎠ ᎬᎾᏕᎾ ᏥᏍᏆ ᎯᎠ [[Philippines]].
 * '''USA'''. ᎯᎠ [[United States|ᎠᏫᏒᏗ ᎧᏃᎮᎭ]] ᎤᎭ ᎠᏠᏯᏍᏔᏅᎯ ᎯᎠ ᎤᏴᏢ ᏴᏩᏁᎬ [[Bald Eagle|ᎤᏍᏗᏰᎸᎭ ᏬᎭᎵ]] ᏥᏄᏍᏗ Ꮝ ᎬᎾᏕᎾ ᎤᏂᎧᏁᏍᏙᏗ. ᎾᏍᎩ ᎤᏁᎳᎩ ᎯᎠ [[Golden Eagle|ᏓᎶᏂᎨᏍᏙᏗ ᏬᎭᎵ]] ᎨᏒᎢ ᎠᏩᏛᏗ ᎭᏫᎾᏗᏢ ᎤᏴᏢ ᎠᎺᎵᎨ, Ꭴ.. ᏫᏓᏎᎸᎢ ᏗᏍᏆᎸᏙᏗ "ᏬᎭᎵ" ᎠᎴ ᎢᏳᏓᎵᎭ ᎯᎠ ᎤᏍᏗᏰᎸᎭ ᏬᎭᎵ; ᎪᎯ ᎪᏍᏓᏱ ᏥᏄᏍᏛᎩ ᎾᏍᎩ ᏂᎨᏒᎾ ᎠᏕᎳᎰᏒᎯ ᎾᎥᎢ [[Eagle (U.S. coin)|ᏴᏩᏁᎬ ᎠᏛᎯᏍᏙᏗ]] ᎠᏲᎱᎯᏍᏗ ᏗᏟᎶᏍᏔᏅᏍᎩ, ᎦᎪ, ᎤᏃᎮᎴᎢ ᎢᏯᏓᏛᏁᎸ "ᏬᎭᎵ", ᏓᎶᏂᎨᏍᏙᏗ ᏬᎭᎵ; ᎪᎯ ᎦᎵᏓᏍᏛ ᎨᏒᎢ ᎯᎠ ᏂᎬᏂᏏᏍᎬ ᎯᎠ ᎢᎦᏪᏛ "ᏚᏳᎪᏛ ᎢᏯᏛᏁᎸ ᏂᎨᏒᎾ ᏬᎭᎵ". ᎯᎠ ᏚᏙᎥ ᎠᎴ ᏗᎬᏟᎶᏍᏙᏗ ᎯᎠ ᏩᎦᎸᎳᏗᏴ ᎢᏴ ᎠᏂᏙᎾᎥ ᎭᏫᎾᏗᏢ ᎯᎠ [[Boy Scouts of America|ᎠᏧᏣ ᎠᏂᎦᏖᏃ ᎠᎺᎵᎨ]] ᎨᏒᎢ ᎯᎠ [[Eagle Scout (Boy Scouts of America)|ᎤᏍᏗᏰᎸᎭ ᏬᎭᎵ]].
 
@@ -146,7 +146,7 @@ Several, see below.<br />
 
 ᎭᏫᎾᏗᏢ Jewish ᎧᏃᎮᎸᎯ ᎯᎠ ᏬᎭᎵ ᎨᏒᎢ ᏗᎬᏟᎶᏍᏙᏗ ᎤᏙᎯᏳ ᎢᎦᎢ ᎢᎦᏘ, ᎠᎴ ᎯᎠ ᎠᏰᎵ ᎤᏙᏢᏒ ᎤᏤᎵ ᏭᏔᏅ ᏗᏓᏘᏁᎯ ᏯᏛᎿ ᏥᏄᏍᏗ ᎯᎠ ᎡᏆ ᏗᏕᎶᏆᏍᎩ ᎯᎠ ᎠᏰᎵ ᎤᎧᏁᎳ Maimonides ᎠᎴ ᎯᎠ Lubavitcher Rebbe, ᏧᏏ ᎠᎵᏣᏙᎲᏍᎩ Menachem M. Schneerson, ᎯᎠ ᎪᎯᏊ ᎢᏴ ᏥᎩ ᎢᎦ ᏗᏓᏘᏁᎯ ᎡᎶᎯ Jewry ᎤᎭ ᏭᏪᏙᎢ ᏩᏎᎸᎯ ᎾᎥᎢ ᎤᎾᏤᎵ ᏧᏂᏠᏱ ᎠᎴ ᏙᎾᏕ ᎶᏆᏍᎩ ᏥᏄᏍᏗ "ᎯᎠ ᎡᏆ ᏬᎭᎵ". ᎯᎠ Torah ᎤᏠᏱ ᎢᎬᏁᏗ G-d ᎤᏩᏒᎠᏍᎦᏯ ᏬᎭᎵ ᎭᏫᎾᏗᏢ Deuteronomy, 32.11-12. "ᏥᏄᏍᏗ ᏬᎭᎵ ᎠᏓᏃᎯᏎᏗ Ꮝ ᎤᏁᏍᎩᎸᏒ, ᏂᎦᏛᎢ ᎦᏬᎯᎸᏙᏗ Ꮝ fledglings, ᎾᏍᎩ ᎠᏰᏍᏛᏗ Ꮝ ᎪᏯᏛ, ᎠᎩᏍᎬᎢ ᎠᏂ ᎠᎴ ᎠᏫᏗᏍᎬ ᎠᏂ ᎾᎿ Ꮝ ᏧᏠᎯᏍᏗ. [So] ᎯᎠ ᎤᏁᎳᏅᎯ ᎠᏂ [the Israelites] ᎤᏩᏒ, ᎠᎴ ᎾᎿᎢ ᏥᏄᏍᏛᎩ Ꮭ ᎬᏙᏗ ᎤᏁᎳᏅᎯ ᎠᎦᏘᏯ ᎬᏙᏗ ᎾᏍᎩ ᎠᏍᎦᏯ."
 
-ᎯᎠ ᏬᎭᎵ ᎨᏒᎢ ᎦᎸᏉᏗ ᏥᏍᏆ ᎭᏫᎾᏗᏢ ᎢᎦᏛ ᎥᎦᏔᎲᎢ ᎠᎴ ᎯᎠ ᏧᎷᏄᎯ ᎯᎠ ᏬᎭᎵ ᎠᎴ ᎠᏰᎵ ᎤᎪᏗᏗ [[religious|ᏧᏁᎸᏗᏯ]] ᎠᎴ [[spiritual|ᎠᏂᏏᏴᏫ ᏄᎾᏍᏛ]] ᏄᏍᏛ ᎢᏳᎾᏛᏁᏗ, ᎾᏍᎩ ᎨᏒᎢ ᏧᏠᎯᏍᏗ [[Native Americans|ᎾᏰᎯᏯ ᏴᏩᏁᎬ]]. ᎾᏰᎯᏯ ᏴᏩᏁᎬ ᎬᎨᏳᎢ ᏬᎭᎵ ᏥᏄᏍᏗ ᎦᎸᏉᏗ ᏧᏁᎸᏗᏯ ᏓᎦᏘᎴᎦ ᎠᎴ ᎯᎠ ᏧᎷᏄᎯ ᎠᎴ ᎢᎦᏛᎭ [[Bald Eagle|ᎤᏍᏗᏰᎸᎭ]] ᎠᎴ [[Golden Eagles|ᏓᎶᏂᎨᏍᏙᏗ ᏬᎭᎵ]] ᎠᎴ ᎢᏳᏓᎵᎭ ᎤᏠᏱᎭᎢ ᎯᎠ [[Bible|ᏧᎭᎨᏓ ᎪᏪᎵ]] ᎠᎴ [[crucifix|ᎤᏯᎾᏛᏁᏗ]]. ᏬᎭᎵ ᏧᎷᏄᎯ ᎠᎴ ᎢᏳᏓᎵᎭ ᎬᏔᏅᎯ ᎭᏫᎾᏗᏢ ᏧᏓᎴᏅᏓ ᎠᎴ ᎠᎴ ᎬᏔᏅᎯ ᎠᏥᎸᏉᏗ ᏂᎬᎢ ᎠᏛᎯᏍᏙᏗ ᎠᎴ ᎢᎦ ᏦᏍᏓ ᏯᏛᎿ ᏥᏄᏍᏗ ᎾᏍᎩᏍᎩᏂ ᎤᏩᏒ ᎠᎴ ᎠᎵᎦᎵᏴᎯ.
+ᎯᎠ ᏬᎭᎵ ᎨᏒᎢ ᎦᎸᏉᏗ ᏥᏍᏆ ᎭᏫᎾᏗᏢ ᎢᎦᏛ ᎥᎦᏔᎲᎢ ᎠᎴ ᎯᎠ ᏧᎷᏄᎯ ᎯᎠ ᏬᎭᎵ ᎠᎴ ᎠᏰᎵ ᎤᎪᏗᏗ [[religious|ᏧᏁᎸᏗᏯ]] ᎠᎴ [[spiritual|ᎠᏂᏏᏴᏫ ᏄᎾᏍᏛ]] ᏄᏍᏛ ᎢᏳᎾᏛᏁᏗ, ᎾᏍᎩ ᎨᏒᎢ ᏧᏠᎯᏍᏗ [[Native Americans|ᎾᏰᎯᏯ ᏴᏩᏁᎬ]]. ᎾᏰᎯᏯ ᏴᏩᏁᎬ ᎬᎨᏳᎢ ᏬᎭᎵ ᏥᏄᏍᏗ ᎦᎸᏉᏗ ᏧᏁᎸᏗᏯ ᏓᎦᏘᎴᎦ ᎠᎴ ᎯᎠ ᏧᎷᏄᎯ ᎠᎴ ᎢᎦᏛᎭ [[Bald Eagle|ᎤᏍᏗᏰᎸᎭ]] ᎠᎴ [[ᏬᎭᎵ]] ᎠᎴ ᎢᏳᏓᎵᎭ ᎤᏠᏱᎭᎢ ᎯᎠ [[ᏧᎭᎨᏓ ᎪᏪᎵ]] ᎠᎴ [[ᎤᏯᎾᏛᏁᏗ]]. ᏬᎭᎵ ᏧᎷᏄᎯ ᎠᎴ ᎢᏳᏓᎵᎭ ᎬᏔᏅᎯ ᎭᏫᎾᏗᏢ ᏧᏓᎴᏅᏓ ᎠᎴ ᎠᎴ ᎬᏔᏅᎯ ᎠᏥᎸᏉᏗ ᏂᎬᎢ ᎠᏛᎯᏍᏙᏗ ᎠᎴ ᎢᎦ ᏦᏍᏓ ᏯᏛᎿ ᏥᏄᏍᏗ ᎾᏍᎩᏍᎩᏂ ᎤᏩᏒ ᎠᎴ ᎠᎵᎦᎵᏴᎯ.
 
 ᎦᎾᏆᏘᏍᏗ ᎪᎯᏊ ᎢᏴ ᏥᎩ ᎠᎴ ᏄᏍᏛ ᏗᎧᏃᏗ ᎾᏰᎯᏯ ᏴᏩᏁᎬ ᎠᎵᏏᎾᎯᏍᏙᏗ ᎠᎾᏓᏁᎲ ᏬᎭᎵ ᏧᎷᏄᎯ ᎬᏙᏗ-ᎾᏰᎯᏯ ᏴᏩᏁᎬ ᎠᎴ [[Native American|ᎾᏰᎯᏯ ᏴᏩᏁᎬ]] ᎠᏁᎳ ᏐᎢ ᎠᏂᎳᏍᏓᎸ ᎦᎪ ᎤᎭ ᏭᏪᏙᎢ ᏧᎬᏩᎶᏗᏯ, ᎠᎵᏱᎵᏒ ᎧᏃᎮᏗ [[eagle feather law|ᏬᎭᎵ ᎤᎩᏓᎵ ᏗᎧᎿᏩᏛᏍᏗ]] ᏓᏓᏁᏤᎸ Ꮎ ᎾᏍᎩ ᎤᏩᏒ ᏗᏂᏏᏴᏫᎭ [[Native American|ᎾᏰᎯᏯ ᏴᏩᏁᎬ]] ᎦᏌᏆᎸ ᎭᏫᎾᏗᏢ ᏂᎬᎾᏛ ᎠᏰᎵ-ᎤᏬᎳᏨ ᎠᏂᎳᏍᏓᎸ ᎠᎴ ᏗᏂᎳᏫᎩ ᎠᏥᏁᏤᎸ ᎣᏤᎵ ᎢᎬᏁᎯ ᏬᎭᎵ ᏧᎷᏄᎯ ᎾᏍᎩᎾᎢ [[religious|ᏧᏁᎸᏗᏯ]] ᎠᎴ [[spiritual|ᎠᏂᏏᏴᏫ ᏄᎾᏍᏛ]] ᎬᏙᏗ.
 
