translating New Mexico -> ᏍᏆᏂᏤᏍᏛᎢ

--- a/ᎤᏍᏓᎦᎸ.mw
+++ b/ᎤᏍᏓᎦᎸ.mw
@@ -30,7 +30,7 @@
 Limestone ᎪᎷᏩᏛᏓ ᎨᏒᎢ ᎤᎵᏍᎨᏛ ᏧᎵᎬᏩᎳᏅᎯ ᎭᏫᎾᏗᏢ ᎤᏍᏔᎦᎳᏱ ᎪᏪᎳᏅ ᎠᎪᎵᏰᏗ ᎠᎴ ᎯᎠ ᎠᏓᎴᏂᏍᎬ ᎯᎠ ᎡᏆ ᎤᏂᎪᏗᏗ ᏂᎦᏛ ᎤᏍᏔᎦᎳᏱ ᎾᎿ ᎡᎶᎯ. ᎯᎠ ᎠᎾᏓᏅᏖᏍᎬ ᎾᏍᎩᎾᎢ ᎪᎯ ᎬᏩᎶᏒᏍᏗ ᎠᎴ ᎯᎠ ᏱᏓᏛᎾ ᎤᏙᎯᏳ Ꮎ limestone ᎨᏒᎢ ᎾᏍᎩ ᎢᎬᏂᏏᏍᎩ ᏧᏣᏔᏊ ᎠᎴ ᎯᎠ ᎠᏂᏙᎾᎥ ᎯᎠ ᎪᎷᏩᏛᏓ ᏧᎵᎬᏩᎳᏅᎯ. ᎢᏳᏃ ᎾᏍᎩ ᎨᏒᎩ ᎦᏣᏄᎳᎯᎨ, ᎯᎠ lifespan limestone ᎤᏍᏔᎦᎳᏱ ᏯᏓᎢᏗᏏ ᎾᏍᏋ ᎤᏣᏘ ᏍᏆᎵᎯᎨᏍᏗ ᎠᎴ ᎤᎾᏤᎵ ᏎᏍᏗ ᎤᏣᏘ ᎡᎳᏗᎨ.
 
 [[File:HallOfTheMountainKings.jpg|thumb|300px|right|[[Speleothem]] ᎭᏫᎾᏗᏢ ᎦᎳᏅᏛ ᎯᎠ ᎣᏓᎸ ᎤᎬᏫᏳᎯ, [[Ogof Craig a Ffynnon|Ogof ᏂᎦᏛᎢ Ffynnon]], [[South Wales|ᎤᎦᎾᏭ Wales]].]]
-Limestone ᎤᏍᏔᎦᎳᏱ ᎠᎴ ᎢᏳᏓᎵᎭ adorned ᎬᏙᏗ calcium carbonate ᎪᏪᎳᏅ ᎠᎪᎵᏰᏗ ᎠᏛᎯᏍᏔᏅ ᏗᎬᏩᎶᏒ ᎤᏍᎦᏃᎳ ᏑᎾᎴᎢ, ᎠᏠᏯᏍᏗᏍᎩ ᎯᎠ ᎤᎪᏗᏗ ᏧᏣᏔᏊ ᎠᎴ ᎠᏔᎴᏒ ᎠᎹᏱ-ᎤᎾᏅᏛ [[stalactite|ᏛᏍᏓᏅᏅᏍᎬ]]ᎠᎴ [[stalagmite]]. ᎾᏍᎩ ᎯᎠ ᎠᏂᎦᏲᎵ ᎪᎢ ᏚᏂᏍᏆᏂᎪᏛ ᎭᏫᎾᏗᏢ ᎤᏍᏔᎦᎳᏱ ᎠᎴ ᎤᏯᏅᎲ [[speleothem]]. ᎯᎠ ᎡᎶᎯ ᎤᏤᎵ ᎤᎪᏗᏗ ᎬᏂᎨᏒ ᎢᎬᏁᏗ decorated ᎤᏍᏔᎦᎳᏱ ᎨᏒᎢ ᏂᎦᎥᏊ ᎾᏍᎩ ᎠᏰᎸᏅ ᎾᏍᏋ [[Lechuguilla Cave|Lechuguilla ᎤᏍᏔᎦᎳᏱ]] ([[New Mexico|ᎢᏤ Mexico]], [[United States|USA]]).
+Limestone ᎤᏍᏔᎦᎳᏱ ᎠᎴ ᎢᏳᏓᎵᎭ adorned ᎬᏙᏗ calcium carbonate ᎪᏪᎳᏅ ᎠᎪᎵᏰᏗ ᎠᏛᎯᏍᏔᏅ ᏗᎬᏩᎶᏒ ᎤᏍᎦᏃᎳ ᏑᎾᎴᎢ, ᎠᏠᏯᏍᏗᏍᎩ ᎯᎠ ᎤᎪᏗᏗ ᏧᏣᏔᏊ ᎠᎴ ᎠᏔᎴᏒ ᎠᎹᏱ-ᎤᎾᏅᏛ [[stalactite|ᏛᏍᏓᏅᏅᏍᎬ]]ᎠᎴ [[stalagmite]]. ᎾᏍᎩ ᎯᎠ ᎠᏂᎦᏲᎵ ᎪᎢ ᏚᏂᏍᏆᏂᎪᏛ ᎭᏫᎾᏗᏢ ᎤᏍᏔᎦᎳᏱ ᎠᎴ ᎤᏯᏅᎲ [[speleothem]]. ᎯᎠ ᎡᎶᎯ ᎤᏤᎵ ᎤᎪᏗᏗ ᎬᏂᎨᏒ ᎢᎬᏁᏗ decorated ᎤᏍᏔᎦᎳᏱ ᎨᏒᎢ ᏂᎦᎥᏊ ᎾᏍᎩ ᎠᏰᎸᏅ ᎾᏍᏋ [[Lechuguilla Cave|Lechuguilla ᎤᏍᏔᎦᎳᏱ]] ([[New Mexico|ᏍᏆᏂᏤᏍᏛᎢ]], [[United States|USA]]).
 
 Lechuguilla ᎠᎴ nearby [[Carlsbad Caverns|Carlsbad ᎤᏍᏓᎦᎸ]] ᎠᎴ ᎾᏊ ᎤᏬᎯᏳᏅ ᎾᏍᏋ ᏱᏓᏟᎶᏍᏔᏅ ᏄᏓᎴ ᏗᎦᎪᏗ solutional ᎤᏍᏔᎦᎳᏱ. ᎤᏅᏌ ᎨᏒᎩ ᎪᏢᎯ Ꭲgotlvhi ignelvhi ᎾᎥᎢ ᏧᏄᏦᏍᏔ ᎠᎵᏌᎳᏗᏍᎬ ᏂᏛᎴᏅᏓ ᎡᎳᏗᏢ, ᎭᏢᏃ ᎥᏓᎵ ᎪᎢ ᎠᏓᏁᏗ ᎤᏣᏘᎾ sulfurous ᏚᎦᏒᏍᏛ, ᎤᏟ ᎬᏰᎸᏗ ᎬᎾᏬᏍᎬ ᎾᎥᎢ acidic ᎠᎹ percolating ᏂᏛᎴᏅᏓ ᎯᎠ ᎦᏚᎢ.
 
